--- a/apk/res/values-in/strings.xml
+++ b/apk/res/values-in/strings.xml
@@ -44,7 +44,7 @@
     <string name="set_units_title" msgid="2657822539603758029">"Tetapkan unit"</string>
     <string name="manage_data_preferences_category_title" msgid="1183110821140344472">"Preferensi"</string>
     <string name="manage_data_category_title" msgid="6328886061582616519">"Kelola data"</string>
-    <string name="backup_and_restore_settings_summary" msgid="4345972157089493077">"Mengekspor dan mengimpor data"</string>
+    <string name="backup_and_restore_settings_summary" msgid="4345972157089493077">"Ekspor dan impor data"</string>
     <string name="recent_access_header" msgid="7623497371790225888">"Akses terbaru"</string>
     <string name="no_recent_access" msgid="4724297929902441784">"Tidak ada aplikasi yang baru-baru ini mengakses Health Connect"</string>
     <string name="show_recent_access_entries_button_title" msgid="3483460066767350419">"Lihat semua akses terbaru"</string>
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Kemarin"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Membaca: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Menulis: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Kelola izin"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Waktu: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Aktivitas"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"suhu kulit"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Membaca suhu kulit"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Menulis suhu kulit"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Semua catatan kesehatan"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"semua catatan kesehatan"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Menulis semua catatan kesehatan"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Kondisi"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"kondisi"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Baca kondisi"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Vaksinasi"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"vaksinasi"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Baca vaksinasi"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Hasil lab"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"hasil lab"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Baca hasil lab"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Jika Anda memberikan akses, aplikasi dapat membaca dan menulis data seperti alergi, hasil lab, vaksin, dan lainnya\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Jika Anda memberikan akses, aplikasi dapat membaca data seperti alergi, hasil lab, vaksin, dan lainnya\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Tentang catatan kesehatan"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Data yang akan dibagikan"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Jika Anda mengizinkan, <xliff:g id="APP_NAME">%1$s</xliff:g> dapat membagikan catatan kesehatan Anda ke Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sinkronkan catatan kesehatan Anda dari berbagai aplikasi dan sumber untuk menyimpannya di satu tempat"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Hapus semua izin?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Aplikasi ini tidak lagi memiliki akses, tetapi masih memiliki data yang tersimpan di Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> dapat membaca data yang ditambahkan setelah <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Untuk mengelola izin Android lainnya yang dapat diakses oleh aplikasi ini, buka Setelan &gt; Aplikasi"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Data yang Anda bagikan ke <xliff:g id="APP_NAME">%1$s</xliff:g> dilindungi oleh kebijakan privasinya"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Anda dapat mempelajari cara <xliff:g id="APP_NAME">%1$s</xliff:g> menangani data Anda di kebijakan privasi developer"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Untuk mengelola izin Android lainnya yang dapat diakses oleh aplikasi ini, buka Setelan, lalu ketuk Aplikasi"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Baca kebijakan privasi"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Diakses dalam 24 jam terakhir"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Lanjutkan integrasi Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Untuk menyimpan data Anda, selesaikan proses ini dalam <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Aplikasi perlu diupdate"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"<xliff:g id="APP_NAME">%1$s</xliff:g> perlu diupdate agar tetap disinkronkan dengan Health Connect"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Beberapa aplikasi perlu diupdate agar tetap disinkronkan dengan Health Connect"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> perlu diupdate agar tetap disinkronkan dengan Health Connect. Update mungkin tidak tersedia untuk semua aplikasi."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Beberapa aplikasi perlu diupdate agar tetap disinkronkan dengan Health Connect. Update mungkin tidak tersedia untuk semua aplikasi."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Periksa update"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Pelajari lebih lanjut"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Integrasi Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Lihat aplikasi yang kompatibel"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Temukan aplikasi lainnya untuk disinkronkan dengan <xliff:g id="APP_NAME">%s</xliff:g> melalui Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Lihat di app store"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Setel kunci layar"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Untuk keamanan tambahan data kesehatan Anda, setel PIN, pola, atau sandi untuk perangkat ini"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Setel kunci layar"</string>
     <string name="select_all" msgid="837499881590001166">"Pilih semua"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Aplikasi yang terhubung tidak dapat lagi membaca data ini dari Health Connect"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Dicentang"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Izinkan <xliff:g id="APP_NAME">%1$s</xliff:g> mengakses data kebugaran dan kesehatan?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> meminta akses ke <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nPilih untuk mengizinkan semua atau mengontrolnya satu per satu."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Izinkan <xliff:g id="APP_NAME">%1$s</xliff:g> mengakses <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Kebugaran dan kesehatan"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"sepanjang waktu"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"saat digunakan"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Sepanjang waktu"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Saat digunakan"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> dapat mengakses semua data kebugaran dan kesehatan Anda <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Diizinkan untuk mengakses"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Diizinkan untuk membaca"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Izin ini memberi <xliff:g id="APP_NAME">%1$s</xliff:g> akses ke data dari sensor perangkat Anda."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="NUMBER_0">%1$d</xliff:g> dari <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> aplikasi diizinkan"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Tidak ada aplikasi yang meminta"</string>
+    <string name="allowed" msgid="4158456017482263737">"Diizinkan"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Tidak diizinkan"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Aplikasi yang memiliki izin ini dapat mengakses data <xliff:g id="DATA_TYPE">%s</xliff:g> dari sensor perangkat Anda."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Hapus akses <xliff:g id="DATA_TYPE">%s</xliff:g> untuk semua aplikasi di smartwatch?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Tanda centang"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Tanda silang"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
