--- a/apk/res/values-kn/strings.xml
+++ b/apk/res/values-kn/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"ನಿನ್ನೆ"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"ಓದಿರಿ: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"ಬರೆಯಿರಿ: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"ಅನುಮತಿಗಳನ್ನು ನಿರ್ವಹಿಸಿ"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"ಸಮಯ: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"ಚಟುವಟಿಕೆ"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"ಚರ್ಮದ ತಾಪಮಾನ"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"ಚರ್ಮದ ತಾಪಮಾನವನ್ನು ಓದಿ"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"ಚರ್ಮದ ತಾಪಮಾನವನ್ನು ಬರೆಯಿರಿ"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"ಎಲ್ಲಾ ಆರೋಗ್ಯಕ್ಕೆ ಸಂಬಂಧಿಸಿದ ರೆಕಾರ್ಡ್‌ಗಳು"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"ಎಲ್ಲಾ ಆರೋಗ್ಯಕ್ಕೆ ಸಂಬಂಧಿಸಿದ ರೆಕಾರ್ಡ್‌ಗಳು"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"ಎಲ್ಲಾ ಆರೋಗ್ಯಕ್ಕೆ ಸಂಬಂಧಿಸಿದ ರೆಕಾರ್ಡ್‌ಗಳನ್ನು ಬರೆಯಿರಿ"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"ವೈದ್ಯಕೀಯ ಸ್ಥಿತಿಗಳು"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"ವೈದ್ಯಕೀಯ ಸ್ಥಿತಿಗಳು"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"ವೈದ್ಯಕೀಯ ಸ್ಥಿತಿಗಳ ಕುರಿತು ಓದಿರಿ"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"ವ್ಯಾಕ್ಸಿನ್‌ಗಳು"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"ವ್ಯಾಕ್ಸಿನ್‌ಗಳು"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"ವ್ಯಾಕ್ಸಿನ್‌ಗಳ ಕುರಿತು ಓದುತ್ತದೆ"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"ಲ್ಯಾಬ್‌ ಫಲಿತಾಂಶಗಳು"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"ಲ್ಯಾಬ್‌ ಫಲಿತಾಂಶಗಳು"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"ಲ್ಯಾಬ್‌ ಫಲಿತಾಂಶಗಳನ್ನು ಓದಿರಿ"</string>
@@ -377,7 +375,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"ನೀವು ಆ್ಯಕ್ಸೆಸ್ ನೀಡಿದರೆ, ಅಲರ್ಜಿಗಳು, ಲ್ಯಾಬ್ ಫಲಿತಾಂಶಗಳು, ವ್ಯಾಕ್ಸಿನ್‌ಗಳು ಮತ್ತು ಹೆಚ್ಚಿನವುಗಳಂತಹ ಡೇಟಾವನ್ನು ಆ್ಯಪ್ ಓದಬಹುದು ಮತ್ತು ಬರೆಯಬಹುದು\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"ನೀವು ಆ್ಯಕ್ಸೆಸ್ ನೀಡಿದರೆ, ಅಲರ್ಜಿಗಳು, ಲ್ಯಾಬ್ ಫಲಿತಾಂಶಗಳು, ವ್ಯಾಕ್ಸಿನ್‌ಗಳು ಮತ್ತು ಹೆಚ್ಚಿನವುಗಳಂತಹ ಡೇಟಾವನ್ನು ಆ್ಯಪ್ ಓದಬಹುದು \n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"ಆರೋಗ್ಯಕ್ಕೆ ಸಂಬಂಧಿಸಿದ ರೆಕಾರ್ಡ್‌ಗಳ ಕುರಿತು"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"ಹಂಚಿಕೊಳ್ಳಲು ಡೇಟಾ"</string>
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"ಹಂಚಿಕೊಳ್ಳಲು ಡೇಟಾ ಒಳಗೊಂಡಿದೆ"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"ನೀವು ಅನುಮತಿಸಿದರೆ, <xliff:g id="APP_NAME">%1$s</xliff:g> ನಿಮ್ಮ ಆರೋಗ್ಯಕ್ಕೆ ಸಂಬಂಧಿಸಿದ ರೆಕಾರ್ಡ್‌ಗಳನ್ನು Health Connect ಜೊತೆಗೆ ಹಂಚಿಕೊಳ್ಳಬಹುದು."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"ನಿಮ್ಮ ವಿಭಿನ್ನ ಆ್ಯಪ್‌ಗಳು ಮತ್ತು ಮೂಲಗಳಿಂದ ಒದಗಿರುವ ನಿಮ್ಮ ಆರೋಗ್ಯಕ್ಕೆ ಸಂಬಂಧಿಸಿದ ರೆಕಾರ್ಡ್‌ಗಳನ್ನು ಒಂದೇ ಸ್ಥಳದಲ್ಲಿ ಇರಿಸಲು ಅವುಗಳನ್ನು ಸಿಂಕ್ ಮಾಡಿ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ಎಲ್ಲಾ ಅನುಮತಿಗಳನ್ನು ತೆಗೆದುಹಾಕಬೇಕೆ?"</string>
@@ -436,7 +434,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"ಈ ಆ್ಯಪ್‌ಗಳು ಇನ್ನು ಮುಂದೆ ಆ್ಯಕ್ಸೆಸ್ ಹೊಂದಿರುವುದಿಲ್ಲ ಆದರೆ ಈಗಲೂ Health Connect ನಲ್ಲಿ ಸಂಗ್ರಹಿಸಲಾದ ಡೇಟಾ ಇರುತ್ತದೆ"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> ನಂತರ ಸೇರಿಸಲಾಗುವ ಡೇಟಾವನ್ನು <xliff:g id="APP_NAME">%1$s</xliff:g> ಓದಬಹುದು"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"ಈ ಆ್ಯಪ್ ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಬಹುದಾದ ಇತರ Android ಅನುಮತಿಗಳನ್ನು ನಿರ್ವಹಿಸುವುದಕ್ಕಾಗಿ, ಸೆಟ್ಟಿಂಗ್‌ಗಳು &gt; ಆ್ಯಪ್‌ಗಳು ಎಂಬಲ್ಲಿಗೆ ಹೋಗಿ"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"<xliff:g id="APP_NAME">%1$s</xliff:g> ನೊಂದಿಗೆ ನೀವು ಹಂಚಿಕೊಳ್ಳುವ ಡೇಟಾ ಅದರ ಗೌಪ್ಯತೆ ನೀತಿಗೆ ಒಳಪಟ್ಟಿರುತ್ತದೆ"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"<xliff:g id="APP_NAME">%1$s</xliff:g> ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಹೇಗೆ ನಿರ್ವಹಿಸುತ್ತದೆ ಎಂಬುದನ್ನು ನೀವು ಡೆವಲಪರ್‌ಗಳ ಗೌಪ್ಯತೆ ನೀತಿಯಲ್ಲಿ ತಿಳಿಯಬಹುದು"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"ಈ ಆ್ಯಪ್ ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಬಹುದಾದ ಇತರ Android ಅನುಮತಿಗಳನ್ನು ನಿರ್ವಹಿಸುವುದಕ್ಕಾಗಿ ಸೆಟ್ಟಿಂಗ್‌ಗಳಿಗೆ ಹೋಗಿ, ನಂತರ ಆ್ಯಪ್‌ಗಳು ಎಂಬುದನ್ನು ಟ್ಯಾಪ್ ಮಾಡಿ"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"ಗೌಪ್ಯತೆ ನೀತಿಯನ್ನು ಓದಿ"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"ಕಳೆದ 24 ಗಂಟೆಗಳಲ್ಲಿ ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಲಾಗಿದೆ"</string>
@@ -531,7 +529,7 @@
     <string name="export_cancel_button" msgid="1952360582645412410">"ರದ್ದುಮಾಡಿ"</string>
     <string name="import_cancel_button" msgid="2191598074422096715">"ರದ್ದುಮಾಡಿ"</string>
     <string name="import_next_button" msgid="5706322508691854289">"ಮುಂದಿನದು"</string>
-    <string name="import_source_location_title" msgid="4444467438013749461">"ನಿಂದ ಆಮದು ಮಾಡಿಕೊಳ್ಳಿ"</string>
+    <string name="import_source_location_title" msgid="4444467438013749461">"ಇಲ್ಲಿಂದ ಆಮದು ಮಾಡಿಕೊಳ್ಳಿ"</string>
     <string name="import_invalid_storage" msgid="341798262315495399">"ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಆಮದು ಮಾಡಿಕೊಳ್ಳಲು ಕ್ಲೌಡ್‌ ಸಂಗ್ರಹಣೆಯ ಆ್ಯಪ್ ಅನ್ನು ಆಯ್ಕೆಮಾಡಿ"</string>
     <string name="export_import_tap_to_choose_account" msgid="5016799636886709580">"ಖಾತೆಯೊಂದನ್ನು ಆಯ್ಕೆಮಾಡಲು ಟ್ಯಾಪ್ ಮಾಡಿ"</string>
     <string name="export_import_choose_account_title" msgid="1047021319012735232">"ಖಾತೆಯೊಂದನ್ನು ಆಯ್ಕೆಮಾಡಿ"</string>
@@ -1075,8 +1073,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect ಇಂಟಿಗ್ರೇಶನ್ ಅನ್ನು ಪುನರಾರಂಭಿಸಿ"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಇರಿಸಿಕೊಳ್ಳಲು, <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ಒಳಗಾಗಿ ಇದನ್ನು ಪೂರ್ಣಗೊಳಿಸಿ"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"ಆ್ಯಪ್ ಅಪ್‌ಡೇಟ್ ಅಗತ್ಯವಿದೆ"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Health Connect ಜೊತೆಗೆ ಸಿಂಕ್ ಮಾಡುವುದನ್ನು ಮುಂದುವರಿಸಲು <xliff:g id="APP_NAME">%1$s</xliff:g> ಅನ್ನು ಅಪ್‌ಡೇಟ್ ಮಾಡುವ ಅಗತ್ಯವಿದೆ"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connect ಜೊತೆಗೆ ಸಿಂಕ್ ಮಾಡುವುದನ್ನು ಮುಂದುವರಿಸಲು ಕೆಲವು ಆ್ಯಪ್‌ಗಳನ್ನು ಅಪ್‌ಡೇಟ್ ಮಾಡುವ ಅಗತ್ಯವಿದೆ"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect ಜೊತೆಗೆ ಸಿಂಕ್ ಮಾಡುವುದನ್ನು ಮುಂದುವರಿಸಲು <xliff:g id="APP_NAME">%1$s</xliff:g> ಅನ್ನು ಅಪ್‌ಡೇಟ್ ಮಾಡುವ ಅಗತ್ಯವಿದೆ. ಅಪ್‌ಡೇಟ್‌ಗಳು ಎಲ್ಲಾ ಆ್ಯಪ್‌ಗಳಿಗೆ ಲಭ್ಯವಿಲ್ಲದಿರಬಹುದು."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect ಜೊತೆಗೆ ಸಿಂಕ್ ಮಾಡುವುದನ್ನು ಮುಂದುವರಿಸಲು ಕೆಲವು ಆ್ಯಪ್‌ಗಳನ್ನು ಅಪ್‌ಡೇಟ್ ಮಾಡುವ ಅಗತ್ಯವಿದೆ. ಅಪ್‌ಡೇಟ್‌ಗಳು ಎಲ್ಲಾ ಆ್ಯಪ್‌ಗಳಿಗೆ ಲಭ್ಯವಿಲ್ಲದಿರಬಹುದು."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"ಅಪ್‌ಡೇಟ್‌ಗಳಿಗಾಗಿ ಪರಿಶೀಲಿಸಿ"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect ಇಂಟಿಗ್ರೇಶನ್"</string>
@@ -1135,12 +1133,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"ಹೊಂದಾಣಿಕೆಯ ಆ್ಯಪ್‌ಗಳನ್ನು ನೋಡಿ"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect ಮೂಲಕ <xliff:g id="APP_NAME">%s</xliff:g> ನೊಂದಿಗೆ ಸಿಂಕ್ ಮಾಡಲು ಇನ್ನಷ್ಟು ಆ್ಯಪ್‌‌ಗಳನ್ನು ಹುಡುಕಿ"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"ಆ್ಯಪ್‌ ಸ್ಟೋರ್‌ನಲ್ಲಿ ನೋಡಿ"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"ಸ್ಕ್ರೀನ್ ಲಾಕ್ ಅನ್ನು ಸೆಟ್ ಮಾಡಿ"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"ನಿಮ್ಮ ಅರೋಗ್ಯದ ಡೇಟಾಗೆ ಹೆಚ್ಚುವರಿ ಸುರಕ್ಷತೆಯನ್ನು ಒದಗಿಸಲು, ಈ ಸಾಧನಕ್ಕಾಗಿ ಪಿನ್, ಪ್ಯಾಟರ್ನ್ ಅಥವಾ ಪಾಸ್‌ವರ್ಡ್ ಅನ್ನು ಸೆಟ್ ಮಾಡಿ"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"ಸ್ಕ್ರೀನ್ ಲಾಕ್ ಸೆಟ್ ಮಾಡಿ"</string>
     <string name="select_all" msgid="837499881590001166">"ಎಲ್ಲವನ್ನೂ ಆಯ್ಕೆಮಾಡಿ"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"ಕನೆಕ್ಟ್ ಮಾಡಲಾದ ಆ್ಯಪ್‌ಗಳಿಗೆ ಇನ್ನು ಮುಂದೆ Health Connect ನಲ್ಲಿನ ಈ ಡೇಟಾವನ್ನು ಓದಲು ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"ಗುರುತಿಸಲಾಗಿದೆ"</string>
@@ -1183,38 +1178,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ಯೋಗಕ್ಷೇಮ ಡೇಟಾವನ್ನು ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಲು <xliff:g id="APP_NAME">%1$s</xliff:g> ಗೆ ಅನುಮತಿಸಬೇಕೇ?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="DATA_TYPES">%2$s</xliff:g> ಗೆ ಆ್ಯಕ್ಸೆಸ್ ಅನ್ನು <xliff:g id="APP_NAME">%1$s</xliff:g> ವಿನಂತಿಸುತ್ತಿದೆ.\n\nಎಲ್ಲವನ್ನೂ ಅನುಮತಿಸಲು ಅಥವಾ ಅವುಗಳನ್ನು ಪ್ರತ್ಯೇಕವಾಗಿ ನಿಯಂತ್ರಿಸಲು ಆಯ್ಕೆಮಾಡಿ."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="DATA_TYPE">%2$s</xliff:g> ಅನ್ನು ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಲು <xliff:g id="APP_NAME">%1$s</xliff:g> ಗೆ ಅನುಮತಿ ನೀಡಬೇಕೇ?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ವೆಲ್‌ನೆಸ್"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"ಯಾವಾಗಲೂ"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ಬಳಕೆಯಲ್ಲಿರುವಾಗ"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"ಯಾವಾಗಲೂ"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ಬಳಕೆಯಲ್ಲಿರುವಾಗ"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> ನಿಮ್ಮ ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ವೆಲ್‌ನೆಸ್ ಡೇಟಾವನ್ನು <xliff:g id="ALLOW_MODE">%2$s</xliff:g> ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಬಹುದು"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಲು ಅನುಮತಿಸಲಾಗಿದೆ"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"ಓದಲು ಅನುಮತಿಸಲಾಗಿದೆ"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"ಈ ಅನುಮತಿಗಳು ನಿಮ್ಮ ಸಾಧನದ ಸೆನ್ಸರ್‌ಗಳಲ್ಲಿನ ಡೇಟಾಗೆ <xliff:g id="APP_NAME">%1$s</xliff:g> ಗೆ ಆ್ಯಕ್ಸೆಸ್ ನೀಡುತ್ತದೆ."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="OTHER_NUMBER">%2$d</xliff:g> ರಲ್ಲಿ <xliff:g id="NUMBER_0">%1$d</xliff:g> ಆ್ಯಪ್‌ಗಳನ್ನು ಅನುಮತಿಸಲಾಗಿದೆ"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"ಯಾವುದೇ ಆ್ಯಪ್‌ಗಳು ವಿನಂತಿಸಿಕೊಳ್ಳುತ್ತಿಲ್ಲ"</string>
+    <string name="allowed" msgid="4158456017482263737">"ಅನುಮತಿಸಲಾಗಿದೆ"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"ಅನುಮತಿಸಲಾಗುವುದಿಲ್ಲ"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"ಈ ಅನುಮತಿಯನ್ನು ಹೊಂದಿರುವ ಆ್ಯಪ್‌ಗಳು ನಿಮ್ಮ ಸಾಧನದ ಸೆನ್ಸರ್‌ಗಳಿಂದ <xliff:g id="DATA_TYPE">%s</xliff:g> ಡೇಟಾವನ್ನು ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಬಹುದು."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ನಿಮ್ಮ ವಾಚ್‌ನಲ್ಲಿರುವ ಎಲ್ಲಾ ಆ್ಯಪ್‌ಗಳಿಗೆ <xliff:g id="DATA_TYPE">%s</xliff:g> ಆ್ಯಕ್ಸೆಸ್ ಅನ್ನು ತೆಗೆದುಹಾಕಬೇಕೇ?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"ಚೆಕ್‌ ಮಾರ್ಕ್"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"ಅಡ್ಡ ಗುರುತು"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
