--- a/apk/res/values-as/strings.xml
+++ b/apk/res/values-as/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"কালি"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"পঢ়ক: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"লিখক: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"অনুমতি পৰিচালনা কৰক"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"সময়: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"কাৰ্যকলাপ"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"ছালৰ তাপমাত্ৰা"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"ছালৰ তাপমাত্ৰা জোখক"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"ছালৰ তাপমাত্ৰা লিখক"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"আটাইবোৰ স্বাস্থ্য সম্বন্ধীয় নথি"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"আটাইবোৰ স্বাস্থ্য সম্বন্ধীয় নথি"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"আটাইবোৰ স্বাস্থ্য সম্বন্ধীয় নথি লিখক"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"চর্ত"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"চর্ত"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"চৰ্ত পঢ়ক"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"প্ৰতিষেধক"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"প্ৰতিষেধক"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"প্ৰতিষেধকৰ বিষয়ে পঢ়ক"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"লেবৰ ফলাফল"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"লেবৰ ফলাফল"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"লেবৰ ফলাফল পঢ়ক"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"যদি আপুনি এক্সেছ কৰাৰ অনুমতি দিয়ে, তেন্তে এপ্‌টোৱে এলাৰ্জি, লেবৰ ফলাফল, প্ৰতিষেধকৰ দৰে ডেটা আৰু অধিক পঢ়িব আৰু লিখিব পাৰে\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"যদি আপুনি অনুমতি দিয়ে, এই এপ্‌টোৱে এলাৰ্জি, লেবৰ ফলাফল, প্ৰতিষেধক আৰু অধিকৰ দৰে ডেটা পঢ়িব পাৰিব\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"স্বাস্থ্য সম্বন্ধীয় নথিৰ বিষয়ে"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"শ্বেয়াৰ কৰিবলৈ ডেটা"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"যদি আপুনি অনুমতি দিয়ে, তেন্তে <xliff:g id="APP_NAME">%1$s</xliff:g>এ Health Connectৰ সৈতে আপোনাৰ স্বাস্থ্য সম্বন্ধীয় নথি শ্বেয়াৰ কৰিব পাৰে।"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"আপোনাৰ স্বাস্থ্য সম্বন্ধীয় নথি একে ঠাইত ৰাখিবলৈ সেইবোৰ বিভিন্ন এপ্‌ আৰু উৎসৰ পৰা ছিংক কৰক"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"আটাইবোৰ অনুমতি আঁতৰাবনে?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"এই এপ্‌সমূহৰ ওচৰত আৰু এক্সেছ নাই, কিন্তু তথাপি Health Connectত এইসমূহৰ ডেটা ষ্ট’ৰ কৰা আছে"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g>এ <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>ৰ পাছত যোগ দিয়া ডেটা পঢ়িব পাৰে"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"এই এপ্‌টোৱে এক্সেছ কৰিব পৰা Androidৰ অন্য অনুমতিসমূহ পৰিচালনা কৰিবলৈ, ছেটিং &gt; এপলৈ যাওক"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"আপুনি <xliff:g id="APP_NAME">%1$s</xliff:g>ৰ সৈতে শ্বেয়াৰ কৰা ডেটাখিনি ইয়াৰ গোপনীয়তাৰ নীতিৰ অধীন হয়"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"আপুনি বিকাশকৰ্তাৰ গোপনীয়তা নীতিত জানিব পাৰিব যে <xliff:g id="APP_NAME">%1$s</xliff:g>এ আপোনাৰ ডেটা কেনেকৈ পৰিচালনা কেনেকৈ কৰে"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"এই এপ্‌টোৱে এক্সেছ কৰিব পৰা Androidৰ অন্য অনুমতিসমূহ পৰিচালনা কৰিবলৈ ছেটিঙলৈ যাওক, তাৰ পাছত এপত টিপক"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"গোপনীয়তাৰ নীতি পঢ়ক"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"যোৱা ২৪ ঘণ্টাত এক্সেছ কৰিছে"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect একত্ৰিত কৰাটো পুনৰ আৰম্ভ কৰক"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"আপোনাৰ ডেটা ৰাখিবলৈ, এইটো <xliff:g id="TIME_NEEDED">%1$s</xliff:g>ৰ ভিতৰত সম্পূৰ্ণ কৰক"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"এপ্‌টো আপডে’ট কৰাৰ প্ৰয়োজন"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Health Connectৰ সৈতে ছিংক কৰা অব্যাহত ৰাখিবলৈ <xliff:g id="APP_NAME">%1$s</xliff:g> আপডে’ট হৈ থাকিব লাগিব"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connectৰ সৈতে ছিংক কৰা অব্যাহত ৰাখিবলৈ কিছুমান এপ্ আপডে’ট হৈ থাকিব লাগিব"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connectৰ সৈতে ছিংক কৰাটো অব্যাহত ৰাখিবলৈ <xliff:g id="APP_NAME">%1$s</xliff:g> আপডে’ট হৈ থাকিব লাগিব। আটাইবোৰ এপৰ বাবে আপডে’ট উপলব্ধ নহ’বও পাৰে।"</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connectৰ সৈতে ছিংক কৰাটো অব্যাহত ৰাখিবলৈ কিছুমান এপ্‌ আপডে’ট কৰিব লাগিব। আটাইবোৰ এপৰ বাবে আপডে’ট উপলব্ধ নহ’বও পাৰে।"</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"আপডে’ট আছে নেকি চাওক"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"অধিক জানক"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect একত্ৰিত কৰা"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"সমিল এপ্‌ চাওক"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connectৰ জৰিয়তে <xliff:g id="APP_NAME">%s</xliff:g>ৰ সৈতে ছিংক কৰিবলৈ অধিক এপ্‌বিচাৰক"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"app storeত চাওক"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"এটা স্ক্ৰীন লক ছেট কৰক"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"আপোনাৰ স্বাস্থ্য সম্পৰ্কীয় তথ্যৰ অতিৰিক্ত সুৰক্ষাৰ বাবে, এই ডিভাইচৰ বাবে এটা পিন, আৰ্হি, বা পাছৱৰ্ড ছেট কৰক"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"স্ক্ৰীন লক ছেট কৰক"</string>
     <string name="select_all" msgid="837499881590001166">"আটাইবোৰ বাছনি কৰক"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"সংযুক্ত এপ্‌সমূহে আৰু Health Connectৰ পৰা এই ডেটা পঢ়িব নোৱাৰিব"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"টিক চিহ্ন দিয়া হৈছে"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g>ক ফিটনেছ আৰু সুস্থতাৰ ডেটা এক্সেছ কৰিবলৈ দিবনে?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g>এ <xliff:g id="DATA_TYPES">%2$s</xliff:g> এক্সেছ কৰিবলৈ অনুৰোধ কৰিছে।\n\nআটাইবোৰৰ অনুমতি দিবলৈ বাছনি কৰক বা সেইসমূহ গাইগুটীয়াকৈ নিয়ন্ত্ৰণ কৰক।"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g>ক <xliff:g id="DATA_TYPE">%2$s</xliff:g> এক্সেছ কৰিবলৈ অনুমতি দিবনে?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"ফিটনেছ আৰু সুস্থতা"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"সকলো সময়তে"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ব্যৱহাৰ হৈ থাকোঁতে"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"সকলো সময়তে"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ব্যৱহাৰ হৈ থাকোঁতে"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g>এ আপোনাৰ ফিটনেছ আৰু সুস্থতা সম্পৰ্কীয় ডেটা <xliff:g id="ALLOW_MODE">%2$s</xliff:g> এক্সেছ কৰিব পাৰে"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"এক্সেছৰ অনুমতি দিয়া হৈছে"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"পঢ়িবলৈ অনুমতি দিয়া হৈছে"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"এই অনুমতিসমূহে <xliff:g id="APP_NAME">%1$s</xliff:g>ক আপোনাৰ ডিভাইচৰ ছেন্সৰৰ পৰা ডেটা এক্সেছ কৰিবলৈ দিয়ে।"</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="OTHER_NUMBER">%2$d</xliff:g>ৰ ভিতৰত <xliff:g id="NUMBER_0">%1$d</xliff:g>টা এপক অনুমতি দিয়া হৈছে"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"কোনো এপৰ অনুৰোধ জনোৱা হোৱা নাই"</string>
+    <string name="allowed" msgid="4158456017482263737">"অনুমতি দিয়া হৈছে"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"অনুমতি নাই"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"আপোনাৰ ডিভাইচৰ ছেন্সৰৰ পৰা এই অনুমতি থকা এপ্‌সমূহে <xliff:g id="DATA_TYPE">%s</xliff:g> ডেটা এক্সেছ কৰিব পাৰে।"</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"আপোনাৰ ঘড়ীত আটাইবোৰ এপৰ বাবে <xliff:g id="DATA_TYPE">%s</xliff:g>ৰ এক্সেছ আঁতৰাবনে?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"টিক চিহ্ন"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"কটাৰ চিহ্ন"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
