--- a/apk/res/values-b+sr+Latn/strings.xml
+++ b/apk/res/values-b+sr+Latn/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Juče"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Pročitano je: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Upisano je: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Upravljaj dozvolama"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Vreme: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Aktivnosti"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura kože"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Čitaj podatke o temperaturi kože"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Upisuj podatke o temperaturi kože"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Sva zdravstvena evidencija"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"sva zdravstvena evidencija"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Upisivanje sve zdravstvene evidencije"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Zdravstveno stanje"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"zdravstveno stanje"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Čitanje podataka o zdravstvenom stanju"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Vakcine"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"vakcine"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Čitanje podataka o vakcinama"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Laboratorijski rezultati"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"laboratorijski rezultati"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Čitanje podataka o laboratorijskim rezultatima"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Ako date pristup, aplikacija može da čita i upisuje podatke, na primer, alergije, laboratorijske rezultate, vakcine i drugo\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Ako date pristup, aplikacija može da čita podatke, na primer, alergije, laboratorijske rezultate, vakcine i drugo\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"O zdravstvenoj evidenciji"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Podaci za deljenje"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Ako dozvolite, <xliff:g id="APP_NAME">%1$s</xliff:g> može da deli vašu zdravstvenu evidenciju sa Povezivanjem zdravlja."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sinhronizujte zdravstvenu evidenciju iz različitih aplikacija i izvora da biste je držali na jednom mestu"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Želite da uklonite sve dozvole?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Ove aplikacije više nemaju pristup, ali i dalje imaju sačuvane podatke u Povezivanju zdravlja"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> može da čita podatke dodate posle <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Da biste upravljali drugim dozvolama za Android kojima ova aplikacija može da pristupa, idite u Podešavanja &gt; Aplikacije"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Podatke koje delite sa aplikacijom <xliff:g id="APP_NAME">%1$s</xliff:g> reguliše njena politika privatnosti"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"U politici privatnosti programera možete da saznate kako <xliff:g id="APP_NAME">%1$s</xliff:g> upravlja vašim podacima"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Da biste upravljali drugim dozvolama za Android kojima ova aplikacija može da pristupa, idite u Podešavanja, pa dodirnite Aplikacije"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Pročitajte politiku privatnosti"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Pristupljeno u poslednja 24 sata"</string>
@@ -496,7 +495,7 @@
     <string name="frequency_daily" msgid="3596412357416125727">"Jednom dnevno"</string>
     <string name="frequency_weekly" msgid="7302587625019573393">"Jednom nedeljno"</string>
     <string name="frequency_monthly" msgid="729674398053825938">"Jednom mesečno"</string>
-    <string name="export_destination_title" msgid="8352929396306002479">"Odaberite mesto čuvanja zakazanog izvoza"</string>
+    <string name="export_destination_title" msgid="8352929396306002479">"Odaberite gde će se sačuvati zakazani izvoz"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"Izaberite aplikaciju za prostor u klaudu da biste izvozili podatke"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"Povezivanje zdravlja"</string>
     <string name="export_default_file_name_with_sequence" msgid="2380551038319211752">"Povezivanje zdravlja (<xliff:g id="EXPORT_SEQUENTIAL_NUMBER">%1$s</xliff:g>)"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Nastavite integraciju Povezivanja zdravlja"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Da biste zadržali podatke, dovršite ovo u roku od <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Treba da ažurirate aplikaciju"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"<xliff:g id="APP_NAME">%1$s</xliff:g> treba da se ažurira kako biste nastavili sinhronizaciju sa Povezivanjem zdravlja"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Treba da ažurirate neke aplikacije kako biste nastavili sinhronizaciju sa Povezivanjem zdravlja"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> treba da se ažurira kako biste nastavili sinhronizaciju sa Povezivanjem zdravlja. Ažuriranja možda nisu dostupna za sve aplikacije."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Treba da ažurirate neke aplikacije kako biste nastavili sinhronizaciju sa Povezivanjem zdravlja. Ažuriranja možda nisu dostupna za sve aplikacije."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Proverite da li ima ažuriranja"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Saznajte više"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Integracija Povezivanja zdravlja"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Pogledajte kompatibilne aplikacije"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Pronađite još aplikacija koje ćete sinhronizovati sa aplikacijom <xliff:g id="APP_NAME">%s</xliff:g> preko Povezivanja zdravlja"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Prikaži u prodavnici aplikacija"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Podesite otključavanje ekrana"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Podesite PIN, šablon ili lozinku za ovaj uređaj da biste poboljšali bezbednost podataka o zdravlju"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Podesi otključavanje ekrana"</string>
     <string name="select_all" msgid="837499881590001166">"Izaberi sve"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Povezane aplikacije više neće moći da čitaju ove podatke iz Povezivanja zdravlja"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Označeno"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Želite da dozvolite da <xliff:g id="APP_NAME">%1$s</xliff:g> pristupa podacima o fitnesu i velnesu?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> traži pristup za: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nIzaberite da li želite da dozvolite sve ili da ih kontrolišete pojedinačno."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Dozvoljavate da <xliff:g id="APP_NAME">%1$s</xliff:g> pristupa uređaju <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitnes i velnes"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"sve vreme"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"dok se koristi"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Sve vreme"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Dok se koristi"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> može da pristupa svim podacima o fitnesu i velnesu u režimu <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Dozvoljen pristup"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Dozvoljeno čitanje"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Ove dozvole daju aplikaciji <xliff:g id="APP_NAME">%1$s</xliff:g> pristup podacima sa senzora uređaja."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"Aplikacije sa dozvolom: <xliff:g id="NUMBER_0">%1$d</xliff:g> od <xliff:g id="OTHER_NUMBER">%2$d</xliff:g>"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Nijedna aplikacija ne zahteva dozvolu"</string>
+    <string name="allowed" msgid="4158456017482263737">"Dozvoljeno"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Nije dozvoljeno"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Aplikacije sa ovom dozvolom mogu da pristupaju podacima (<xliff:g id="DATA_TYPE">%s</xliff:g>) sa senzora uređaja."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Želite da uklonite pristup podacima (<xliff:g id="DATA_TYPE">%s</xliff:g>) svim aplikacijama na satu?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Znak potvrde"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Znak x"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
