--- a/apk/res/values-be/strings.xml
+++ b/apk/res/values-be/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Учора"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Счытванне: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Запіс: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Кіраваць дазволамі"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Час: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Актыўнасць"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"тэмпература скуры"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Чытанне даных пра тэмпературу скуры"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Запіс даных пра тэмпературу скуры"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Уся інфармацыя пра стан здароўя"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"уся інфармацыя пра стан здароўя"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Запісваць усю інфармацыю пра стан здароўя"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Расстройствы здароўя"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"расстройствы здароўя"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Чытаць звесткі пра расстройствы здароўя"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Прышчэпкі"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"прышчэпкі"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Чытаць даныя пра прышчэпкі"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Вынікі аналізаў"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"вынікі аналізаў"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Чытаць вынікі аналізаў"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Калі вы дазволіце доступ, праграма зможа счытваць і запісваць такія даныя, як інфармацыя пра алергію і прышчэпкі, вынікі аналізаў і шмат іншага\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Калі вы дазволіце доступ, праграма зможа счытваць такія даныя, як інфармацыя пра алергію і прышчэпкі, вынікі аналізаў і шмат іншага\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Аб інфармацыі пра стан здароўя"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Даныя для абагульвання"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Калі вы дазволіце доступ, праграма \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" зможа абагульваць вашу інфармацыю пра стан здароўя з платформай \"Здароўе і спорт\"."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Сінхранізуйце інфармацыю пра стан здароўя з розных праграм і крыніц, каб яна захоўвалася ў адным месцы"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Выдаліць усе дазволы?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"У гэтых праграм больш няма доступу да праграмы \"Здароўе і спорт\", аднак іх даныя па-ранейшаму там захоўваюцца"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> можа счытваць даныя, дададзеныя пасля <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Каб кіраваць іншымі дазволамі Android, якія можа мець гэта праграма, адкрыйце \"Налады &gt; Праграмы\""</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Даныя, якія вы абагульваеце з праграмай \"<xliff:g id="APP_NAME">%1$s</xliff:g>\", падпадаюць пад дзеянне палітыкі прыватнасці"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Даведацца пра тое, як праграма \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" апрацоўвае вашы даныя, можна ў палітыцы прыватнасці распрацоўшчыка"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Каб кіраваць іншымі дазволамі гэтай праграмы ў Android, адкрыйце \"Налады\" і выберыце \"Праграмы\""</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Азнаёміцца з палітыкай прыватнасці"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Апошні доступ у папярэднія 24 гадзіны"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Узнавіце інтэграванне праграмы \"Здароўе і спорт\""</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Каб захаваць свае даныя, выканайце гэтае дзеянне за <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Патрабуецца абнаўленне праграмы"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Каб сінхранізацыя даных з сэрвісам \"Здароўе і спорт\" не перапынілася, праграму \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" неабходна абнавіць"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Каб сінхранізацыя даных з сэрвісам \"Здароўе і спорт\" не перапынілася, некаторыя праграмы неабходна абнавіць"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Каб сінхранізацыя даных з сэрвісам \"Здароўе і спорт\" не перапынілася, праграму \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" неабходна абнавіць. Абнаўленні могуць быць даступнымі не для ўсіх праграм."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Каб сінхранізацыя даных з сэрвісам \"Здароўе і спорт\" не перапынілася, некаторыя праграмы неабходна абнавіць. Абнаўленні могуць быць даступнымі не для ўсіх праграм."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Праверыць наяўнасць абнаўленняў"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Даведацца больш"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Інтэграцыя праграмы \"Здароўе і спорт\""</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Паглядзець сумяшчальныя праграмы"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Знайдзіце больш праграм для сінхранізацыі з праграмай \"<xliff:g id="APP_NAME">%s</xliff:g>\" праз \"Здароўе і спорт\""</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Паглядзець у краме праграм"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Наладзьце блакіроўку экрана"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Для дадатковай бяспекі даных пра здароўе наладзьце на гэтай прыладзе PIN-код, узор разблакіроўкі ці пароль"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Наладзіць блакіроўку экрана"</string>
     <string name="select_all" msgid="837499881590001166">"Выбраць усё"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Падключаныя праграмы больш не змогуць счытваць гэтыя даныя з платформы \"Здароўе і спорт\""</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Выбрана"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Дазволіць праграме \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" доступ да даных пра фізічную актыўнасць і фізічны стан?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"Праграма \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" запытвае доступ да наступных даных: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nВы можаце даць усе дазволы ці кіраваць дазволамі паасобку."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Дазволіць праграме \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" доступ да наступных даных: <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Фітнес і здароўе"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"заўсёды"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"падчас выкарыстання"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Заўсёды"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Падчас выкарыстання"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"Праграма \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" можа атрымліваць доступ да даных пра фітнес і здароўе <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Доступ дазволены"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Дазволена счытваць"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"З гэтымі дазволамі праграма \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" можа атрымліваць доступ да даных з датчыкаў прылады."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"Праграм з дазволам: <xliff:g id="NUMBER_0">%1$d</xliff:g> з <xliff:g id="OTHER_NUMBER">%2$d</xliff:g>"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Ні адна праграма не запытвае дазвол"</string>
+    <string name="allowed" msgid="4158456017482263737">"Дазволена"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Забаронена"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Праграмы з такім дазволам могуць атрымліваць доступ да даных \"<xliff:g id="DATA_TYPE">%s</xliff:g>\" з датчыкаў прылады."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Забараніць усім праграмам доступ да даных \"<xliff:g id="DATA_TYPE">%s</xliff:g>\" на гадзінніку?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Птушка"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Крыжык"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
