--- a/apk/res/values-bn/strings.xml
+++ b/apk/res/values-bn/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"গতকাল"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"পড়ুন: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"লিখুন: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"অনুমতি ম্যানেজ করুন"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"সময়: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"অ্যাক্টিভিটি"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"শরীরের তাপমাত্রার ডেটা"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"শরীরের তাপমাত্রার ডেটা দেখার অনুমতি"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"শরীরের তাপমাত্রার ডেটা এডিট করার অনুমতি"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"স্বাস্থ্য বিষয়ক সব রেকর্ড"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"স্বাস্থ্য বিষয়ক সব রেকর্ড"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"স্বাস্থ্য বিষয়ক সব রেকর্ড লিখুন"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"চিকিৎসা সংক্রান্ত অবস্থা"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"চিকিৎসা সংক্রান্ত অবস্থা"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"চিকিৎসা সংক্রান্ত অবস্থার ডেটা দেখার অনুমতি দিন"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"ভ্যাকসিন"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"ভ্যাকসিন"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"ভ্যাকসিন সম্পর্কে পড়ুন"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"ল্যাবের ফলাফল"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"ল্যাবের ফলাফল"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"ল্যাবের ফলাফল পড়ুন"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"আপনি অ্যাক্সেস দিলে, অ্যাপটি অ্যালার্জি, ল্যাবের ফলাফল, ভ্যাকসিন ও আরও অনেক কিছুর মতো ডেটা পড়তে ও সেভ করতে পারবে\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"আপনি অ্যাক্সেস দিলে, অ্যাপটি অ্যালার্জি, ল্যাবের ফলাফল, ভ্যাকসিন ও আরও অনেক কিছুর মতো ডেটা পড়তে পারবে\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"স্বাস্থ্য বিষয়ক রেকর্ড সম্পর্কে"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"শেয়ার করার ডেটা"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"আপনি অনুমতি দিলে, <xliff:g id="APP_NAME">%1$s</xliff:g> Health Connect-এর সাথে স্বাস্থ্য বিষয়ক রেকর্ড শেয়ার করতে পারবে।"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"আপনার স্বাস্থ্য বিষয়ক রেকর্ড এক জায়গাতেই রাখতে আলাদা অ্যাপ ও সোর্স থেকে তা সিঙ্ক করুন"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"সব অনুমতি সরাবেন?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"এইসব অ্যাপের আর অ্যাক্সেস না থাকলেও, এখনও এদের ডেটা Health Connect-এ সেভ করা আছে"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g>, <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>-এর পরে যোগ করা যেকোনও ডেটা পড়তে পারবে"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"এই অ্যাপ অ্যাক্সেস করতে পারে এমন সব Android অনুমতি ম্যানেজ করতে \'সেটিংস &gt; অ্যাপ\' বিকল্পে যান"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"<xliff:g id="APP_NAME">%1$s</xliff:g>-এর সাথে আপনার শেয়ার করা ডেটা সেটির গোপনীয়তা নীতি অনুযায়ী প্রযোজ্য"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"<xliff:g id="APP_NAME">%1$s</xliff:g> কীভাবে ডেভেলপারের গোপনীয়তা নীতি অনুসারে আপনার ডেটা ম্যানেজ করে তা জানতে পারবেন"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"এই অ্যাপের অ্যাক্সেস থাকা অন্যান্য Android অনুমতি ম্যানেজ করতে, প্রথমে সেটিংসে যান, তারপরে \'অ্যাপ\' বিকল্পে ট্যাপ করুন"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"গোপনীয়তা নীতি পড়ুন"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"গত ২৪ ঘণ্টায় অ্যাক্সেস করা হয়েছে"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect ইন্টিগ্রেশন আবার চালু করুন"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"আপনার ডেটা রেখে দিতে, এটি <xliff:g id="TIME_NEEDED">%1$s</xliff:g>-এর মধ্যে সম্পূর্ণ করুন"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"অ্যাপ আপডেট করতে হবে"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Health Connect-এর সাথে সিঙ্ক করা চালিয়ে যেতে <xliff:g id="APP_NAME">%1$s</xliff:g> আপডেট করতে হবে"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connect-এর সাথে সিঙ্ক করা চালিয়ে যেতে কিছু অ্যাপ আপডেট করতে হবে"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect-এর সাথে সিঙ্ক করা চালিয়ে যেতে <xliff:g id="APP_NAME">%1$s</xliff:g> আপডেট করতে হবে। সব আ্যাপের জন্য আপডেট উপলভ্য নাও হতে পারে।"</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect-এর সাথে সিঙ্ক করা চালিয়ে যেতে কিছু অ্যাপ আপডেট করতে হবে। সব আ্যাপের জন্য আপডেট উপলভ্য নাও হতে পারে।"</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"কোনও আপডেট আছে কিনা দেখুন"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"আরও জানুন"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect ইন্টিগ্রেশন"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"মানানসই অ্যাপ দেখুন"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect-এর মাধ্যমে <xliff:g id="APP_NAME">%s</xliff:g>-এর সাথে কানেক্ট করার জন্য আরও অ্যাপ খুঁজুন"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"অ্যাপ স্টোরে দেখুন"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"\'স্ক্রিন লক\' সেট-আপ করুন"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"আপনার স্বাস্থ্য ডেটার জন্য অতিরিক্ত সুরক্ষা পেতে, এই ডিভাইসে পিন, প্যাটার্ন বা পাসওয়ার্ড সেট করুন"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"\'স্ক্রিন লক\' ফিচার সেট করুন"</string>
     <string name="select_all" msgid="837499881590001166">"সবকটি বেছে নিন"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"কানেক্ট করা অ্যাপ Health Connect থেকে এই ডেটা আর পড়তে পারবে না"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"টিক চিহ্ন দিয়েছেন"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g> অ্যাপকে ফিটনেস ও ওয়েলনেস সংক্রান্ত ডেটা অ্যাক্সেস করার অনুমতি দিতে চান?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g>, <xliff:g id="DATA_TYPES">%2$s</xliff:g> অ্যাক্সেস করার অনুমতি চাইছে।\n\nসব অনুমতি দিতে অথবা আলাদাভাবে নিয়ন্ত্রণ করার জন্য বেছে নিন।"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="DATA_TYPE">%2$s</xliff:g> অ্যাক্সেস করতে <xliff:g id="APP_NAME">%1$s</xliff:g>-কে অনুমতি দিতে চান?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"ফিটনেস ও সুস্থতা"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"সব সময়ের জন্য"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"শুধু ব্যবহারের সময়"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"সব সময়ের জন্য"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"শুধু ব্যবহারের সময়"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> আপনার সব ফিটনেস ও ওয়েলনেস ডেটা অ্যাক্সেস করতে পারবে <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"অ্যাক্সেসের অনুমতি আছে"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"পড়ার অনুমতি দেওয়া হয়েছে"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"এইসব অনুমতি আপনার ডিভাইস সেন্সর থেকে ডেটাতে <xliff:g id="APP_NAME">%1$s</xliff:g> অ্যাপকে অ্যাক্সেস করতে দেয়।"</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="OTHER_NUMBER">%2$d</xliff:g>টি অ্যাপের মধ্যে <xliff:g id="NUMBER_0">%1$d</xliff:g>টি অনুমোদিত"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"কোনও অ্যাপ অনুমতি দেওয়ার অনুরোধ করেনি"</string>
+    <string name="allowed" msgid="4158456017482263737">"অনুমোদিত"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"অননুমোদিত"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"এই অনুমতি আছে এমন অ্যাপ আপনার ডিভাইসের সেন্সর থেকে <xliff:g id="DATA_TYPE">%s</xliff:g> ডেটা অ্যাক্সেস করতে পারবে।"</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"আপনার স্মার্টওয়াচে সব অ্যাপের জন্য <xliff:g id="DATA_TYPE">%s</xliff:g> অ্যাক্সেস সরাতে চান?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"টিক চিহ্ন"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"ক্রস চিহ্ন"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
