--- a/apk/res/values-ca/strings.xml
+++ b/apk/res/values-ca/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Ahir"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Lectura: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Escriptura: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Gestiona els permisos"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Hora: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Activitat"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura de la pell"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Llegir la temperatura de la pell"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Escriure la temperatura de la pell"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Tots els registres de salut"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"tots els registres de salut"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Escriure tots els registres de salut"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Condicions"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"condicions"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Llegir les condicions"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Vacunes"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"vacunes"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Llegir les vacunes"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Analítiques"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"analítiques"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Llegir les analítiques"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Si li dones accés, l\'aplicació podrà llegir i escriure dades, com ara al·lèrgies, analítiques, vacunes i més\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Si li dones accés, l\'aplicació podrà llegir dades, com ara al·lèrgies, analítiques, vacunes i més\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Sobre els registres de salut"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Dades per compartir"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Si ho permets, <xliff:g id="APP_NAME">%1$s</xliff:g> podrà compartir els teus registres de salut amb Salut connectada."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sincronitza els teus registres de salut de diferents aplicacions i fonts per tenir-los en un sol lloc"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Vols suprimir tots els permisos?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Aquestes aplicacions ja no tenen accés, però encara tenen dades emmagatzemades a Salut connectada"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> pot llegir les dades afegides després del dia <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Per gestionar altres permisos d\'Android a què pot accedir aquesta aplicació, ves a Configuració &gt; Aplicacions"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Les dades que comparteixes amb <xliff:g id="APP_NAME">%1$s</xliff:g> estan subjectes a la seva política de privadesa"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Pots obtenir informació sobre com gestiona les teves dades <xliff:g id="APP_NAME">%1$s</xliff:g> a la política de privadesa del desenvolupador"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Per gestionar altres permisos d\'Android a què pot accedir aquesta aplicació, ves a Configuració i, a continuació, toca Aplicacions"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Llegeix la política de privadesa"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"S\'hi ha accedit durant les 24 darreres hores"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Reprèn la integració de Salut connectada"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Per conservar les teves dades, completa la integració en <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Cal actualitzar l\'aplicació"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"L\'aplicació <xliff:g id="APP_NAME">%1$s</xliff:g> ha d\'estar actualitzada perquè es continuï sincronitzant amb Salut connectada"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Algunes aplicacions han d\'estar actualitzades perquè es continuïn sincronitzant amb Salut connectada"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"L\'aplicació <xliff:g id="APP_NAME">%1$s</xliff:g> ha d\'estar actualitzada perquè es continuï sincronitzant amb Salut connectada. És possible que no hi hagi actualitzacions disponibles per a totes les aplicacions."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Algunes aplicacions han d\'estar actualitzades perquè es continuïn sincronitzant amb Salut connectada. És possible que no hi hagi actualitzacions disponibles per a totes les aplicacions."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Cerca actualitzacions"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Més informació"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Integració de Salut connectada"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Mostra les aplicacions compatibles"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Cerca més aplicacions per sincronitzar amb <xliff:g id="APP_NAME">%s</xliff:g> a través de Salut connectada"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Mostra a la botiga d\'aplicacions"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Defineix un bloqueig de pantalla"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Per a més seguretat de les teves dades de salut, configura un PIN, un patró o una contrasenya per a aquest dispositiu"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Defineix un bloqueig de pantalla"</string>
     <string name="select_all" msgid="837499881590001166">"Selecciona-ho tot"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Les aplicacions connectades ja no podran llegir aquestes dades de Salut connectada"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Marcat"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Vols permetre que <xliff:g id="APP_NAME">%1$s</xliff:g> accedeixi a les dades de fitnes i benestar?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> sol·licita accés a <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nPermet-ho tot o controla-ho individualment."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Vols permetre que <xliff:g id="APP_NAME">%1$s</xliff:g> accedeixi a <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitnes i benestar"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"sempre"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"mentre s\'utilitza"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Sempre"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Mentre s\'utilitza"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> pot accedir a totes les teves dades de fitnes i benestar <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Amb permís d\'accés"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Amb permís de lectura"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Aquests permisos donen a <xliff:g id="APP_NAME">%1$s</xliff:g> accés a les dades dels sensors del teu dispositiu."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="NUMBER_0">%1$d</xliff:g> de <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> aplicacions permeses"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Cap aplicació ho ha sol·licitat"</string>
+    <string name="allowed" msgid="4158456017482263737">"Es permet"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"No es permet"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Les aplicacions amb aquest permís poden accedir a les dades de <xliff:g id="DATA_TYPE">%s</xliff:g> dels sensors del teu dispositiu."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Vols suprimir l\'accés a <xliff:g id="DATA_TYPE">%s</xliff:g> per a totes les aplicacions del rellotge?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Marca de verificació"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Creu"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
