--- a/apk/res/values-de/strings.xml
+++ b/apk/res/values-de/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Gestern"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Lesen: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Schreiben: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Berechtigungen verwalten"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Zeit: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Aktivität"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"Hauttemperatur"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Hauttemperatur lesen"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Hauttemperatur schreiben"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Alle Gesundheitsdaten"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"alle Gesundheitsdaten"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Alle Gesundheitsdaten zusammenfassen"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Daten zu Krankheiten"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"Daten zu Krankheiten"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Daten zu Krankheiten lesen"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Impfungen"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"Impfungen"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Nutzerdaten zu Impfungen lesen"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Laborergebnisse"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"Laborergebnisse"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Nutzerdaten zu Laborergebnissen lesen"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Wenn du der App Zugriff gewährst, kann sie Daten zu Allergien, Laborergebnissen, Impfungen und mehr lesen und schreiben\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Wenn du der App Zugriff gewährst, kann sie Daten zu Allergien, Laborergebnissen, Impfungen und mehr lesen\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Informationen zu Gesundheitsdaten"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Zu teilende Daten"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Mit dieser Erlaubnis kann <xliff:g id="APP_NAME">%1$s</xliff:g> deine Gesundheitsdaten mit Health Connect teilen."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Du kannst deine Gesundheitsdaten aus verschiedenen Apps und Quellen synchronisieren lassen, um sie an einem Ort zu speichern"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Alle Berechtigungen entfernen?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Diese Apps haben keinen Zugriff mehr, aber es sind noch Daten von ihnen in Health Connect gespeichert"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> kann Daten lesen, die nach dem <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> hinzugefügt wurden."</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Weitere Android-Berechtigungen, die diese App hat, kannst du in den Einstellungen unter „Apps“ verwalten."</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Die mit <xliff:g id="APP_NAME">%1$s</xliff:g> geteilten Daten sind von der Datenschutzerklärung dieser App abgedeckt."</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Wie <xliff:g id="APP_NAME">%1$s</xliff:g> mit deinen Daten umgeht, erfährst du in der Datenschutzerklärung des Entwicklers"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Weitere Android-Berechtigungen, die diese App hat, kannst du in den Einstellungen unter „Apps“ verwalten."</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Datenschutzerklärung lesen"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Zugriff in den letzten 24 Stunden"</string>
@@ -483,7 +482,7 @@
     <string name="import_other_error_banner_button" msgid="8006947649520909176">"Noch mal versuchen"</string>
     <string name="import_other_error_banner_summary" msgid="4378957063605649197">"Beim Wiederherstellen der Daten aus deinem Bericht ist ein Fehler aufgetreten."</string>
     <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"Über den Export können Daten gespeichert und dann auf ein neues Smartphone übertragen werden"</string>
-    <string name="backup_and_restore_footer_link_text" msgid="9075133737244288876">"Sichern und Wiederherstellen"</string>
+    <string name="backup_and_restore_footer_link_text" msgid="9075133737244288876">"Infos zu Back-up und Wiederherstellung"</string>
     <string name="automatic_export_status" msgid="4407131306281440230">"<xliff:g id="EXPORT_ON_OR_OFF">%1$s</xliff:g> • <xliff:g id="EXPORT_FREQUENCY">%2$s</xliff:g>"</string>
     <string name="automatic_export_on" msgid="6972389773963624315">"An"</string>
     <string name="automatic_export_off" msgid="3270255845008880841">"Aus"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect-Integration fortsetzen"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Schließe diesen Vorgang innerhalb von <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ab, um deine Daten zu behalten."</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"App-Update erforderlich"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"<xliff:g id="APP_NAME">%1$s</xliff:g> muss aktualisiert werden, um weiterhin mit Health Connect synchronisiert werden zu können"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Einige Apps müssen aktualisiert werden, um weiterhin mit Health Connect synchronisiert werden zu können"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Die App „<xliff:g id="APP_NAME">%1$s</xliff:g>“ muss aktualisiert werden, damit sie weiterhin mit Health Connect synchronisiert werden kann. Möglicherweise sind nicht für alle Apps Updates verfügbar."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Einige Apps müssen aktualisiert werden, damit sie weiterhin mit Health Connect synchronisiert werden können. Möglicherweise sind nicht für alle Apps Updates verfügbar."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Nach Updates suchen"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Weitere Informationen"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect-Integration"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Kompatible Apps ansehen"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Du kannst nach weiteren Apps suchen, die über Health Connect mit <xliff:g id="APP_NAME">%s</xliff:g> synchronisiert werden sollen"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Im App-Shop ansehen"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Displaysperre einrichten"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Zum besseren Schutz deiner Gesundheitsdaten kannst du eine PIN, ein Muster oder ein Passwort für dieses Gerät festlegen"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Displaysperre einrichten"</string>
     <string name="select_all" msgid="837499881590001166">"Alle auswählen"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Verbundene Apps können diese Daten von Health Connect dann nicht mehr lesen"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Ausgewählt"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ erlauben, auf Fitness- und Wellnessdaten zuzugreifen?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ fordert Zugriff auf die folgenden Daten an: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nDu kannst entweder alle Berechtigungen zulassen oder sie einzeln festlegen."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ den Zugriff auf <xliff:g id="DATA_TYPE">%2$s</xliff:g> gewähren?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitness und Wohlbefinden"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"immer"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"während der Nutzung der App"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Immer"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Während der Nutzung der App"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ kann <xliff:g id="ALLOW_MODE">%2$s</xliff:g> auf alle deine Fitness- und Wellnessdaten zugreifen"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Zugriff erlaubt"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Lesezugriff"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Mit diesen Berechtigungen gewährst du „<xliff:g id="APP_NAME">%1$s</xliff:g>“ Zugriff auf Daten, die von den Sensoren deines Geräts erfasst werden."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="NUMBER_0">%1$d</xliff:g> von <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> App(s) berechtigt"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Wird von keinen Apps angefordert"</string>
+    <string name="allowed" msgid="4158456017482263737">"Berechtigt"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Nicht berechtigt"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Apps mit dieser Berechtigung haben Zugriff auf Daten vom Typ „<xliff:g id="DATA_TYPE">%s</xliff:g>“, die von den Sensoren deines Geräts erfasst werden."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Zugriff auf Daten vom Typ „<xliff:g id="DATA_TYPE">%s</xliff:g>“ für alle Apps auf deiner Smartwatch widerrufen?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Häkchen"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Kreuz"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
