--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Χθες"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Ανάγνωση: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Εγγραφή: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Διαχείριση αδειών"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Ώρα: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Δραστηριότητα"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"θερμοκρασία δέρματος"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Ανάγνωση θερμοκρασίας δέρματος"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Εγγραφή θερμοκρασίας δέρματος"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Όλοι οι ιατρικοί φάκελοι"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"όλοι οι ιατρικοί φάκελοι"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Σύνταξη όλων των ιατρικών φακέλων"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Ιατρικές παθήσεις"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"ιατρικές παθήσεις"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Ανάγνωση δεδομένων ιατρικών παθήσεων"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Εμβόλια"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"εμβόλια"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Ανάγνωση δεδομένων εμβολίων"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Αποτελέσματα εργαστηριακών εξετάσεων"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"αποτελέσματα εργαστηριακών εξετάσεων"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Ανάγνωση αποτελεσμάτων εργαστηριακών εξετάσεων"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Εάν παραχωρήσετε πρόσβαση, η εφαρμογή θα έχει τη δυνατότητα ανάγνωσης και εγγραφής δεδομένων όπως είναι οι αλλεργίες, τα αποτελέσματα εργαστηριακών εξετάσεων, τα εμβόλια και άλλα\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Εάν παραχωρήσετε πρόσβαση, η εφαρμογή θα έχει τη δυνατότητα ανάγνωσης δεδομένων όπως είναι οι αλλεργίες, τα αποτελέσματα εργαστηριακών εξετάσεων, τα εμβόλια και άλλα\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Σχετικά με τους ιατρικούς φακέλους"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Δεδομένα για κοινή χρήση"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Εάν παραχωρήσετε την πρόσβαση, η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> θα μπορεί να μοιράζεται τους ιατρικούς φακέλους σας με το Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Συγχρονίστε τους ιατρικούς φακέλους από τις διάφορες εφαρμογές και πηγές σας, για να τους διατηρείτε σε ένα σημείο"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Κατάργηση όλων των αδειών;"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Αυτές οι εφαρμογές δεν έχουν πλέον πρόσβαση, αλλά έχουν ακόμη αποθηκευμένα δεδομένα στο Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> μπορεί να διαβάζει δεδομένα που προστέθηκαν μετά τις <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Για να διαχειριστείτε άλλες άδειες Android στις οποίες μπορεί να έχει πρόσβαση αυτή η εφαρμογή, μεταβείτε στην επιλογή Ρυθμίσεις &gt; Εφαρμογές"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Τα δεδομένα που κοινοποιείτε στην εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> καλύπτονται από την πολιτική απορρήτου της"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Μπορείτε να μάθετε πώς η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> χειρίζεται τα δεδομένα σας στην πολιτική απορρήτου του προγραμματιστή"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Για να διαχειριστείτε άλλες άδειες Android στις οποίες έχει πρόσβαση αυτή η εφαρμογή, μεταβείτε στις Ρυθμίσεις και πατήστε Εφαρμογές"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Ανάγνωση πολιτικής απορρήτου"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Πρόσβαση τις τελευταίες 24 ώρες"</string>
@@ -493,9 +492,9 @@
     <string name="scheduled_export_settings_footer_text" msgid="8488483803782086291">"Εάν απενεργοποιήσετε την προγραμματισμένη εξαγωγή, δεν θα διαγραφούν τα δεδομένα που είχαν εξαχθεί προηγουμένως από την τοποθεσία αποθήκευσής τους"</string>
     <string name="choose_frequency" msgid="8119085390857180221">"Ρύθμιση προγραμματισμένης εξαγωγής"</string>
     <string name="choose_frequency_description" msgid="7698155810053504157">"Επιλέξτε τη συχνότητα εξαγωγής των δεδομένων σας"</string>
-    <string name="frequency_daily" msgid="3596412357416125727">"Ανά ημέρα"</string>
-    <string name="frequency_weekly" msgid="7302587625019573393">"Ανά εβδομάδα"</string>
-    <string name="frequency_monthly" msgid="729674398053825938">"Ανά μήνα"</string>
+    <string name="frequency_daily" msgid="3596412357416125727">"Ημερήσια"</string>
+    <string name="frequency_weekly" msgid="7302587625019573393">"Εβδομαδιαία"</string>
+    <string name="frequency_monthly" msgid="729674398053825938">"Μηνιαία"</string>
     <string name="export_destination_title" msgid="8352929396306002479">"Επιλέξτε τοποθ. αποθήκ. προγρ. εξαγωγών"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"Επιλέξτε μια εφαρμογή αποθηκευτικού χώρου cloud για την εξαγωγή των δεδομένων σας"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"Health Connect"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Συνέχιση ενσωμάτωσης Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Για να διατηρήσετε τα δεδομένα σας, ολοκληρώστε αυτήν τη διαδικασία εντός <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Απαιτείται ενημέρωση της εφαρμογής"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> πρέπει να ενημερωθεί για να συνεχιστεί ο συγχρονισμός με το Health Connect"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Ορισμένες εφαρμογές πρέπει να ενημερωθούν για να συνεχιστεί ο συγχρονισμός με το Health Connect"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> πρέπει να ενημερωθεί, για να συνεχιστεί ο συγχρονισμός με το Health Connect. Οι ενημερώσεις ενδέχεται να μην είναι διαθέσιμες για όλες τις εφαρμογές."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Ορισμένες εφαρμογές πρέπει να ενημερωθούν, για να συνεχιστεί ο συγχρονισμός με το Health Connect. Οι ενημερώσεις ενδέχεται να μην είναι διαθέσιμες για όλες τις εφαρμογές."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Έλεγχος για ενημερώσεις"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Μάθετε περισσότερα"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Ενσωμάτωση Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Εμφάνιση συμβατών εφαρμογών"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Βρείτε περισσότερες εφαρμογές για συγχρονισμό με την εφαρμογή <xliff:g id="APP_NAME">%s</xliff:g> μέσω του Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Εμφάνιση στο app store"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Ορισμός κλειδώματος οθόνης"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Για πρόσθετη ασφάλεια για τα δεδομένα υγείας σας, ορίστε ένα PIN, ένα μοτίβο ή έναν κωδικό πρόσβασης για αυτή τη συσκευή"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Ορισμός κλειδώματος οθόνης"</string>
     <string name="select_all" msgid="837499881590001166">"Επιλογή όλων"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Οι συνδεδεμένες εφαρμογές δεν θα έχουν πλέον τη δυνατότητα ανάγνωσης αυτών των δεδομένων από το Health Connect"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Επιλεγμένο"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Να επιτρέπεται στην εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> να έχει πρόσβαση σε δεδομένα φυσικής κατάστασης και ευεξίας;"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> ζητά πρόσβαση στα δεδομένα <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nΕπιλέξτε να επιτραπεί η πρόσβαση σε όλα ή να τα ελέγξετε μεμονωμένα."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Να επιτρέπεται η πρόσβαση της εφαρμογής <xliff:g id="APP_NAME">%1$s</xliff:g> στα δεδομένα <xliff:g id="DATA_TYPE">%2$s</xliff:g>;"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Φυσική κατάσταση και ευεξία"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"να επιτρέπεται πάντα"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"κατά τη χρήση"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Να επιτρέπεται πάντα"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Κατά τη χρήση"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> μπορεί να έχει πρόσβαση σε όλα τα δεδομένα φυσικής κατάστασης και ευεξίας <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Επιτρέπεται η πρόσβαση"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Επιτρέπεται η ανάγνωση"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Αυτές οι άδειες παρέχουν στην εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> πρόσβαση σε δεδομένα από τους αισθητήρες της συσκευής σας."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"Επιτρέπονται <xliff:g id="NUMBER_0">%1$d</xliff:g> από <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> εφαρμογές"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Δεν υπάρχουν αιτήματα από εφαρμογές"</string>
+    <string name="allowed" msgid="4158456017482263737">"Επιτρέπεται"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Δεν επιτρέπεται"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Οι εφαρμογές με αυτή την άδεια μπορούν να αποκτήσουν πρόσβαση σε δεδομένα <xliff:g id="DATA_TYPE">%s</xliff:g> από τους αισθητήρες της συσκευής σας."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Κατάργηση πρόσβασης στα δεδομένα <xliff:g id="DATA_TYPE">%s</xliff:g> για όλες τις εφαρμογές στο ρολόι σας;"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Σύμβολο επιλογής"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Σύμβολο \"Χ\""</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
