--- a/apk/res/values-es-rUS/strings.xml
+++ b/apk/res/values-es-rUS/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Ayer"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Leer: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Escribir: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Administrar permisos"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Hora: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Actividad"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura cutánea"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Lee la temperatura cutánea"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Escribe la temperatura cutánea"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Todos los registros de salud"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"todos los registros de salud"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Escribir todos los registros de salud"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Condiciones"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"condiciones"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Leer condiciones"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Vacunas"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"vacunas"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Leer vacunas"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Resultados de laboratorio"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"resultados de laboratorio"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Leer resultados de laboratorio"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Si otorgas acceso, la app podrá leer y escribir datos como alergias, resultados de laboratorio, vacunas y más\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Si otorgas acceso, la app podrá leer datos como alergias, resultados de laboratorio, vacunas y más\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Información sobre los registros de salud"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Datos para compartir"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Si lo permites, <xliff:g id="APP_NAME">%1$s</xliff:g> podrá compartir tus registros de salud con Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sincroniza los registros de salud de diferentes apps y fuentes para tenerlos en un solo lugar"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"¿Quieres quitar todos los permisos?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Estas apps ya no tienen acceso, pero todavía tienen datos almacenados en Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> puede leer datos agregados después del <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Para administrar otros permisos de Android a los que esta app puede acceder, ve a Configuración &gt; Apps"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Los datos que compartas con <xliff:g id="APP_NAME">%1$s</xliff:g> están sujetos a la política de privacidad de esa app"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Consulta cómo <xliff:g id="APP_NAME">%1$s</xliff:g> maneja tus datos en la política de privacidad del desarrollador"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Para administrar otros permisos de Android a los que esta app puede acceder, ve a Configuración y, luego, presiona Apps"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Leer la política de privacidad"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Se accedió en las últimas 24 horas"</string>
@@ -472,7 +471,7 @@
     <string name="last_export_time_hours_ago" msgid="3174986640795245343">"{count,plural, =1{Última exportación: hace 1 hora}other{Última exportación hace # horas}}"</string>
     <string name="no_last_export_message" msgid="8138900854579872667">"Última exportación: ninguna"</string>
     <string name="last_export_file_location" msgid="4069435932524304633">"<xliff:g id="EXPORT_APP_NAME">%1$s</xliff:g> • <xliff:g id="EXPORT_FILE_NAME">%2$s</xliff:g>"</string>
-    <string name="scheduled_export" msgid="8737660963687364370">"Se programó la exportación"</string>
+    <string name="scheduled_export" msgid="8737660963687364370">"Exportación programada"</string>
     <string name="import_data" msgid="404502315533233094">"Importar datos"</string>
     <string name="import_data_description" msgid="4040178599441724296">"Restablece datos desde un archivo exportado anteriormente"</string>
     <string name="import_error_banner_title" msgid="1480977889067027790">"No se pudieron restablecer los datos"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Reanuda la integración con Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Para preservar tus datos, completa el proceso en un plazo de <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Se debe actualizar la app"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"<xliff:g id="APP_NAME">%1$s</xliff:g> debe actualizarse para seguir sincronizándose con Health Connect"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Algunas apps deben actualizarse para seguir sincronizándose con Health Connect"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> debe actualizarse para seguir sincronizándose con Health Connect Es posible que no haya actualizaciones disponibles para todas las apps."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Algunas apps deben actualizarse para seguir sincronizándose con Health Connect. Es posible que no haya actualizaciones disponibles para todas las apps."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Comprueba si hay actualizaciones"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Más información"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Integración con Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Consulta las apps compatibles"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Busca más apps para sincronizar con <xliff:g id="APP_NAME">%s</xliff:g> a través de Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Ver en la tienda de aplicaciones"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Establece un bloqueo de pantalla"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Para proteger mejor tus datos de salud, establece un PIN, un patrón o una contraseña para este dispositivo"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Configurar bloqueo de pantalla"</string>
     <string name="select_all" msgid="837499881590001166">"Seleccionar todo"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Las apps conectadas ya no podrán leer estos datos de Health Connect"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Marcado"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"¿Quieres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a datos antiguos de actividad física y bienestar?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> solicitó acceso a <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nElige permitir el control total o individual de los datos."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"¿Quieres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Actividad física y bienestar"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"todo el tiempo"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"mientras está en uso"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Todo el tiempo"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Mientras está en uso"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> puede acceder a todos tus datos de actividad física y bienestar <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Se permite el acceso"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Permisos de lectura"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Estos permisos le otorgan a <xliff:g id="APP_NAME">%1$s</xliff:g> acceso a los datos de los sensores de tu dispositivo."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"Apps con permiso: <xliff:g id="NUMBER_0">%1$d</xliff:g> de <xliff:g id="OTHER_NUMBER">%2$d</xliff:g>"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"No hay apps que soliciten"</string>
+    <string name="allowed" msgid="4158456017482263737">"Permitido"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"No se permite"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Las apps que tienen este permiso pueden acceder a los datos de <xliff:g id="DATA_TYPE">%s</xliff:g> de los sensores de tu dispositivo."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"¿Quieres quitar el acceso a <xliff:g id="DATA_TYPE">%s</xliff:g> para todas las apps de tu reloj?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Marca de verificación"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Marca de tachado"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
