--- a/apk/res/values-fa/strings.xml
+++ b/apk/res/values-fa/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"دیروز"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"خواندن: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"نوشتن: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">"، "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"مدیریت اجازه‌ها"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"زمان: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"فعالیت"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"دمای پوست"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"خواندن دمای پوست"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"نوشتن دمای پوست"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"همه سوابق سلامتی"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"همه سوابق سلامتی"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"نوشتن همه سوابق سلامتی"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"عارضه‌ها"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"عارضه‌ها"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"خواندن عارضه‌ها"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"واکسن‌ها"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"واکسن‌ها"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"خواندن واکسن‌ها"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"نتایج آزمایشگاه"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"نتایج آزمایشگاه"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"خواندن نتایج آزمایشگاه"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"اگر اجازه دسترسی بدهید، این برنامه می‌تواند داده‌هایی مثل حساسیت‌ها، نتایج آزمایشگاه، واکسن‌ها، و موارد دیگر را بخواند و بنویسد\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"اگر اجازه دسترسی بدهید، این برنامه می‌تواند داده‌هایی مثل حساسیت‌ها، نتایج آزمایشگاه، واکسن‌ها، و موارد دیگر را بخواند\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"درباره سوابق سلامتی"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"داده‌هایی که هم‌رسانی می‌شود"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"اگر اجازه دهید، <xliff:g id="APP_NAME">%1$s</xliff:g> می‌تواند سوابق سلامتی شما را با Health Connect هم‌رسانی کند."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"سوابق سلامتی خود را از برنامه‌ها و منابع مختلف همگام‌سازی کنید تا آن‌ها را در یک مکان داشته باشید"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"همه اجازه‌ها برداشته شود؟"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"این برنامه‌ها دیگر دسترسی ندارند، اما همچنان داده ذخیره‌شده در Health Connect دارند"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"‫«<xliff:g id="APP_NAME">%1$s</xliff:g>» می‌تواند داده‌های اضافه‌شده بعداز <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> را بخواند"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"برای مدیریت سایر اجازه‌های Android که این برنامه می‌تواند به آن‌ها دسترسی داشته باشد، به «تنظیمات &gt; برنامه‌ها» بروید"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"داده‌هایی که با <xliff:g id="APP_NAME">%1$s</xliff:g> هم‌رسانی می‌کنید تحت‌پوشش خط‌مشی رازداری آن است"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"در خط‌مشی رازداری توسعه‌دهنده <xliff:g id="APP_NAME">%1$s</xliff:g>، می‌توانید با نحوه مدیریت داده‌هایتان توسط این برنامه آشنا شوید"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"برای مدیریت دیگر اجازه‌های Android که این برنامه می‌تواند به آن‌ها دسترسی داشته باشد، به «تنظیمات» بروید و روی «برنامه‌ها» تک‌ضرب بزنید"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"خواندن خط‌مشی رازداری"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"آخرین دسترسی: در ۲۴ ساعت گذشته"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"ازسرگیری یکپارچه‌سازی Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"برای حفظ داده‌ها، این فرایند را ظرف <xliff:g id="TIME_NEEDED">%1$s</xliff:g> آینده تکمیل کنید"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"به‌روزرسانی برنامه لازم است"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"‫<xliff:g id="APP_NAME">%1$s</xliff:g> برای ادامه همگام‌سازی با Health Connect باید به‌روزرسانی شود"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"برخی‌از برنامه‌ها برای ادامه همگام‌سازی با Health Connect باید به‌روزرسانی شوند"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"‫<xliff:g id="APP_NAME">%1$s</xliff:g> برای ادامه همگام‌سازی با Health Connect باید به‌روز شود. ممکن است به‌روزرسانی‌ها برای همه برنامه‌ها دردسترس نباشد."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"برخی‌از برنامه‌ها برای ادامه همگام‌سازی با Health Connect باید به‌روز شوند. ممکن است به‌روزرسانی‌ها برای همه برنامه‌ها دردسترس نباشد."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"به‌روزرسانی‌ها را بررسی کنید"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"بیشتر بدانید"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"یکپارچه‌سازی Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"برنامه‌های سازگار را ببینید"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"برنامه‌های بیشتری را برای همگام‌سازی با <xliff:g id="APP_NAME">%s</xliff:g> ازطریق Health Connect پیدا کنید"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"مشاهده در فروشگاه برنامه"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"قفل صفحه تنظیم کنید"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"برای امنیت بیشتر داده‌های سلامتی‌تان، پین، الگو، یا گذرواژه‌ای برای این دستگاه تنظیم کنید"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"تنظیم قفل صفحه"</string>
     <string name="select_all" msgid="837499881590001166">"انتخاب همه"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"برنامه‌های متصل دیگر نمی‌توانند این داده‌ها را از Health Connect بخوانند"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"دارای علامت"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"به <xliff:g id="APP_NAME">%1$s</xliff:g> اجازه می‌دهید به داده‌های تناسب اندام و تندرستی دسترسی داشته باشد؟"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> درخواست دسترسی به «<xliff:g id="DATA_TYPES">%2$s</xliff:g>» را دارد.\n\nمجاز کردن همه را انتخاب کنید یا آن‌ها را به‌صورت مجزا کنترل کنید."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"به <xliff:g id="APP_NAME">%1$s</xliff:g> اجازه دسترسی به <xliff:g id="DATA_TYPE">%2$s</xliff:g> داده شود؟"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"تناسب اندام و تندرستی"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"همیشه"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"درحین استفاده"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"همیشه"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"درحین استفاده"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"«‫<xliff:g id="APP_NAME">%1$s</xliff:g>» می‌تواند <xliff:g id="ALLOW_MODE">%2$s</xliff:g> به همه داده‌های تناسب اندام و سلامتی شما دسترسی داشته باشد"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"مجاز به دسترسی داشتن"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"مجاز به خواندن"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"با این اجازه‌ها «<xliff:g id="APP_NAME">%1$s</xliff:g>» می‌تواند به داده‌ها از حسگرهای دستگاهتان دسترسی داشته باشد."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"‫<xliff:g id="NUMBER_0">%1$d</xliff:g> برنامه از <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> برنامه مجاز است"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"برنامه‌ای درخواست نکرده است"</string>
+    <string name="allowed" msgid="4158456017482263737">"مجاز"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"مجاز نبودن"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"برنامه‌های دارای این اجازه می‌توانند به داده‌های <xliff:g id="DATA_TYPE">%s</xliff:g> از حسگرهای دستگاهتان دسترسی داشته باشند."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"دسترسی به <xliff:g id="DATA_TYPE">%s</xliff:g> برای همه برنامه‌های روی ساعت برداشته شود؟"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"علامت تأیید"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"علامت ضربدر"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
