--- a/apk/res/values-gl/strings.xml
+++ b/apk/res/values-gl/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Onte"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Ler: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Escribir: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Xestionar permisos"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Hora: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Actividade"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura cutánea"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Ler temperatura cutánea"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Escribir temperatura cutánea"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Todos os rexistros de información sanitaria"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"todos os rexistros de información sanitaria"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Escribir todos os rexistros de información sanitaria"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Condicións"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"condicións"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Ler as condicións"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Vacinas"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"vacinas"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Ler os datos das vacinas"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Resultados das análises"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"resultados das análises"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Ler os resultados das análises"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Se permites o acceso, a aplicación poderá ler e escribir datos relacionados coas alerxias, cos resultados das análises e coas vacinas, entre outra información\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Se permites o acceso, a aplicación poderá ler datos relacionados coas alerxias, cos resultados das análises e coas vacinas, entre outra información\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Acerca dos rexistros de información sanitaria"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Datos que se poden compartir"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Se dás permiso, <xliff:g id="APP_NAME">%1$s</xliff:g> poderá compartir os teus rexistros de información sanitaria con Saúde conectada."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sincroniza os rexistros de información sanitaria das distintas aplicacións e fontes para gardalos nun só lugar"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Queres quitar todos os permisos?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Estas aplicacións xa non teñen acceso a Saúde conectada, pero aínda teñen datos almacenados alí"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> pode ler os datos engadidos a partir do <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Para xestionar outros permisos de Android aos que teña acceso esta aplicación, vai a Configuración &gt; Aplicacións"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Os datos que compartes con <xliff:g id="APP_NAME">%1$s</xliff:g> están suxeitos á súa política de privacidade"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Podes consultar como xestiona <xliff:g id="APP_NAME">%1$s</xliff:g> os teus datos na política de privacidade do programador"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Para xestionar outros permisos de Android aos que teña acceso esta aplicación, vai a Configuración e, a continuación, toca Aplicacións"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Consultar a política de privacidade"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"O último acceso produciuse nas últimas 24 horas"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Retoma a integración de Saúde conectada"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Para manter os teus datos, completa esta acción no prazo de <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"É necesario actualizar a aplicación"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Cómpre actualizar <xliff:g id="APP_NAME">%1$s</xliff:g> para continuar a sincronización con Saúde conectada"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Cómpre actualizar algunhas aplicacións para continuar a sincronización con Saúde conectada"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Cómpre actualizar <xliff:g id="APP_NAME">%1$s</xliff:g> para continuar a sincronización con Saúde conectada. É posible que as actualizacións non estean dispoñibles para todas as aplicacións."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Cómpre actualizar algunhas aplicacións para continuar a sincronización con Saúde conectada. É posible que as actualizacións non estean dispoñibles para todas as aplicacións."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Buscar actualizacións"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Máis información"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Integración de Saúde conectada"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Consulta as aplicacións compatibles"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Atopa máis aplicacións que sincronizar con <xliff:g id="APP_NAME">%s</xliff:g> a través de Saúde conectada"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Ver na tenda de aplicacións"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Define un bloqueo de pantalla"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Para que os datos sobre a túa saúde dispoñan de maior seguranza, define un PIN, un padrón ou un contrasinal para este dispositivo"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Definir bloqueo de pantalla"</string>
     <string name="select_all" msgid="837499881590001166">"Seleccionar todo"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"As aplicacións conectadas xa non poderán ler estes datos de Saúde conectada"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Caixa marcada"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Queres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda aos datos de actividade física e benestar?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> solicita permiso para acceder aos seguintes datos: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nDecide se queres dar todos os permisos ou controlalos por separado."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Queres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a este tipo de datos: <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Forma física e benestar"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"sempre"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"durante o seu uso"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Sempre"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Durante o seu uso"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> pode acceder <xliff:g id="ALLOW_MODE">%2$s</xliff:g> a todos os teus datos de forma física e benestar"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Con permiso de acceso"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Con permiso de lectura"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Con estes permisos, a aplicación <xliff:g id="APP_NAME">%1$s</xliff:g> pode acceder aos datos dos sensores do teu dispositivo."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="NUMBER_0">%1$d</xliff:g> de <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> aplicacións con permiso"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Non hai ningunha solicitude por parte das aplicacións"</string>
+    <string name="allowed" msgid="4158456017482263737">"Con permiso"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Sen permiso"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"As aplicacións que conten con este permiso poderán acceder a este tipo de datos (<xliff:g id="DATA_TYPE">%s</xliff:g>) dos sensores do teu dispositivo."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Queres quitarlles o acceso a este tipo de datos (<xliff:g id="DATA_TYPE">%s</xliff:g>) a todas as aplicacións do teu reloxo?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Marca de verificación"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Cruz"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
