--- a/apk/res/values-is/strings.xml
+++ b/apk/res/values-is/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Í gær"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Lesa: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Skrifa: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Stjórna heimildum"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Tími: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Hreyfing"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"hitastig húðar"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Lesa hitastig húðar"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Skrifa hitastig húðar"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Öll heilsufarsgögn"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"öll heilsufarsgögn"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Skrifa öll heilsufarsgögn"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Skilmálar"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"skilmálar"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Lesa skilmála"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Upplýsingar um bólusetningar"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"upplýsingar um bólusetningar"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Lesa upplýsingar um bólusetningar"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Rannsóknarniðurstöður"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"rannsóknarniðurstöður"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Lesa rannsóknarniðurstöður"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Ef þú veitir forritinu aðgang getur það lesið og skrifað gögn á borð við upplýsingar um ofnæmi, rannsóknarniðurstöður, bólusetningar og fleira\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Ef þú veitir forritinu aðgang getur það lesið gögn á borð við upplýsingar um ofnæmi, rannsóknarniðurstöður, bólusetningar og fleira\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Um heilsufarsgögn"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Gögn sem þú vilt deila"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Ef þú veitir <xliff:g id="APP_NAME">%1$s</xliff:g> aðgang getur forritið deilt heilsufarsgögnunum þínum með Heilsutengingu."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Samstilltu heilsufarsgögnin þín úr mismunandi forritum og af mismunandi upprunum til að nálgast þau á einum stað"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Fjarlægja allar heimildir?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Þessi forrit hafa ekki lengur aðgang en gögn frá þeim eru enn vistuð í Heilsutengingu"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> getur lesið gögn sem bætt hefur verið við eftir <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Til að stjórna öðrum Android-heimildum sem þetta forrit hefur aðgang að skaltu fara í „Stillingar &gt; Forrit“"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Gögn sem þú deilir með <xliff:g id="APP_NAME">%1$s</xliff:g> falla undir persónuverndarstefnu viðkomandi forrits"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Kynntu þér hvernig <xliff:g id="APP_NAME">%1$s</xliff:g> meðhöndlar gögnin þín í persónuverndarstefnu þróunaraðilans"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Til að stjórna öðrum Android-heimildum sem þetta forrit hefur aðgang að skaltu fara í stillingar og ýta á „Forrit“"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Lesa persónuverndarstefnuna"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Opnað síðasta sólarhringinn"</string>
@@ -472,7 +471,7 @@
     <string name="last_export_time_hours_ago" msgid="3174986640795245343">"{count,plural, =1{Síðasti útflutningur: fyrir einni klukkustund}one{Síðasti útflutningur: fyrir # klukkustund}other{Síðasti útflutningur: fyrir # klukkustundum}}"</string>
     <string name="no_last_export_message" msgid="8138900854579872667">"Síðasti útflutningur: ekkert"</string>
     <string name="last_export_file_location" msgid="4069435932524304633">"<xliff:g id="EXPORT_APP_NAME">%1$s</xliff:g> • <xliff:g id="EXPORT_FILE_NAME">%2$s</xliff:g>"</string>
-    <string name="scheduled_export" msgid="8737660963687364370">"Tímasettur útflutningur"</string>
+    <string name="scheduled_export" msgid="8737660963687364370">"Áætlaður útflutningur"</string>
     <string name="import_data" msgid="404502315533233094">"Flytja inn gögn"</string>
     <string name="import_data_description" msgid="4040178599441724296">"Endurheimtu gögn úr skrá sem hefur áður verið flutt út"</string>
     <string name="import_error_banner_title" msgid="1480977889067027790">"Tókst ekki að endurheimta gögn"</string>
@@ -492,7 +491,7 @@
     <string name="choose_frequency_category" msgid="9094154407387676553">"Breyta tíðni"</string>
     <string name="scheduled_export_settings_footer_text" msgid="8488483803782086291">"Áður útfluttum gögnum verður ekki eytt þaðan sem þau voru vistuð þegar þú slekkur á áætluðum útflutningi"</string>
     <string name="choose_frequency" msgid="8119085390857180221">"Settu upp áætlaðan útflutning"</string>
-    <string name="choose_frequency_description" msgid="7698155810053504157">"Veldu hversu reglulega gögnin þín verða flutt út"</string>
+    <string name="choose_frequency_description" msgid="7698155810053504157">"Veldu hversu oft gögnin þín verða flutt út"</string>
     <string name="frequency_daily" msgid="3596412357416125727">"Daglega"</string>
     <string name="frequency_weekly" msgid="7302587625019573393">"Vikulega"</string>
     <string name="frequency_monthly" msgid="729674398053825938">"Mánaðarlega"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Halda samþættingu Heilsutengingar áfram"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Ljúktu þessu innan <xliff:g id="TIME_NEEDED">%1$s</xliff:g> til að halda gögnunum þínum."</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Uppfærslu forrits krafist"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Þú þarft að uppfæra <xliff:g id="APP_NAME">%1$s</xliff:g> til að geta haldið áfram að samstilla við Heilsutengingu"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Þú þarft að uppfæra einhver forrit til að geta haldið áfram að samstilla við Heilsutengingu"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Þú þarft að uppfæra <xliff:g id="APP_NAME">%1$s</xliff:g> til að geta haldið áfram að samstilla við Heilsutengingu. Uppfærslur eru hugsanlega ekki í boði fyrir öll forrit."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Þú þarft að uppfæra einhver forrit til að geta haldið áfram að samstilla við Heilsutengingu. Uppfærslur eru hugsanlega ekki í boði fyrir öll forrit."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Leita að uppfærslum"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Nánar"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Samþætting Heilsutengingar"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Sjá samhæf forrit"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Finna fleiri forrit til að samstilla með <xliff:g id="APP_NAME">%s</xliff:g> í gegnum Heilsutengingu"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Sjá í forritaverslun"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Stilltu skjálás"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Stilltu PIN-númer, mynstur eða aðgangsorð í tækinu til að auka öryggi heilsugagnanna þinna"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Stilla skjálás"</string>
     <string name="select_all" msgid="837499881590001166">"Velja allt"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Tengd forrit munu ekki lengur geta opnað þessi gögn Heilsutengingar"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Valið"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Veita <xliff:g id="APP_NAME">%1$s</xliff:g> aðgang að gögnum um hreysti og vellíðan?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> biður um aðgang að <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nVeldu að leyfa allt eða stjórnaðu þeim hverju fyrir sig."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Viltu veita <xliff:g id="APP_NAME">%1$s</xliff:g> aðgang að <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Hreysti og vellíðan"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"hvenær sem er"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"á meðan forritið er í notkun"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Hvenær sem er"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Á meðan forritið er í notkun"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> getur skoðað öll heilsu- og hreystigögnin þín <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Með aðgang"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Má lesa"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Þessar heimildir veita <xliff:g id="APP_NAME">%1$s</xliff:g> aðgang að gögnum frá skynjurum tækisins."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="NUMBER_0">%1$d</xliff:g> af <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> forritum eru með aðgang"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Ekkert forrit biður um heimild"</string>
+    <string name="allowed" msgid="4158456017482263737">"Heimild veitt"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Heimild ekki veitt"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Forrit með þessa heimild hafa aðgang að gögnum um <xliff:g id="DATA_TYPE">%s</xliff:g> frá skynjurum tækisins."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Fjarlægja aðgang allra forrita í úrinu að gögnum um <xliff:g id="DATA_TYPE">%s</xliff:g>?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Gátmerki"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Kross"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
