--- a/apk/res/values-iw/strings.xml
+++ b/apk/res/values-iw/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"אתמול"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"קריאה: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"כתיבה: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"ניהול הרשאות"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"זמן: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"פעילות"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"טמפרטורת העור"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"קריאה של טמפרטורת העור"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"כתיבה של טמפרטורת העור"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"כל הסיכומים על המצב הבריאותי"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"כל הסיכומים על המצב הבריאותי"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"אישור לכתיבה של כל הסיכומים על המצב הבריאותי"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"תנאים"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"תנאים"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"קריאת התנאים"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"חיסונים"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"חיסונים"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"קריאה של נתוני החיסונים"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"תוצאות בדיקות מעבדה"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"תוצאות בדיקות מעבדה"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"קריאה של תוצאות בדיקות מעבדה"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"אם הגישה תאושר, האפליקציה תוכל לקרוא ולכתוב נתונים כמו אלרגיות, תוצאות של בדיקות מעבדה, חיסונים ועוד\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"אם הגישה תאושר, האפליקציה תוכל לקרוא נתונים כמו אלרגיות, תוצאות של בדיקות מעבדה, חיסונים ועוד\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"מידע לגבי הסיכומים על המצב הבריאותי"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"נתונים לשיתוף"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"אם תינתן הרשאה, האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> תוכל לשתף את הסיכומים על המצב הבריאותי שלך עם Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"אפשר לסנכרן את הסיכומים על המצב הבריאותי שלך מהאפליקציות ומהמקורות השונים כדי לשמור אותם במקום אחד"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"להסיר את כל ההרשאות?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"לאפליקציות האלה כבר אין גישה, אבל עדיין יש להן נתונים מאוחסנים ב-Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> יכולה לקרוא נתונים שנוספו אחרי <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"כדי לנהל הרשאות Android אחרות שיש לאפליקציה הזו גישה אליהן, עוברים אל \'הגדרות\' &gt; \'אפליקציות\'"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"הנתונים שמשותפים עם אפליקציית <xliff:g id="APP_NAME">%1$s</xliff:g> כפופים למדיניות הפרטיות שלה"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"במדיניות הפרטיות של המפתח מוסבר איך האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> מטפלת בנתונים שלך"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"כדי לנהל הרשאות Android אחרות שיש לאפליקציה הזו גישה אליהן, עוברים ל\'הגדרות\' ומקישים על \'אפליקציות\'"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"לעיון במדיניות הפרטיות"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"הייתה גישה ב-24 השעות האחרונות"</string>
@@ -531,7 +530,7 @@
     <string name="export_cancel_button" msgid="1952360582645412410">"ביטול"</string>
     <string name="import_cancel_button" msgid="2191598074422096715">"ביטול"</string>
     <string name="import_next_button" msgid="5706322508691854289">"הבא"</string>
-    <string name="import_source_location_title" msgid="4444467438013749461">"ייבוא מ-"</string>
+    <string name="import_source_location_title" msgid="4444467438013749461">"מהיכן לייבא"</string>
     <string name="import_invalid_storage" msgid="341798262315495399">"צריך לבחור אפליקציית אחסון בענן לייבוא הנתונים"</string>
     <string name="export_import_tap_to_choose_account" msgid="5016799636886709580">"כדי לבחור חשבון צריך להקיש עליו"</string>
     <string name="export_import_choose_account_title" msgid="1047021319012735232">"בחירת חשבון"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"המשך השילוב של Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"כדי שהנתונים שלך יישמרו, עליך להשלים זאת בתוך <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"נדרש עדכון לאפליקציה"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"צריך לעדכן את אפליקציית <xliff:g id="APP_NAME">%1$s</xliff:g> כדי להמשיך בסנכרון עם Health Connect"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"צריך לעדכן אפליקציות מסוימות כדי להמשיך בסנכרון עם Health Connect"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"צריך לעדכן את אפליקציית <xliff:g id="APP_NAME">%1$s</xliff:g> כדי להמשיך בסנכרון עם Health Connect. יכול להיות שהעדכונים לא זמינים לכל האפליקציות."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"צריך לעדכן אפליקציות מסוימות כדי להמשיך בסנכרון עם Health Connect. יכול להיות שהעדכונים לא זמינים לכל האפליקציות."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"חיפוש עדכונים"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"מידע נוסף"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"שילוב Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"לעיון באפליקציות התואמות"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"כדאי לחפש עוד אפליקציות שמסתנכרנות עם <xliff:g id="APP_NAME">%s</xliff:g> דרך Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"לעיון בחנות האפליקציות"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"הגדרה של נעילת מסך"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"כדי לשפר את האבטחה של נתוני הבריאות, מומלץ להגדיר קוד אימות, קו ביטול נעילה או סיסמה למכשיר הזה"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"הגדרת נעילת מסך"</string>
     <string name="select_all" msgid="837499881590001166">"בחירת הכול"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"האפליקציות המקושרות לא יוכלו יותר לקרוא את הנתונים האלה מ-Health Connect"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"מסומנת"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"לתת לאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> הרשאת גישה לנתוני כושר ובריאות?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> מבקשת גישה אל <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nאפשר לבחור אם לאשר הכול או לשלוט בהרשאות בנפרד."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"לתת לאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> גישה אל <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"כושר ובריאות"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"כל הזמן"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"בזמן השימוש"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"כל הזמן"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"בזמן השימוש"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"לאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> יש גישה לכל נתוני הכושר והבריאות שלך <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"יש הרשאת גישה"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"יש הרשאת קריאה"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"ההרשאות האלה נותנות לאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> גישה לנתונים מהחיישנים במכשיר."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"‫<xliff:g id="NUMBER_0">%1$d</xliff:g> מתוך <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> אפליקציות קיבלו הרשאה"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"אין בקשה מאף אפליקציה"</string>
+    <string name="allowed" msgid="4158456017482263737">"יש הרשאה"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"אין הרשאה"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"אפליקציות עם ההרשאה הזו יכולות לגשת לנתוני <xliff:g id="DATA_TYPE">%s</xliff:g> מהחיישנים במכשיר."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"להסיר את הרשאות הגישה לנתוני <xliff:g id="DATA_TYPE">%s</xliff:g> מכל האפליקציות בשעון?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"סימן וי"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"סימן איקס"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
