--- a/apk/res/values-km/strings.xml
+++ b/apk/res/values-km/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"ម្សិលមិញ"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"អាន៖ <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"សរសេរ៖ <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"គ្រប់គ្រង​ការអនុញ្ញាត"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"ម៉ោង៖ <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"សកម្មភាព"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"សីតុណ្ហភាពស្បែក"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"អានសីតុណ្ហភាពស្បែក"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"សរសេរសីតុណ្ហភាពស្បែក"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"កំណត់ត្រាសុខភាពទាំងអស់"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"កំណត់ត្រាសុខភាពទាំងអស់"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"សរសេរកំណត់ត្រាសុខភាពទាំងអស់"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"លក្ខខណ្ឌ"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"លក្ខខណ្ឌ"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"អានលក្ខខណ្ឌ"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"វ៉ាក់សាំង"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"វ៉ាក់សាំង"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"អាន​វ៉ាក់សាំង"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"លទ្ធផល​ពីមន្ទីរពិសោធន៍"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"លទ្ធផល​ពីមន្ទីរពិសោធន៍"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"អាន​លទ្ធផល​ពីមន្ទីរពិសោធន៍"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"ប្រសិនបើអ្នកផ្ដល់សិទ្ធិចូលប្រើ កម្មវិធីអាចអាន និងសរសេរទិន្នន័យ ដូចជាអាឡែហ្ស៊ី លទ្ធផលមន្ទីរពិសោធន៍ វ៉ាក់សាំង និងអ្វីៗជាច្រើនទៀត\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"ប្រសិនបើអ្នកផ្ដល់សិទ្ធិចូលប្រើ កម្មវិធីអាចអានទិន្នន័យ ដូចជាអាឡែហ្ស៊ី លទ្ធផលមន្ទីរពិសោធន៍ វ៉ាក់សាំង និងអ្វីៗជាច្រើនទៀត\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"អំពីកំណត់ត្រាសុខភាព"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"ទិន្នន័យសម្រាប់ចែករំលែក"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"ប្រសិនបើអ្នកអនុញ្ញាត <xliff:g id="APP_NAME">%1$s</xliff:g> អាចចែករំលែកកំណត់ត្រាសុខភាពរបស់អ្នកជាមួយ Health Connect។"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"ធ្វើសមកាលកម្មកំណត់ត្រាសុខភាពរបស់អ្នកពីប្រភព និងកម្មវិធីផ្សេងៗរបស់អ្នក ដើម្បីរក្សាទុកកំណត់ត្រាទាំងនេះក្នុងកន្លែងតែមួយ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ដក​ការអនុញ្ញាត​ទាំងអស់​ឬ?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"កម្មវិធីទាំងនេះ​លែង​មាន​សិទ្ធិ​ចូល​ប្រើប្រាស់​ទៀតហើយ ប៉ុន្តែ​នៅតែ​រក្សាទុក​ទិន្នន័យ​នៅក្នុង Health Connect ដដែល"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> អាចអានទិន្នន័យ​ដែលបានបញ្ចូល​ក្រោយថ្ងៃទី <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"ដើម្បីគ្រប់គ្រងការអនុញ្ញាត Android ផ្សេងទៀតដែលកម្មវិធីនេះអាចចូលប្រើប្រាស់ សូមចូលទៅកាន់ការកំណត់ &gt; កម្មវិធី"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"ទិន្នន័យដែលអ្នកចែករំលែកជាមួយ <xliff:g id="APP_NAME">%1$s</xliff:g> ត្រូវអនុលោមតាមគោលការណ៍ឯកជនភាពរបស់វា"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"អ្នកអាចស្វែងយល់អំពីរបៀបដែល <xliff:g id="APP_NAME">%1$s</xliff:g> ចាត់ចែងទិន្នន័យរបស់អ្នកនៅក្នុងគោលការណ៍ឯកជនភាពរបស់អ្នកអភិវឌ្ឍន៍"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"ដើម្បីគ្រប់គ្រងការអនុញ្ញាត Android ផ្សេងទៀតដែលកម្មវិធីនេះអាចចូលប្រើប្រាស់ សូមចូលទៅកាន់ការកំណត់ រួចចុចកម្មវិធី"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"អានគោលការណ៍ឯកជនភាព"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"បានចូលប្រើក្នុងរយៈពេល 24 ម៉ោងចុងក្រោយ"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"បន្តការរួមបញ្ចូល Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"ដើម្បីរក្សាទុក​ទិន្នន័យរបស់អ្នក សូមបញ្ចប់​សកម្មភាពនេះក្នុងរយៈពេល <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"តម្រូវឱ្យមានកំណែថ្មី​របស់កម្មវិធី"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"ចាំបាច់ត្រូវដំឡើងកំណែ <xliff:g id="APP_NAME">%1$s</xliff:g> ដើម្បីបន្តការធ្វើសមកាលកម្មជាមួយ Health Connect"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"ចាំបាច់ត្រូវដំឡើងកំណែកម្មវិធីមួយចំនួន ដើម្បីបន្តការធ្វើសមកាលកម្មជាមួយ Health Connect"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"ចាំបាច់ត្រូវដំឡើងកំណែ <xliff:g id="APP_NAME">%1$s</xliff:g> ដើម្បីបន្តការធ្វើសមកាលកម្មជាមួយ Health Connect។ កំណែថ្មីៗប្រហែលមិនមានសម្រាប់កម្មវិធីទាំងអស់ទេ។"</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"ចាំបាច់ត្រូវដំឡើងកំណែកម្មវិធីមួយចំនួន ដើម្បីបន្តការធ្វើសមកាលកម្មជាមួយ Health Connect។ កំណែថ្មីៗប្រហែលមិនមានសម្រាប់កម្មវិធីទាំងអស់ទេ។"</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"រក​មើល​កំណែ​ថ្មី"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"ស្វែងយល់បន្ថែម"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"ការរួមបញ្ចូល Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"មើលកម្មវិធីដែលត្រូវគ្នា"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"ស្វែងរកកម្មវិធីច្រើនទៀត ដើម្បីធ្វើសមកាលកម្មជាមួយ <xliff:g id="APP_NAME">%s</xliff:g> តាមរយៈ Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"មើលនៅលើហាង​កម្មវិធី"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"កំណត់​ការចាក់​សោអេក្រង់"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"ដើម្បីសុវត្ថិភាពបន្ថែមសម្រាប់ទិន្នន័យសុខភាពរបស់អ្នក សូមកំណត់កូដ PIN, លំនាំ ឬពាក្យ​សម្ងាត់សម្រាប់ឧបករណ៍នេះ"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"កំណត់​ការចាក់​សោ​អេក្រង់"</string>
     <string name="select_all" msgid="837499881590001166">"ជ្រើស​រើសទាំង​អស់"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"កម្មវិធីដែលបានភ្ជាប់នឹងមិនអាចអានទិន្នន័យនេះពី Health Connect បានទៀតទេ"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"បាន​ធីក"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"អនុញ្ញាតឱ្យ <xliff:g id="APP_NAME">%1$s</xliff:g> ចូលប្រើទិន្នន័យសម្បទា និងសុខុមាលភាពឬ?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> កំពុងស្នើសុំសិទ្ធិចូលប្រើ <xliff:g id="DATA_TYPES">%2$s</xliff:g>។\n\nសូមជ្រើសរើសអនុញ្ញាតទាំងអស់ ឬគ្រប់គ្រងការអនុញ្ញាតដាច់ដោយឡែកពីគ្នា។"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"អនុញ្ញាតឱ្យ <xliff:g id="APP_NAME">%1$s</xliff:g> ចូលប្រើ <xliff:g id="DATA_TYPE">%2$s</xliff:g> ឬ?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"សម្បទា និងសុខុមាលភាព"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"គ្រប់ពេល"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ពេលកំពុងប្រើ"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"គ្រប់ពេល"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ពេលកំពុងប្រើ"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> អាចចូលប្រើទិន្នន័យសម្បទា និងសុខមាលភាពទាំងអស់របស់អ្នក<xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"បានអនុញ្ញាតឱ្យចូលប្រើ"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"បានអនុញ្ញាតឱ្យអាន"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"ការ​អនុញ្ញាតទាំងនេះផ្ដល់សិទ្ធិឱ្យ <xliff:g id="APP_NAME">%1$s</xliff:g> ចូលប្រើទិន្នន័យពីសេនស័រឧបករណ៍របស់អ្នក។"</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"បានអនុញ្ញាតកម្មវិធី <xliff:g id="NUMBER_0">%1$d</xliff:g> នៃ <xliff:g id="OTHER_NUMBER">%2$d</xliff:g>"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"គ្មានកម្មវិធីដែលកំពុងស្នើសុំទេ"</string>
+    <string name="allowed" msgid="4158456017482263737">"បាន​អនុញ្ញាត"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"មិនបានអនុញ្ញាត"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"កម្មវិធីដែលមានការអនុញ្ញាតនេះអាចចូលប្រើទិន្នន័យ <xliff:g id="DATA_TYPE">%s</xliff:g> ពីសេនស័រឧបករណ៍របស់អ្នក។"</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ដកសិទ្ធិចូលប្រើ <xliff:g id="DATA_TYPE">%s</xliff:g> សម្រាប់កម្មវិធីទាំងអស់នៅលើនាឡិការបស់អ្នកឬ?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"សញ្ញា​ធីក"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"សញ្ញា​ខ្វែង"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
