--- a/apk/res/values-ko/strings.xml
+++ b/apk/res/values-ko/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"어제"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"읽기: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"쓰기: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"권한 관리"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"시간: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"활동"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"피부 온도"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"피부 온도 읽기"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"피부 온도 쓰기"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"모든 건강 기록"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"모든 건강 기록"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"모든 건강 기록 작성"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"조건"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"조건"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"조건 읽기"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"백신"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"백신"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"백신 데이터 읽기"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"실험실 결과"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"실험실 결과"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"실험실 결과 읽기"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"액세스 권한을 부여하면 앱에서 알레르기, 임상 결과, 백신 등과 같은 데이터를 읽고 쓸 수 있습니다\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"액세스 권한을 부여하면 앱에서 알레르기, 임상 결과, 백신 등과 같은 데이터를 읽을 수 있습니다\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"건강 기록에 관한 정보"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"공유할 데이터"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"허용하면 <xliff:g id="APP_NAME">%1$s</xliff:g>에서 헬스 커넥트와 건강 기록을 공유할 수 있습니다."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"다양한 앱과 소스의 건강 기록을 동기화하여 한곳에 보관합니다."</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"모든 권한을 삭제하시겠습니까?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"앱의 액세스 권한은 취소되었지만 데이터는 계속해서 헬스 커넥트에 저장됩니다."</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱은 <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> 이후 추가된 데이터를 읽을 수 있습니다."</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"앱이 액세스할 수 있는 다른 Android 권한을 관리하려면 설정 &gt; 앱으로 이동하세요."</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱과 공유하는 데이터에는 앱의 개인정보처리방침이 적용됩니다."</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 개발자의 개인정보처리방침에 따라 데이터를 처리하는 방식을 알아볼 수 있습니다."</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"앱이 액세스할 수 있는 다른 Android 권한을 관리하려면 설정으로 이동한 다음 앱을 탭하세요."</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"개인정보처리방침 읽기"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"지난 24시간 이내에 액세스함"</string>
@@ -482,7 +481,7 @@
     <string name="import_version_mismatch_error_banner_summary" msgid="6165550114170534795">"헬스 커넥트가 데이터를 복원할 수 있도록 시스템을 업데이트한 다음 다시 시도하세요."</string>
     <string name="import_other_error_banner_button" msgid="8006947649520909176">"다시 시도"</string>
     <string name="import_other_error_banner_summary" msgid="4378957063605649197">"내보내기에서 데이터를 복원하는 동안 문제가 발생했습니다."</string>
-    <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"내보내기를 사용하면 데이터를 저장하여 새 휴대전화로 데이터를 전송할 수 있습니다."</string>
+    <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"내보내기 기능을 사용하면 데이터를 저장하여 새 휴대전화로 전송할 수 있습니다."</string>
     <string name="backup_and_restore_footer_link_text" msgid="9075133737244288876">"백업 및 복원 정보"</string>
     <string name="automatic_export_status" msgid="4407131306281440230">"<xliff:g id="EXPORT_ON_OR_OFF">%1$s</xliff:g> • <xliff:g id="EXPORT_FREQUENCY">%2$s</xliff:g>"</string>
     <string name="automatic_export_on" msgid="6972389773963624315">"사용"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"헬스 커넥트 통합 재개"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"데이터를 유지하려면 <xliff:g id="TIME_NEEDED">%1$s</xliff:g> 이내에 완료하세요."</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"앱 업데이트 필요"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"헬스 커넥트와 계속 동기화하려면 <xliff:g id="APP_NAME">%1$s</xliff:g> 앱을 업데이트해야 합니다."</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"헬스 커넥트와 계속 동기화하려면 일부 앱을 업데이트해야 합니다."</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"헬스 커넥트와 계속 동기화하려면 <xliff:g id="APP_NAME">%1$s</xliff:g> 앱을 업데이트해야 합니다. 앱에 따라 업데이트가 지원되지 않을 수도 있습니다."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"헬스 커넥트와 계속 동기화하려면 일부 앱을 업데이트해야 합니다. 앱에 따라 업데이트가 지원되지 않을 수도 있습니다."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"업데이트 확인"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"자세히 알아보기"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"헬스 커넥트 통합"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"호환 가능한 앱 보기"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"헬스 커넥트를 통해 <xliff:g id="APP_NAME">%s</xliff:g> 앱과 동기화할 앱 더보기"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"앱 스토어에서 보기"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"화면 잠금 설정"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"건강 데이터의 보안을 강화하려면 기기의 PIN, 패턴 또는 비밀번호를 설정하세요."</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"화면 잠금 설정"</string>
     <string name="select_all" msgid="837499881590001166">"모두 선택"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"연결된 앱에서 더 이상 이 헬스 커넥트 데이터를 읽을 수 없게 됩니다."</string>
     <string name="a11y_checked" msgid="3685413382346589880">"선택됨"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 피트니스 및 웰니스 데이터에 액세스하도록 허용하시겠습니까?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 <xliff:g id="DATA_TYPES">%2$s</xliff:g>에 대한 액세스 권한을 요청합니다.\n\n모두 허용하도록 선택하거나, 권한을 개별적으로 제어하세요"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 <xliff:g id="DATA_TYPE">%2$s</xliff:g>에 액세스하도록 허용하시겠습니까?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"피트니스 및 웰빙"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"항상"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"사용 중일 때"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"항상"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"사용 중일 때"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 <xliff:g id="ALLOW_MODE">%2$s</xliff:g> 모든 피트니스 및 웰니스 데이터에 액세스할 수 있습니다."</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"액세스 허용됨"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"읽기 허용됨"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"이 권한을 통해 <xliff:g id="APP_NAME">%1$s</xliff:g>에서 기기 센서의 데이터에 액세스할 수 있습니다."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"앱 <xliff:g id="OTHER_NUMBER">%2$d</xliff:g>개 중 <xliff:g id="NUMBER_0">%1$d</xliff:g>개 허용됨"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"권한을 요청하는 앱 없음"</string>
+    <string name="allowed" msgid="4158456017482263737">"허용됨"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"허용되지 않음"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"이 권한이 있는 앱은 기기 센서의 <xliff:g id="DATA_TYPE">%s</xliff:g> 데이터에 액세스할 수 있습니다."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"시계의 모든 앱에서 <xliff:g id="DATA_TYPE">%s</xliff:g> 액세스 권한을 삭제하시겠습니까?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"체크표시"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"곱셈 기호"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
