--- a/apk/res/values-ky/strings.xml
+++ b/apk/res/values-ky/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Кечээ"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Окуу: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Жазуу: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Уруксаттарды башкаруу"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Убакыты: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Кыймылдуулук"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"теринин температурасы"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Теринин температурасын окуу"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Теринин температурасын жазуу"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Ден соолук жөнүндө бардык маалымат"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"ден соолук жөнүндө бардык маалымат"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Ден соолук жөнүндө бардык маалыматты жазуу"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Медициналык абал"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"медициналык абал"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Медициналык абалды окуу"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Эмдөөлөр"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"эмдөөлөр"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Эмдөөлөрдү окуу."</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Лабораториялык натыйжалар"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"лабораториялык натыйжалар"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Лабораториялык натыйжаларды окуу"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Эгер уруксат берсеңиз, колдонмо аллергия, лабораториялык натыйжалар, вакциналар жана башка маалыматтарды окуп жана жаза алат\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Эгер уруксат берсеңиз, колдонмо аллергия, лабораториялык натыйжалар, вакциналар жана башка маалыматтарды окуй алат\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Ден соолук жөнүндө маалымат"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Бөлүшүлө турган маалымат"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Эгер уруксат берсеңиз, <xliff:g id="APP_NAME">%1$s</xliff:g> ден соолук жөнүндө маалыматыңызды Health Connect менен бөлүшө алат."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Ден соолук жөнүндө маалыматтарды ар кандай колдонмолордон жана булактардан шайкештирип, бир жерде сактаңыз"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Бардык уруксаттар өчүрүлсүнбү?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Бул колдонмолорго бул нерселер мындан ары жеткиликсиз, бирок алар Health Connect\'те сактала берет"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> кийин кошулган маалыматты окуй алат"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Бул колдонмодогу башка Android уруксаттарын башкаруу үчүн Параметрлер &gt; Колдонмолорго өтүңүз"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"<xliff:g id="APP_NAME">%1$s</xliff:g> менен бөлүшкөн нерселериңиз анын купуялык эрежелери менен корголот."</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Иштеп чыгуучунун купуялык эрежелеринен <xliff:g id="APP_NAME">%1$s</xliff:g> маалыматыңызды кандайча иштетерин биле аласыз"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Бул колдонмодогу башка Android уруксаттарын тескөө үчүн Тууралоого өтүп, Колдонмолорду таптап коюңуз"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Купуялык эрежелерин окуп чыгуу"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Акыркы 24 сааттын ичинде колдонулган"</string>
@@ -531,7 +530,7 @@
     <string name="export_cancel_button" msgid="1952360582645412410">"Жокко чыгаруу"</string>
     <string name="import_cancel_button" msgid="2191598074422096715">"Жокко чыгаруу"</string>
     <string name="import_next_button" msgid="5706322508691854289">"Кийинки"</string>
-    <string name="import_source_location_title" msgid="4444467438013749461">"Төмөнкүдө өткөрүп алуу"</string>
+    <string name="import_source_location_title" msgid="4444467438013749461">"Каяктан өткөрөсүз:"</string>
     <string name="import_invalid_storage" msgid="341798262315495399">"Маалыматтарды импорттоо үчүн булуттагы сактагычтан колдонмо тандаңыз"</string>
     <string name="export_import_tap_to_choose_account" msgid="5016799636886709580">"Аккаунтту тандоо үчүн таптап коюңуз"</string>
     <string name="export_import_choose_account_title" msgid="1047021319012735232">"Аккаунт тандаңыз"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect интеграциясын улантыңыз"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Ал жердеги нерселериңиз жоголуп кетпеши үчүн <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ичинде бүтүрүңүз"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Колдонмону жаңыртуу керек"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Health Connect менен шайкештирүүнү улантуу үчүн <xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосун жаңыртуу керек"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connect менен шайкештирүүнү улантуу үчүн айрым колдонмолорду жаңыртуу керек"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect менен шайкештирүүнү улантуу үчүн <xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосун жаңыртуу керек. Жаңыртуулар айрым колдонмолор үчүн жеткиликсиз болушу мүмкүн."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect менен шайкештирүүнү улантуу үчүн айрым колдонмолорду жаңыртуу керек. Жаңыртуулар айрым колдонмолор үчүн жеткиликсиз болушу мүмкүн."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Жаңыртууларды карап көрүү"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Кеңири маалымат"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect интеграциясы"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Шайкеш колдонмолорду көрүңүз"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect аркылуу <xliff:g id="APP_NAME">%s</xliff:g> менен шайкештириле турган башка колдонмолорду табыңыз"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Колдонмолор дүкөнүндө көрүү"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Экран кулпусун коюп алыңыз"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Ден-соолук маалыматыңыздын кошумча коопсуздугу үчүн бул түзмөккө PIN кодду, графикалык ачкычты же сырсөздү коюңуз"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Экран кулпусун коюу"</string>
     <string name="select_all" msgid="837499881590001166">"Баарын тандоо"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Байланышкан колдонмолорго Health Connect кызматындагы бул нерселер жеткиликсиз болуп калат"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Белгиленди"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосуна дене-бойду чыңдоо маалыматын көрүүгө уруксат бересизби?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g> тууралуу маалыматты көрүүгө уруксат сурап жатат.\n\nБаарына уруксат берүү үчүн тандап же ар бирин өзүнчө көзөмөлдөңүз."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPE">%2$s</xliff:g> тууралуу маалыматты көрө берсинби?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Фитнес жана саламаттык"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"ар дайым"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"колдонулганда"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Ар дайым"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Колдонулганда"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> бардык фитнес жана саламаттык маалыматыңызга кире алат <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Кирүүгө уруксат берилген"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Окууга уруксат берилген"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Бул уруксаттар <xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосуна түзмөгүңүздүн сенсорлорунан маалыматка кирүү мүмкүнчүлүгүн берет."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="OTHER_NUMBER">%2$d</xliff:g> колдонмонун ичинен <xliff:g id="NUMBER_0">%1$d</xliff:g> уруксат берилген"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Уруксат сураган колдонмолор жок"</string>
+    <string name="allowed" msgid="4158456017482263737">"Уруксат берилген"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Тыюу салынган"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Бул уруксаты бар колдонмолор түзмөгүңүздүн сенсорлорунан <xliff:g id="DATA_TYPE">%s</xliff:g> маалыматына кире алышат."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Саатыңыздагы бардык колдонмолор үчүн <xliff:g id="DATA_TYPE">%s</xliff:g> кирүү мүмкүнчүлүгү өчүрүлсүнбү?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Белгиленме"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Крест белгиси"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
