--- a/apk/res/values-lo/strings.xml
+++ b/apk/res/values-lo/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"ມື້ວານນີ້"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"ອ່ານ: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"ຂຽນ: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"ຈັດການການອະນຸຍາດ"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"ເວລາ: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"ກິດຈະກຳ"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"ອຸນຫະພູມຜິວໜັງ"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"ອ່ານຂໍ້ມູນອຸນຫະພູມຜິວໜັງ"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"ຂຽນຂໍ້ມູນອຸນຫະພູມຜິວໜັງ"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"ຂໍ້ມູນສຸຂະພາບທັງໝົດ"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"ຂໍ້ມູນສຸຂະພາບທັງໝົດ"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"ຂຽນຂໍ້ມູນສຸຂະພາບທັງໝົດ"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"ເງື່ອນໄຂ"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"ເງື່ອນໄຂ"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"ອ່ານເງື່ອນໄຂ"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"ວັກຊີນ"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"ວັກຊີນ"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"ອ່ານຂໍ້ມູນວັກຊີນ"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"ຜົນກວດ"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"ຜົນກວດ"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"ອ່ານຜົນກວດ"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"ຫາກທ່ານໃຫ້ສິດເຂົ້າເຖິງ, ແອັບນີ້ຈະສາມາດອ່ານ ແລະ ຂຽນຂໍ້ມູນໄດ້ ເຊັ່ນ: ອາການແພ້, ຜົນກວດ, ວັກຊີນ ແລະ ອື່ນໆ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"ຫາກທ່ານໃຫ້ສິດເຂົ້າເຖິງ, ແອັບນີ້ຈະສາມາດອ່ານຂໍ້ມູນໄດ້ ເຊັ່ນ: ອາການແພ້, ຜົນກວດ, ວັກຊີນ ແລະ ອື່ນໆ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"ກ່ຽວກັບຂໍ້ມູນສຸຂະພາບ"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"ຂໍ້ມູນເພື່ອແບ່ງປັນ"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"ຫາກທ່ານອະນຸຍາດ, <xliff:g id="APP_NAME">%1$s</xliff:g> ຈະສາມາດແບ່ງປັນຂໍ້ມູນສຸຂະພາບຂອງທ່ານກັບ Health Connect ໄດ້."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"ຊິ້ງຂໍ້ມູນສຸຂະພາບຂອງທ່ານຈາກແອັບ ແລະ ແຫຼ່ງຕ່າງໆຂອງທ່ານເພື່ອເກັບພວກມັນໄວ້ບ່ອນດຽວ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ລຶບການອະນຸຍາດທັງໝົດອອກບໍ?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"ແອັບເຫຼົ່ານີ້ບໍ່ມີສິດເຂົ້າເຖິງອີກຕໍ່ໄປແລ້ວ, ແຕ່ຍັງຄົງມີຂໍ້ມູນທີ່ຈັດເກັບໄວ້ໃນ Health Connect ຢູ່"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> ສາມາດອ່ານຂໍ້ມູນທີ່ເພີ່ມເຂົ້າຫຼັງຈາກວັນທີ <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> ໄດ້"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"ເພື່ອຈັດການການອະນຸຍາດ Android ອື່ນທີ່ແອັບນີ້ສາມາດເຂົ້າເຖິງໄດ້, ໃຫ້ເຂົ້າໄປການຕັ້ງຄ່າ &gt; ແອັບ"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"ຂໍ້ມູນທີ່ທ່ານແບ່ງປັນກັບ <xliff:g id="APP_NAME">%1$s</xliff:g> ແມ່ນຢູ່ພາຍໃຕ້ນະໂຍບາຍຄວາມເປັນສ່ວນຕົວຂອງເຂົາເຈົ້າ"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"ທ່ານສາມາດສຶກສາວິທີທີ່ <xliff:g id="APP_NAME">%1$s</xliff:g> ຈັດການຂໍ້ມູນຂອງທ່ານໄດ້ໃນນະໂຍບາຍຄວາມເປັນສ່ວນຕົວຂອງນັກພັດທະນາ"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"ເພື່ອຈັດການການອະນຸຍາດອື່ນໆຂອງ Android ທີ່ແອັບນີ້ສາມາດເຂົ້າເຖິງໄດ້, ໃຫ້ເຂົ້າໄປການຕັ້ງຄ່າ, ຈາກນັ້ນແຕະແອັບ"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"ອ່ານນະໂຍບາຍຄວາມເປັນສ່ວນຕົວ"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"ເຂົ້າເຖິງໃນ 24 ຊົ່ວໂມງທີ່ຜ່ານມາ"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"ສືບຕໍ່ການເຊື່ອມໂຍງ Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"ເພື່ອຮັກສາຂໍ້ມູນຂອງທ່ານໄວ້, ໃຫ້ສຳເລັດຂະບວນການນີ້ພາຍໃນ <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"ຕ້ອງອັບເດດແອັບ"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"ຕ້ອງໄດ້ອັບເດດ <xliff:g id="APP_NAME">%1$s</xliff:g> ກ່ອນຈຶ່ງຈະຊິ້ງກັບ Health Connect ຕໍ່ໄດ້"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"ບາງແອັບຕ້ອງໄດ້ອັບເດດກ່ອນຈຶ່ງຈະຊິ້ງກັບ Health Connect ຕໍ່ໄດ້"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"ຕ້ອງໄດ້ອັບເດດ <xliff:g id="APP_NAME">%1$s</xliff:g> ກ່ອນຈຶ່ງຈະຊິ້ງກັບ Health Connect ຕໍ່ໄດ້. ການອັບເດດອາດບໍ່ມີໃຫ້ສຳລັບແອັບທັງໝົດ."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"ບາງແອັບຕ້ອງໄດ້ອັບເດດກ່ອນຈຶ່ງຈະຊິ້ງກັບ Health Connect ຕໍ່ໄດ້. ການອັບເດດອາດບໍ່ມີໃຫ້ສຳລັບແອັບທັງໝົດ."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"ກວດສອບການອັບເດດ"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"ສຶກສາເພີ່ມເຕີມ"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"ການເຊື່ອມໂຍງ Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"ເບິ່ງແອັບທີ່ເຂົ້າກັນໄດ້"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"ຊອກຫາແອັບເພີ່ມເຕີມເພື່ອຊິ້ງກັບ <xliff:g id="APP_NAME">%s</xliff:g> ຜ່ານ Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"ເບິ່ງໃນ App Store"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"ຕັ້ງການລັອກໜ້າຈໍ"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"ເພື່ອຄວາມປອດໄພເພີ່ມເຕີມສໍາລັບຂໍ້ມູນສຸຂະພາບຂອງທ່ານ, ໃຫ້ຕັ້ງ PIN, ຮູບແບບ ຫຼື ລະຫັດຜ່ານສໍາລັບອຸປະກອນນີ້"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"ຕັ້ງການລັອກໜ້າຈໍ"</string>
     <string name="select_all" msgid="837499881590001166">"ເລືອກທັງໝົດ"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"ແອັບທີ່ເຊື່ອມຕໍ່ໄວ້ຈະບໍ່ສາມາດອ່ານຂໍ້ມູນນີ້ຈາກ Health Connect ໄດ້ອີກຕໍ່ໄປ"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"ເລືອກແລ້ວ"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"ອະນຸຍາດໃຫ້ <xliff:g id="APP_NAME">%1$s</xliff:g> ເຂົ້າເຖິງຂໍ້ມູນຟິດເນສ ແລະ ຄວາມແຂງແຮງສົມບູນບໍ?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ກຳລັງຮ້ອງຂໍສິດເຂົ້າເຖິງ <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nເລືອກວ່າຈະອະນຸຍາດທັງໝົດ ຫຼື ຄວບຄຸມເທື່ອລະລາຍການ."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"ອະນຸຍາດໃຫ້ <xliff:g id="APP_NAME">%1$s</xliff:g> ເຂົ້າເຖິງ <xliff:g id="DATA_TYPE">%2$s</xliff:g> ໄດ້ບໍ?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"ການອອກກຳລັງກາຍ ແລະ ສຸຂະພາບ"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"ຕະຫຼອດເວລາ"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ໃນລະຫວ່າງທີ່ນຳໃຊ້ຢູ່"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"ຕະຫຼອດເວລາ"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ໃນລະຫວ່າງທີ່ນຳໃຊ້ຢູ່"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> ສາມາດເຂົ້າເຖິງຂໍ້ມູນການອອກກໍາລັງກາຍ ແລະ ສຸຂະພາບທັງໝົດຂອງທ່ານ <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"ໄດ້ຮັບອະນຸຍາດໃຫ້ເຂົ້າເຖິງ"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"ໄດ້ຮັບອະນຸຍາດໃຫ້ອ່ານ"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"ການອະນຸຍາດເຫຼົ່ານີ້ໃຫ້ <xliff:g id="APP_NAME">%1$s</xliff:g> ເຂົ້າເຖິງຂໍ້ມູນຈາກເຊັນເຊີອຸປະກອນຂອງທ່ານ."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"ອະນຸຍາດ <xliff:g id="NUMBER_0">%1$d</xliff:g> ແອັບຈາກທັງໝົດ <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> ແອັບແລ້ວ"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"ບໍ່ມີແອັບທີ່ກໍາລັງຮ້ອງຂໍ"</string>
+    <string name="allowed" msgid="4158456017482263737">"ອະນຸຍາດແລ້ວ"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"ບໍ່ອະນຸຍາດ"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"ແອັບທີ່ມີການອະນຸຍາດນີ້ສາມາດເຂົ້າເຖິງຂໍ້ມູນ <xliff:g id="DATA_TYPE">%s</xliff:g> ຈາກເຊັນເຊີອຸປະກອນຂອງທ່ານ."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ລຶບສິດເຂົ້າເຖິງ <xliff:g id="DATA_TYPE">%s</xliff:g> ອອກສໍາລັບແອັບທັງໝົດຢູ່ໂມງຂອງທ່ານບໍ?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"ໝາຍຖືກ"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"ເຄື່ອງໝາຍຂີດຂ້າແບບໄຂວ່ກັນ"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
