--- a/apk/res/values-mk/strings.xml
+++ b/apk/res/values-mk/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Вчера"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Прочита: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Внесе: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Управувајте со дозволите"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Време: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Активност"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"температура на кожата"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Читање на температурата на кожата"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Запишување на температурата на кожата"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Сета здравствена евиденција"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"сета здравствена евиденција"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Пишување на сета здравствена евиденција"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Услови"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"услови"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Читање на условите"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Вакцини"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"вакцини"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Читање на вакцините"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Лабораториски резултати"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"лабораториски резултати"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Читање на лабораториските резултати"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Ако доделите пристап, апликацијата ќе може да чита и запишува податоци како што се алергии, лабораториски резултати, вакцини и друго \n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Ако доделите пристап, апликацијата ќе може да чита податоци како што се алергии, лабораториски резултати, вакцини и друго\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"За здравствената евиденција"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Податоци за споделување"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Ако дозволите, <xliff:g id="APP_NAME">%1$s</xliff:g> ќе може да ја споделува вашата здравствена евиденција со Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Синхронизирајте ја вашата здравствена евиденција од различни апликации и извори за да ја чувате на едно место"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Да се отстранат сите дозволи?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Апликацииве веќе немаат пристап, но уште имаат зачувани податоци во Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> може да чита податоци додадени по <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"За да управувате со други дозволи за Android до кои може да пристапи оваа апликација, одете во „Поставки &gt; Апликации“"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Податоците што ги споделувате со <xliff:g id="APP_NAME">%1$s</xliff:g> се опфатени со нејзината политика за приватност"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Може да дознаете како <xliff:g id="APP_NAME">%1$s</xliff:g> постапува со вашите податоци во политиката за приватност на програмерот"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"За да управувате со други дозволи за Android до кои може да пристапи оваа апликација, одете во „Поставки“, а потоа допрете „Апликации“"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Прочитајте ја политиката за приватност"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Пристапено во минатите 24 часа"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Продолжете со интеграција со Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"За да ги зачувате вашите податоци, завршете го ова за <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Потребно е ажурирање на апликацијата"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Апликацијата <xliff:g id="APP_NAME">%1$s</xliff:g> треба да се ажурира за да продолжи да се синхронизира со Health Connect"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Некои апликации треба да се ажурираат за да продолжат да се синхронизираат со Health Connect"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Апликацијата <xliff:g id="APP_NAME">%1$s</xliff:g> треба да се ажурира за да продолжи да се синхронизира со Health Connect. Ажурирањата може да не се достапни за сите апликации."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Некои апликации треба да се ажурираат за да продолжат да се синхронизираат со Health Connect. Ажурирањата може да не се достапни за сите апликации."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Проверете дали има ажурирања"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Дознајте повеќе"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Интеграција на Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Погледнете ги компатибилните апликации"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Најдете повеќе апликации за да ги синхронизирате со <xliff:g id="APP_NAME">%s</xliff:g> преку Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Погледнете во App Store"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Поставете „Заклучување екран“"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"За дополнителна безбедност на вашите здравствени податоци, поставете PIN, шема или лозинка за уредов"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Поставете „Заклучување екран“"</string>
     <string name="select_all" msgid="837499881590001166">"Избери ги сите"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Поврзаните апликации веќе нема да може да ги читаат податоциве од Health Connect"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Штиклирано"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Да се дозволи <xliff:g id="APP_NAME">%1$s</xliff:g> да пристапува до податоците за фитнес и благосостојба?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> бара пристап до <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nИзберете да ги дозволите сите или да ги контролирате поединечно."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Да се дозволи <xliff:g id="APP_NAME">%1$s</xliff:g> да пристапува до <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Фитнес и благосостојба"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"цело време"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"додека се користи"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Цело време"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Додека се користи"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> може да пристапува до сите ваши податоци за фитнес и благосостојба <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Дозволено да пристапува"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Дозволено да чита"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Дозволиве овозможуваат <xliff:g id="APP_NAME">%1$s</xliff:g> да пристапува до податоците од сензорите на уредот."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"Апликации со дозвола: <xliff:g id="NUMBER_0">%1$d</xliff:g> од <xliff:g id="OTHER_NUMBER">%2$d</xliff:g>"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Нема барања од апликации"</string>
+    <string name="allowed" msgid="4158456017482263737">"Дозволено"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Не е дозволено"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Апликациите со оваа дозвола може да пристапуваат до податоците за <xliff:g id="DATA_TYPE">%s</xliff:g> од сензорите на уредот."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Да се отстрани пристапот до <xliff:g id="DATA_TYPE">%s</xliff:g> за сите апликации на часовникот?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Знак за штиклирање"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Знак икс"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
