--- a/apk/res/values-ml/strings.xml
+++ b/apk/res/values-ml/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"ഇന്നലെ"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"വായിച്ചത്: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"എഴുതിയത്: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"അനുമതികൾ മാനേജ് ചെയ്യുക"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"സമയം: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"ആക്റ്റിവിറ്റി"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"ചർമ്മത്തിലെ താപനില"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"ചർമ്മത്തിലെ താപനില വായിക്കുക"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"ചർമ്മത്തിലെ താപനില എഴുതുക"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"എല്ലാ ആരോഗ്യ റെക്കോർഡുകളും"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"എല്ലാ ആരോഗ്യ റെക്കോർഡുകളും"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"എല്ലാ ആരോഗ്യ റെക്കോർഡുകളും എഴുതുക"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"വ്യവസ്ഥകൾ"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"വ്യവസ്ഥകൾ"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"വ്യവസ്ഥകൾ വായിക്കുക"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"വാക്‌സിനുകൾ"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"വാക്‌സിനുകൾ"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"വാക്‌സിനുകൾ സംബന്ധിച്ച ഡാറ്റ റീഡ് ചെയ്യുക"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"ലാബ് ഫലങ്ങൾ"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"ലാബ് ഫലങ്ങൾ"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"ലാബ് ഫലങ്ങൾ സംബന്ധിച്ച ഡാറ്റ റീഡ് ചെയ്യുക"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"നിങ്ങൾ ആക്സസ് നൽകുകയാണെങ്കിൽ, അലർജികൾ, ലാബ് ഫലങ്ങൾ, വാക്‌സിനുകൾ എന്നിവയും മറ്റും പോലുള്ള ഡാറ്റ റീഡ് ചെയ്യാനും റൈറ്റ് ചെയ്യാനും ആപ്പിന് കഴിയും\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"നിങ്ങൾ ആക്‌സസ് നൽകുകയാണെങ്കിൽ, അലർജികൾ, ലാബ് ഫലങ്ങൾ, വാക്‌സിനുകൾ എന്നിവയും മറ്റും പോലുള്ള ഡാറ്റ ആപ്പിന് വായിക്കാനാകും\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"ആരോഗ്യ റെക്കോർഡുകളെ കുറിച്ച്"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"പങ്കിടാനുള്ള ഡാറ്റ"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"നിങ്ങൾ അനുവദിക്കുകയാണെങ്കിൽ, <xliff:g id="APP_NAME">%1$s</xliff:g> എന്നതിന് നിങ്ങളുടെ ആരോഗ്യ റെക്കോർഡുകൾ Health Connect-മായി പങ്കിടാനാകും."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"നിങ്ങളുടെ എല്ലാ ആരോഗ്യ റെക്കോർഡുകളും ഒരിടത്ത് തന്നെ സൂക്ഷിക്കാനായി നിങ്ങളുടെ വിവിധ ആപ്പുകളിൽ നിന്നും ഉറവിടങ്ങളിൽ നിന്നുമുള്ളവ സമന്വയിപ്പിക്കുക"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"എല്ലാ അനുമതികളും നീക്കം ചെയ്യണോ?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"ഈ ആപ്പുകൾക്ക് ഇനി ആക്‌സസ് ഇല്ല, എന്നാലും Health Connect-ൽ ഇപ്പോഴും ഡാറ്റ സംഭരിച്ചിട്ടുണ്ട്"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> ആപ്പിന് <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>-ന് ശേഷം ചേർത്ത ഡാറ്റ റീഡ് ചെയ്യാനാകും"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"ഈ ആപ്പിന് ആക്‌സസ് ചെയ്യാനാകുന്ന മറ്റ് Android അനുമതികൾ മാനേജ് ചെയ്യാൻ, ക്രമീകരണം &gt; ആപ്പുകൾ എന്നതിലേക്ക് പോകുക"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"<xliff:g id="APP_NAME">%1$s</xliff:g> എന്നതുമായി നിങ്ങൾ പങ്കിടുന്ന ഡാറ്റയ്‌ക്ക് അവരുടെ സ്വകാര്യതാ നയത്തിന്റെ പരിരക്ഷണമുണ്ട്"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"<xliff:g id="APP_NAME">%1$s</xliff:g> ആപ്പ് നിങ്ങളുടെ ഡാറ്റ കൈകാര്യം ചെയ്യുന്നത് എങ്ങനെയാണെന്ന് ഡെവലപ്പറുടെ സ്വകാര്യതാ നയത്തിൽ മനസ്സിലാക്കാം"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"ഈ ആപ്പിന് ആക്‌സസ് ചെയ്യാനാകുന്ന മറ്റ് Android അനുമതികൾ മാനേജ് ചെയ്യാൻ, ക്രമീകരണത്തിലേക്ക് പോയ ശേഷം ആപ്പുകൾ ടാപ്പ് ചെയ്യുക"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"സ്വകാര്യതാ നയം വായിക്കുക"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"കഴിഞ്ഞ 24 മണിക്കൂറിനിടെ ആക്‌സസ് ചെയ്‌തു"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect സംയോജനം പുനരാരംഭിക്കുക"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"നിങ്ങളുടെ ഡാറ്റ നിലനിർത്താൻ, <xliff:g id="TIME_NEEDED">%1$s</xliff:g> സമയപരിധിക്കുള്ളിൽ ഇത് പൂർത്തിയാക്കുക"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"ആപ്പ് അപ്‌ഡേറ്റ് ചെയ്യേണ്ടതുണ്ട്"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Health Connect-മായി സമന്വയിപ്പിക്കുന്നത് തുടരാൻ <xliff:g id="APP_NAME">%1$s</xliff:g> അപ്‌ഡേറ്റ് ചെയ്യേണ്ടതുണ്ട്"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connect-മായി സമന്വയിപ്പിക്കുന്നത് തുടരാൻ, ചില ആപ്പുകൾ അപ്‌ഡേറ്റ് ചെയ്യേണ്ടതുണ്ട്"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect-മായി സമന്വയിപ്പിക്കുന്നത് തുടരാൻ, <xliff:g id="APP_NAME">%1$s</xliff:g> അപ്‌ഡേറ്റ് ചെയ്യേണ്ടതുണ്ട്. എല്ലാ ആപ്പുകൾക്കും അപ്‌ഡേറ്റുകൾ ലഭ്യമാകണമെന്നില്ല."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect-മായി സമന്വയിപ്പിക്കുന്നത് തുടരാൻ, ചില ആപ്പുകൾ അപ്‌ഡേറ്റ് ചെയ്യേണ്ടതുണ്ട്. എല്ലാ ആപ്പുകൾക്കും അപ്‌ഡേറ്റുകൾ ലഭ്യമാകണമെന്നില്ല."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"അപ്‌ഡേറ്റുകൾ പരിശോധിക്കുക"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"കൂടുതലറിയുക"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect സംയോജനം"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"അനുയോജ്യമായ ആപ്പുകൾ കാണുക"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect വഴി <xliff:g id="APP_NAME">%s</xliff:g> എന്നതിലേക്ക് സമന്വയിപ്പിക്കാൻ കൂടുതൽ ആപ്പുകൾ കണ്ടെത്തുക"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"ആപ്പ് സ്‌റ്റോറിൽ കാണുക"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"ഒരു സ്ക്രീൻ ലോക്ക് സജ്ജീകരിക്കുക"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"നിങ്ങളുടെ ആരോഗ്യ ഡാറ്റയുടെ അധിക സുരക്ഷയ്ക്കായി, ഈ ഉപകരണത്തിന് ഒരു പിൻ, പാറ്റേൺ അല്ലെങ്കിൽ പാസ്‌വേഡ് സജ്ജീകരിക്കുക"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"സ്‌ക്രീൻ ലോക്ക് സജ്ജീകരിക്കുക"</string>
     <string name="select_all" msgid="837499881590001166">"എല്ലാം തിരഞ്ഞെടുക്കുക"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"കണക്‌റ്റ് ചെയ്‌തിട്ടുള്ള ആപ്പുകൾക്ക് ഇനി Health Connect-ൽ നിന്ന് ഈ ഡാറ്റ വായിക്കാനാകില്ല"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"ചെക്ക് മാർക്കിട്ടു"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"ഫിറ്റ്‌നസ്, വെൽനസ് ഡാറ്റ ആക്സസ് ചെയ്യാൻ <xliff:g id="APP_NAME">%1$s</xliff:g> ആപ്പിനെ അനുവദിക്കണോ?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ആപ്പ് <xliff:g id="DATA_TYPES">%2$s</xliff:g> എന്നതിലേക്ക് ആക്‌സസ് അഭ്യർത്ഥിക്കുന്നു.\n\nഎല്ലാം അനുവദിക്കാൻ തിരഞ്ഞെടുക്കുകയോ അവ ഓരോന്നും പ്രത്യേകം നിയന്ത്രിക്കുകയോ ചെയ്യുക."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="DATA_TYPE">%2$s</xliff:g> ആക്‌സസ് ചെയ്യാൻ <xliff:g id="APP_NAME">%1$s</xliff:g> എന്നതിനെ അനുവദിക്കണോ?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"ഫിറ്റ്നസും ശാരീരികക്ഷമതയും"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"എല്ലായ്‌പ്പോഴും"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ഉപയോഗത്തിലുള്ളപ്പോൾ"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"എല്ലായ്‌പ്പോഴും"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ഉപയോഗത്തിലുള്ളപ്പോൾ"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> ആപ്പിന് നിങ്ങളുടെ എല്ലാ ഫിറ്റ്നസ്, ശാരീരികക്ഷമതാ ഡാറ്റയും <xliff:g id="ALLOW_MODE">%2$s</xliff:g> ആക്സസ് ചെയ്യാൻ കഴിയും"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"ആക്സസ് ചെയ്യാൻ അനുവദിച്ചു"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"റീഡ് ചെയ്യാനുള്ള അനുവാദം"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"ഈ അനുമതികൾ നിങ്ങളുടെ ഉപകരണ സെൻസറുകളിൽ നിന്നുള്ള ഡാറ്റയിലേക്ക് <xliff:g id="APP_NAME">%1$s</xliff:g> ആപ്പിന് ആക്സസ് നൽകുന്നു."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="NUMBER_0">%1$d</xliff:g> / <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> ആപ്പുകൾ അനുവദനീയം"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"ആപ്പുകളൊന്നും അഭ്യർത്ഥിക്കുന്നില്ല"</string>
+    <string name="allowed" msgid="4158456017482263737">"അനുവാദം ലഭിച്ചു"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"അനുവാദം ലഭിച്ചില്ല"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"ഈ അനുമതിയുള്ള ആപ്പുകൾക്ക് നിങ്ങളുടെ ഉപകരണ സെൻസറുകളിൽ നിന്ന് <xliff:g id="DATA_TYPE">%s</xliff:g> ഡാറ്റ ആക്‌സസ് ചെയ്യാനാവും."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"നിങ്ങളുടെ വാച്ചിലെ എല്ലാ ആപ്പുകൾക്കുമുള്ള <xliff:g id="DATA_TYPE">%s</xliff:g> ആക്‌സസ് നീക്കം ചെയ്യണോ?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"ചെക്ക് മാർക്ക്"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"ക്രോസ് മാർക്ക്"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
