--- a/apk/res/values-mn/strings.xml
+++ b/apk/res/values-mn/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Өчигдөр"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Уншсан: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Бичсэн: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Зөвшөөрлийг удирдах"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Цаг: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Дасгал, хөдөлгөөн"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"арьсны температур"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Арьсны температурыг унших"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Арьсны температурыг бичих"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Эрүүл мэндийн бүх түүх"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"эрүүл мэндийн бүх түүх"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Эрүүл мэндийн бүх түүхийг бичих"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Эрүүл мэндийн байдал"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"эрүүл мэндийн байдал"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Эрүүл мэндийн байдлыг унших"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Вакцин"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"вакцин"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Вакцины өгөгдлийг унших"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Лабораторийн хариу"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"лабораторийн хариу"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Лабораторийн хариуг унших"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Хэрэв та хандах эрх өгвөл тус апп харшил, лабораторийн хариу, вакцин болон бусад өгөгдлийг унших, бичих боломжтой\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Хэрэв та хандах эрх өгвөл тус апп харшил, лабораторийн хариу, вакцин болон бусад өгөгдлийг унших боломжтой\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Эрүүл мэндийн түүхийн тухай"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Хуваалцах өгөгдөл"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Хэрэв та зөвшөөрвөл <xliff:g id="APP_NAME">%1$s</xliff:g> таны эрүүл мэндийн түүхийг Health Connect-тай хуваалцах боломжтой."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Өөр өөр апп болон эх сурвалжийн эрүүл мэндийн түүхээ нэг дор байлгахын тулд синк хийнэ үү"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Бүх зөвшөөрлийг хасах уу?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Эдгээр апп цаашид хандах эрхгүй ч Health Connect-д өгөгдөл нь хадгалагдсан хэвээр байна"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> нь <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>-с хойш нэмсэн өгөгдлийг унших боломжтой"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Энэ аппын хандах боломжтой Android-н бусад зөвшөөрлийг удирдахын тулд Тохиргоо &gt; Аппууд руу очно уу"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Таны <xliff:g id="APP_NAME">%1$s</xliff:g>-тай хуваалцдаг өгөгдөлд үүний нууцлалын бодлого хамаарна"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Таны өгөгдлийг <xliff:g id="APP_NAME">%1$s</xliff:g> хэрхэн зохицуулдаг болохыг та хөгжүүлэгчийн нууцлалын бодлогоос мэдэж авах боломжтой"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Энэ аппын хандах боломжтой Android-н бусад зөвшөөрлийг удирдахын тулд Тохиргоо руу очиж, дараа нь Аппууд дээр товшино уу"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Нууцлалын бодлогыг унших"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Сүүлийн 24 цагийн дотор хандсан"</string>
@@ -465,7 +464,7 @@
     <string name="export_file_access_error_banner_summary" msgid="1226999878868505503">"<xliff:g id="DATE">%1$s</xliff:g>-н экспорттой холбоотой асуудал гарлаа. Хуваарьт шинэ экспорт тохируулаад, дахин оролдоно уу."</string>
     <string name="next_export_time" msgid="3138247220014510213">"Дараагийн экспорт хийх огноо: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="next_export_text" msgid="6726252793571403846">"Дараагийн экспорт удахгүй эхэлнэ"</string>
-    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"Нөөцлөх болон сэргээх"</string>
+    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"Нөөцлөх, сэргээх"</string>
     <string name="last_export_time" msgid="9205875050823594041">"Сүүлд экспорт хийсэн огноо: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="last_export_time_now" msgid="31498024135933750">"Сүүлийн экспорт: одоо"</string>
     <string name="last_export_time_minutes_ago" msgid="5279296486877765961">"{count,plural, =1{Сүүлийн экспорт: 1 минутын өмнө}other{Сүүлийн экспорт: # минутын өмнө}}"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect-н нэгтгэлийг үргэлжлүүлэх"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Өгөгдлөө хадгалахын тулд үүнийг <xliff:g id="TIME_NEEDED">%1$s</xliff:g>-н дотор дуусгана уу"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Аппыг шинэчлэх шаардлагатай"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Health Connect-тэй үргэлжлүүлэн синк хийхийн тулд <xliff:g id="APP_NAME">%1$s</xliff:g>-г шинэчилсэн байх шаардлагатай"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connect-тэй үргэлжлүүлэн синк хийхийн тулд зарим аппыг шинэчилсэн байх шаардлагатай"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect-тэй үргэлжлүүлэн синк хийхийн тулд <xliff:g id="APP_NAME">%1$s</xliff:g>-г шинэчилсэн байх шаардлагатай. Шинэчлэлт зарим аппад боломжгүй байж магадгүй."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect-тэй үргэлжлүүлэн синк хийхийн тулд зарим аппыг шинэчилсэн байх шаардлагатай. Шинэчлэлт зарим аппад боломжгүй байж магадгүй."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Шинэчлэлт шалгах"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Нэмэлт мэдээлэл авах"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect-н нэгтгэл"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Тохирох аппуудыг харах"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect-р <xliff:g id="APP_NAME">%s</xliff:g>-тай синк хийх илүү олон апп олоорой"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Апп дэлгүүр дээр харах"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Дэлгэцийн түгжээ тохируулна уу"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Эрүүл мэндийн өгөгдлийнхөө аюулгүй байдлыг нэмэгдүүлэх үүднээс энэ төхөөрөмжид ПИН, хээ, нууц үг тохируулна уу"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Дэлгэцийн түгжээ тохируулах"</string>
     <string name="select_all" msgid="837499881590001166">"Бүгдийг сонгох"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Холбогдсон аппууд цаашид Health Connect-с энэ өгөгдлийг унших боломжгүй болно"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Тэмдэглэсэн"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д фитнес, эрүүл оршихуйн өгөгдөлд хандахыг зөвшөөрөх үү?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g>-д хандах эрх хүсэж банйа.\n\nТэдгээрийг бүгдийг нь зөвшөөрөхөөр сонгох эсвэл тус тусад нь хянана уу."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д <xliff:g id="DATA_TYPE">%2$s</xliff:g>-д хандахыг зөвшөөрөх үү?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Фитнес, эрүүл оршихуй"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"үргэлж"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ашиглаж байхад"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Үргэлж"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Ашиглаж байхад"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> таны бүх фитнес, эрүүл оршихуйн өгөгдөлд <xliff:g id="ALLOW_MODE">%2$s</xliff:g> хандах боломжтой"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Хандахыг зөвшөөрсөн"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Уншихыг зөвшөөрсөн"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Эдгээр зөвшөөрөл <xliff:g id="APP_NAME">%1$s</xliff:g>-д таны төхөөрөмжийн мэдрэгчдийн өгөгдөлд хандах эрх өгдөг."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="OTHER_NUMBER">%2$d</xliff:g>-с <xliff:g id="NUMBER_0">%1$d</xliff:g> аппыг зөвшөөрсөн"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Ямар ч апп хүсэлт гаргаагүй"</string>
+    <string name="allowed" msgid="4158456017482263737">"Зөвшөөрсөн"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Зөвшөөрөөгүй"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Энэ зөвшөөрөлтэй аппууд таны төхөөрөмжийн мэдрэгчдээс <xliff:g id="DATA_TYPE">%s</xliff:g>-н өгөгдөлд хандах боломжтой."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Таны цаган дээрх бүх аппын <xliff:g id="DATA_TYPE">%s</xliff:g>-н хандалтыг хасах уу?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Зөв тэмдэг"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Х тэмдэг"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
