--- a/apk/res/values-mr/strings.xml
+++ b/apk/res/values-mr/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"काल"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"रीड: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"राइट: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"परवानग्या व्यवस्थापित करा"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"वेळ: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"ॲक्टिव्हिटी"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"त्वचेचे तापमान"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"त्वचेचे तापमान वाचा"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"त्वचेचे तापमान लिहा"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"सर्व आरोग्यविषयक माहिती"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"सर्व आरोग्यविषयक माहिती"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"सर्व आरोग्यविषयक माहिती राईट करा"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"नियम"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"नियम"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"अटी वाचा"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"लसी"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"लसी"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"लसीकरणासंबंधित डेटा वाचा"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"लॅबमधील परिणाम"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"लॅबमधील परिणाम"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"लॅबमधील परिणामाशी संबंधित डेटा वाचा"</string>
@@ -377,7 +375,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"तुम्ही अनुमती दिल्यास, अ‍ॅप हे ॲलर्जी, लॅबमधील परिणाम, लसी आणि आणखी बरेच काही यांसारखा डेटा वाचू आणि लिहू शकतो\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"तुम्ही अनुमती दिल्यास, अ‍ॅप हे ॲलर्जी, लॅबमधील परिणाम, लसी आणि आणखी बरेच काही यांसारखा डेटा वाचू शकतो\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"आरोग्यविषयक माहितीबद्दल"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"शेअर करण्यासाठी डेटा"</string>
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"शेअर केल्या जाणाऱ्या डेटामध्ये याचा समावेश असतो"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"तुम्ही अनुमती दिल्यास, <xliff:g id="APP_NAME">%1$s</xliff:g> तुमची आरोग्यविषयक माहिती Health Connect सह शेअर करू शकतो."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"तुमची आरोग्यविषयक माहिती एकाच ठिकाणी ठेवण्यासाठी तुमच्या वेगवेगळ्या अ‍ॅप्स आणि स्रोतांमधून ती सिंक करा"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"सर्व परवानग्या काढून टाकायच्या का?"</string>
@@ -436,7 +434,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"या अ‍ॅप्सना यापुढे अ‍ॅक्सेस नाही, पण Health Connect मध्ये अजूनही डेटा स्टोअर केलेला राहील"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> हे <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> नंतर जोडलेला डेटा रीड करू शकते"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"हे अ‍ॅप अ‍ॅक्सेस करू शकणाऱ्या इतर Android परवानग्या व्यवस्थापित करण्यासाठी, सेटिंग्ज &gt; अ‍ॅप्स वर जा"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"तुम्ही <xliff:g id="APP_NAME">%1$s</xliff:g> सह शेअर केलेला डेटा त्यांच्या गोपनीयता धोरणामध्ये समाविष्ट आहे"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"<xliff:g id="APP_NAME">%1$s</xliff:g> तुमचा डेटा कसा हाताळते हे तुम्ही डेव्हलपरच्या गोपनीयता धोरणामध्ये जाणून घेऊ शकता"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"हे अ‍ॅप अ‍ॅक्सेस करू शकणाऱ्या इतर Android परवानग्या व्यवस्थापित करण्यासाठी, सेटिंग्ज त्यानंतर अ‍ॅप्स वर जा"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"गोपनीयता धोरण वाचा"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"मागील २४ तासांमध्ये अ‍ॅक्सेस केले होते"</string>
@@ -1075,8 +1073,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect चे इंटिग्रेशन पुन्हा सुरू करा"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"तुमचा डेटा ठेवण्यासाठी, ही <xliff:g id="TIME_NEEDED">%1$s</xliff:g> मध्ये पूर्ण करा"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"अ‍ॅप अपडेट करणे आवश्यक आहे"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Health Connect सह सिंक करणे सुरू ठेवण्यासाठी <xliff:g id="APP_NAME">%1$s</xliff:g> अपडेट केलेले असणे आवश्यक आहे"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connect सह सिंक करणे सुरू ठेवण्यासाठी काही अ‍ॅप्स अपडेट केलेली असणे आवश्यक आहे"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect सह सिंक करणे सुरू ठेवण्यासाठी <xliff:g id="APP_NAME">%1$s</xliff:g> अपडेट केलेले असणे आवश्यक आहे. सर्व अ‍ॅप्ससाठी अपडेट उपलब्ध नसू शकतात."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect सह सिंक करणे सुरू ठेवण्यासाठी काही अ‍ॅप्स अपडेट केलेली असणे आवश्यक आहे. सर्व अ‍ॅप्ससाठी अपडेट उपलब्ध नसू शकतात."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"अपडेट तपासा"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"अधिक जाणून घ्या"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect चे इंटिग्रेशन"</string>
@@ -1135,12 +1133,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"कंपॅटिबल अ‍ॅप्स पहा"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect द्वारे <xliff:g id="APP_NAME">%s</xliff:g> सह सिंक करण्यासाठी अधिक अ‍ॅप्स शोधा"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"अ‍ॅप स्टोअरवर पहा"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"स्क्रीन लॉक सेट करा"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"तुमच्या आरोग्यासंबंधित डेटाच्या अतिरिक्त सुरक्षेसाठी, या डिव्हाइससाठी पिन, पॅटर्न किंवा पासवर्ड सेट करा"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"स्क्रीन लॉक सेट करा"</string>
     <string name="select_all" msgid="837499881590001166">"सर्व निवडा"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"कनेक्ट केलेली अ‍ॅप्स यापुढे Health Connect मधील हा डेटा अ‍ॅक्सेस करू शकणार नाहीत"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"खूण केली आहे"</string>
@@ -1183,38 +1178,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g> फिटनेस आणि स्वास्थ्याशी संबंधित डेटा अ‍ॅक्सेस करण्याची अनुमती द्यायची आहे का?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ने <xliff:g id="DATA_TYPES">%2$s</xliff:g> अ‍ॅक्सेस करण्याची विनंती केली आहे.\n\nसर्वांना अनुमती देणे किंवा वैयक्तिकरित्या नियंत्रित करणे निवडा."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> ला <xliff:g id="DATA_TYPE">%2$s</xliff:g> अ‍ॅक्सेस करण्याची अनुमती द्यायची आहे का?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"सुदृढता आणि स्वास्थ्य"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"पूर्ण वेळ"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"वापरत असताना"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"पूर्ण वेळ"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"वापरत असताना"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> हे तुमचा सुदृढता आणि स्वास्थ्य यासंबंधित सर्व डेटा अ‍ॅक्सेस करू शकते <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"अ‍ॅक्सेस करण्याची अनुमती आहे"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"रीड करण्याची अनुमती आहे"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"या परवानग्या तुमच्या डिव्हाइस सेन्सरमधील <xliff:g id="APP_NAME">%1$s</xliff:g> डेटाचा अ‍ॅक्सेस देतात."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="OTHER_NUMBER">%2$d</xliff:g> पैकी <xliff:g id="NUMBER_0">%1$d</xliff:g> अ‍ॅप्सना परवानगी दिली आहे"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"कोणत्याही अ‍ॅपची विनंती नाही"</string>
+    <string name="allowed" msgid="4158456017482263737">"अनुमती आहे"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"अनुमती नाही"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"ही परवानगी असलेली ॲप्स तुमच्या डिव्हाइस सेन्सरमधून <xliff:g id="DATA_TYPE">%s</xliff:g> डेटा अ‍ॅक्सेस करू शकतात."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"तुमच्या वॉचवरील सर्व ॲप्सचा <xliff:g id="DATA_TYPE">%s</xliff:g> ॲक्सेस काढून टाकायचा आहे का?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"बरोबरची खूण"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"फुलीची खूण"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
