--- a/apk/res/values-ms/strings.xml
+++ b/apk/res/values-ms/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Semalam"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Baca: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Tulis: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Urus kebenaran"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Masa: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Aktiviti"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"suhu kulit"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Baca suhu kulit"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Tulis suhu kulit"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Semua rekod kesihatan"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"semua rekod kesihatan"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Tulis semua rekod kesihatan"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Masalah"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"masalah"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Baca masalah"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Vaksin"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"vaksin"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Baca data vaksin"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Keputusan makmal"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"keputusan makmal"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Baca keputusan makmal"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Jika anda memberikan akses, apl boleh membaca dan menulis data seperti alahan, keputusan makmal, vaksin dan banyak lagi\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Jika anda memberikan akses, apl boleh membaca data seperti alahan, keputusan makmal, vaksin dan banyak lagi\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Perihal rekod kesihatan"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Data untuk dikongsi"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Jika anda memberikan kebenaran, <xliff:g id="APP_NAME">%1$s</xliff:g> boleh berkongsi rekod kesihatan anda dengan Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Segerakkan rekod kesihatan anda daripada apl dan sumber anda yang lain untuk menyimpan rekod kesihatan tersebut pada satu tempat"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Alih keluar semua kebenaran?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Apl ini tidak lagi mempunyai akses, tetapi masih mempunyai data yang disimpan dalam Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> boleh membaca data yang ditambahkan selepas <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Untuk mengurus kebenaran Android lain yang boleh diakses oleh apl ini, pergi ke Tetapan &gt; Apl"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Data yang anda kongsi dengan <xliff:g id="APP_NAME">%1$s</xliff:g> dilindungi oleh dasar privasi apl tersebut"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Anda boleh mengetahui cara <xliff:g id="APP_NAME">%1$s</xliff:g> mengendalikan data anda dalam dasar privasi pembangun"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Untuk mengurus kebenaran Android lain yang boleh diakses oleh apl ini, pergi ke Tetapan, kemudian ketik Apl"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Baca dasar privasi"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Diakses dalam tempoh 24 jam yang lalu"</string>
@@ -472,7 +471,7 @@
     <string name="last_export_time_hours_ago" msgid="3174986640795245343">"{count,plural, =1{Eksport terakhir: 1 jam yang lalu}other{Eksport terakhir: # jam yang lalu}}"</string>
     <string name="no_last_export_message" msgid="8138900854579872667">"Eksport terakhir: tiada"</string>
     <string name="last_export_file_location" msgid="4069435932524304633">"<xliff:g id="EXPORT_APP_NAME">%1$s</xliff:g> • <xliff:g id="EXPORT_FILE_NAME">%2$s</xliff:g>"</string>
-    <string name="scheduled_export" msgid="8737660963687364370">"Eksport dijadualkan"</string>
+    <string name="scheduled_export" msgid="8737660963687364370">"Eksport berjadual"</string>
     <string name="import_data" msgid="404502315533233094">"Import data"</string>
     <string name="import_data_description" msgid="4040178599441724296">"Pulihkan data daripada fail yang dieksport sebelum ini"</string>
     <string name="import_error_banner_title" msgid="1480977889067027790">"Tidak dapat memulihkan data"</string>
@@ -482,7 +481,7 @@
     <string name="import_version_mismatch_error_banner_summary" msgid="6165550114170534795">"Kemas kinikan sistem anda supaya Health Connect dapat memulihkan data anda, kemudian cuba lagi."</string>
     <string name="import_other_error_banner_button" msgid="8006947649520909176">"Cuba lagi"</string>
     <string name="import_other_error_banner_summary" msgid="4378957063605649197">"Terdapat masalah dengan proses pemulihan data daripada eksport anda."</string>
-    <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"Ciri eksport membolehkan anda menyimpan data anda agar anda boleh memindahkan data tersebut kepada telefon baharu"</string>
+    <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"Ciri eksport membolehkan anda menyimpan data agar anda boleh memindahkan data tersebut kepada telefon baharu"</string>
     <string name="backup_and_restore_footer_link_text" msgid="9075133737244288876">"Perihal sandaran dan pemulihan"</string>
     <string name="automatic_export_status" msgid="4407131306281440230">"<xliff:g id="EXPORT_ON_OR_OFF">%1$s</xliff:g> • <xliff:g id="EXPORT_FREQUENCY">%2$s</xliff:g>"</string>
     <string name="automatic_export_on" msgid="6972389773963624315">"Hidup"</string>
@@ -496,7 +495,7 @@
     <string name="frequency_daily" msgid="3596412357416125727">"Harian"</string>
     <string name="frequency_weekly" msgid="7302587625019573393">"Mingguan"</string>
     <string name="frequency_monthly" msgid="729674398053825938">"Bulanan"</string>
-    <string name="export_destination_title" msgid="8352929396306002479">"Pilih lokasi penyimpanan eksport"</string>
+    <string name="export_destination_title" msgid="8352929396306002479">"Pilih lokasi penyimpanan eksport berjadual"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"Sila pilih apl storan awan untuk mengeksport data anda"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"Health Connect"</string>
     <string name="export_default_file_name_with_sequence" msgid="2380551038319211752">"Health Connect (<xliff:g id="EXPORT_SEQUENTIAL_NUMBER">%1$s</xliff:g>)"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Sambung semula penyepaduan Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Untuk menyimpan data anda, selesaikan penyepaduan ini dalam masa <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Kemaskinian apl diperlukan"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"<xliff:g id="APP_NAME">%1$s</xliff:g> perlu dikemaskinikan untuk terus disegerakkan dengan Health Connect"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Sesetengah apl perlu dikemaskinikan untuk terus disegerakkan dengan Health Connect"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> perlu dikemaskinikan untuk terus disegerakkan dengan Health Connect. Kemaskinian mungkin tidak tersedia untuk semua apl."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Sesetengah apl perlu dikemaskinikan untuk terus disegerakkan dengan Health Connect. Kemaskinian mungkin tidak tersedia untuk semua apl."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Semak kemaskinian"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Ketahui lebih lanjut"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Penyepaduan Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Lihat apl yang serasi"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Cari lebih banyak apl untuk disegerakkan dengan <xliff:g id="APP_NAME">%s</xliff:g> melalui Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Lihat pada gedung apl"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Tetapkan kunci skrin"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Untuk keselamatan tambahan bagi data kesihatan anda, tetapkan PIN, corak atau kata laluan untuk peranti ini"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Tetapkan kunci skrin"</string>
     <string name="select_all" msgid="837499881590001166">"Pilih semua"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Apl yang disambungkan tidak akan dapat membaca data ini lagi daripada Health Connect"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Ditandai"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Benarkan <xliff:g id="APP_NAME">%1$s</xliff:g> mengakses data kecergasan dan kesejahteraan?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> meminta akses kepada <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nPilih untuk membenarkan semua akses atau mengawal akses secara berasingan."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Benarkan <xliff:g id="APP_NAME">%1$s</xliff:g> mengakses <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Kecergasan dan kesejahteraan"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"sepanjang masa"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"semasa digunakan"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Sepanjang masa"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Semasa digunakan"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> boleh mengakses semua data kecergasan dan kesejahteraan anda <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Dibenarkan untuk mengakses"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Dibenarkan untuk membaca"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Kebenaran ini memberi <xliff:g id="APP_NAME">%1$s</xliff:g> akses kepada data daripada penderia peranti anda."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="NUMBER_0">%1$d</xliff:g> daripada <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> apl dibenarkan"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Tiada apl yang membuat permintaan"</string>
+    <string name="allowed" msgid="4158456017482263737">"Dibenarkan"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Tidak dibenarkan"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Apl dengan kebenaran ini boleh mengakses data <xliff:g id="DATA_TYPE">%s</xliff:g> daripada penderia peranti anda."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Alih keluar akses <xliff:g id="DATA_TYPE">%s</xliff:g> untuk semua apl pada jam tangan anda?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Tanda semak"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Tanda silang"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
