--- a/apk/res/values-my/strings.xml
+++ b/apk/res/values-my/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"မနေ့က"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"ဖတ်ရန်- <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"ရေးရန်- <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">"၊ "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"ခွင့်ပြုချက်များကို စီမံရန်"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"အချိန်- <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"လှုပ်ရှားမှု"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"အရေပြားအပူချိန်"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"အရေပြားအပူချိန် ဖတ်ရန်"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"အရေပြားအပူချိန် ရေးရန်"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"ကျန်းမာရေး မှတ်တမ်းအားလုံး"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"ကျန်းမာရေး မှတ်တမ်းအားလုံး"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"ကျန်းမာရေး မှတ်တမ်းအားလုံးကို ရေးရန်"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"အခြေအနေများ"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"အခြေအနေများ"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"အခြေအနေများကို ဖတ်ရန်"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"ကာကွယ်ဆေးများ"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"ကာကွယ်ဆေးများ"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"ကာကွယ်ဆေးများကို ဖတ်ရန်"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"ဓာတ်ခွဲခန်းရလဒ်များ"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"ဓာတ်ခွဲခန်းရလဒ်များ"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"ဓာတ်ခွဲခန်းရလဒ်များကို ဖတ်ရန်"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"သုံးခွင့်ပြုပါက ဤအက်ပ်သည် ဓာတ်မတည့်မှု၊ ဓာတ်ခွဲခန်းအဖြေ၊ ကာကွယ်ဆေးများ စသည်တို့ကဲ့သို့ ဒေတာကို ဖတ်နိုင်၊ ရေးနိုင်သည်\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"သုံးခွင့်ပြုပါက ဤအက်ပ်သည် ဓာတ်မတည့်မှု၊ ဓာတ်ခွဲခန်းအဖြေ၊ ကာကွယ်ဆေးများ စသည်တို့ကဲ့သို့ ဒေတာကို ဖတ်နိုင်သည်\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"ကျန်းမာရေး မှတ်တမ်းများအကြောင်း"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"မျှဝေရန်ဒေတာ"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"ခွင့်ပြုပါက <xliff:g id="APP_NAME">%1$s</xliff:g> သည် သင့်ကျန်းမာရေး မှတ်တမ်းများကို Health Connect နှင့် မျှဝေနိုင်သည်။"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"သင့်အက်ပ်နှင့် ရင်းမြစ်အမျိုးမျိုးမှ ကျန်းမာရေးမှတ်တမ်းများကို တစ်နေရာတည်းတွင် သိမ်းရန် စင့်ခ်လုပ်ပါ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ခွင့်ပြုချက်အားလုံး ဖယ်ရှားမလား။"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"ဤအက်ပ်များက သုံးခွင့်မရှိတော့သော်လည်း Health Connect တွင် ဒေတာများ သိမ်းထားသေးသည်"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> နောက်ပိုင်း ထည့်သောဒေတာကို ဖတ်နိုင်သည်"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"ဤအက်ပ်ဝင်သုံးနိုင်သော အခြား Android ခွင့်ပြုချက်များ စီမံရန် ‘ဆက်တင်များ &gt; အက်ပ်များ’ သို့ သွားနိုင်သည်"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"<xliff:g id="APP_NAME">%1$s</xliff:g> နှင့် မျှဝေသောဒေတာကို ၎င်း၏ကိုယ်ရေးအချက်အလက်လုံခြုံမှုဆိုင်ရာ မူဝါဒဖြင့် ကာကွယ်ထားသည်"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"<xliff:g id="APP_NAME">%1$s</xliff:g> က သင့်ဒေတာများအား ဆောင်ရွက်ပုံကို ဆော့ဖ်ဝဲရေးသူ၏ ကိုယ်ရေးအချက်အလက်လုံခြုံမှုဆိုင်ရာ မူဝါဒတွင် လေ့လာနိုင်သည်"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"ဤအက်ပ်ဝင်သုံးနိုင်သော အခြား Android ခွင့်ပြုချက်များ စီမံရန် ဆက်တင်များသို့သွားပြီး အက်ပ်များကို တို့နိုင်သည်"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"ကိုယ်ရေးအချက်အလက်လုံခြုံမှုဆိုင်ရာ မူဝါဒကို ဖတ်ရန်"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"ပြီးခဲ့သော ၂၄ နာရီအတွင်း သုံးထားသည်"</string>
@@ -531,7 +530,7 @@
     <string name="export_cancel_button" msgid="1952360582645412410">"မလုပ်တော့"</string>
     <string name="import_cancel_button" msgid="2191598074422096715">"မလုပ်တော့"</string>
     <string name="import_next_button" msgid="5706322508691854289">"ရှေ့သို့"</string>
-    <string name="import_source_location_title" msgid="4444467438013749461">"၎င်းမှ ထည့်သွင်းခြင်း-"</string>
+    <string name="import_source_location_title" msgid="4444467438013749461">"ရယူမည့် နေရာ"</string>
     <string name="import_invalid_storage" msgid="341798262315495399">"သင့်ဒေတာ ထည့်သွင်းရန်အတွက် cloud သိုလှောင်ခန်း အက်ပ်ကို ရွေးပါ"</string>
     <string name="export_import_tap_to_choose_account" msgid="5016799636886709580">"အကောင့်ရွေးရန် တို့ပါ"</string>
     <string name="export_import_choose_account_title" msgid="1047021319012735232">"အကောင့်ရွေးခြင်း"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect ပေါင်းစည်းမှု ဆက်လုပ်ပါ"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"သင့်ဒေတာများ ဆက်ထားရန် ၎င်းကို <xliff:g id="TIME_NEEDED">%1$s</xliff:g> အတွင်း အပြီးသတ်ပါ"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"အက်ပ်အပ်ဒိတ် လိုသည်"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Health Connect နှင့် စင့်ခ်ဆက်လုပ်ရန် <xliff:g id="APP_NAME">%1$s</xliff:g> ကို အပ်ဒိတ်လုပ်ရပါမည်"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connect နှင့် စင့်ခ်ဆက်လုပ်ရန် အက်ပ်အချို့ကို အပ်ဒိတ်လုပ်ရပါမည်"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect နှင့် စင့်ခ်ဆက်လုပ်ရန် <xliff:g id="APP_NAME">%1$s</xliff:g> ကို အပ်ဒိတ်လုပ်ရပါမည်။ အပ်ဒိတ်များကို အက်ပ်အားလုံးအတွက် မရနိုင်ပါ။"</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect နှင့် စင့်ခ်ဆက်လုပ်ရန် အက်ပ်အချို့ကို အပ်ဒိတ်လုပ်ရပါမည်။ အပ်ဒိတ်များကို အက်ပ်အားလုံးအတွက် မရနိုင်ပါ။"</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"အပ်ဒိတ်များ ရှာရန်"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"ပိုမိုလေ့လာရန်"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect ပေါင်းစည်းမှု"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"တွဲသုံးနိုင်သော အက်ပ်များကို ကြည့်ခြင်း"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect မှတစ်ဆင့် <xliff:g id="APP_NAME">%s</xliff:g> ဖြင့် စင့်ခ်လုပ်ရန် နောက်ထပ်အက်ပ်များ ရှာပါ"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"အက်ပ်စတိုးတွင် ကြည့်ရန်"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"ဖန်သားပြင်လော့ခ် သတ်မှတ်ခြင်း"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"သင့်ကျန်းမာရေးဒေတာ ပိုမိုလုံခြုံစေရန် ဤစက်အတွက် ပင်နံပါတ်၊ ပုံဖော်ခြင်း (သို့) စကားဝှက် သတ်မှတ်ပါ"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"ဖန်သားပြင်လော့ခ် သတ်မှတ်ရန်"</string>
     <string name="select_all" msgid="837499881590001166">"အားလုံး ရွေးရန်"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"ချိတ်ဆက်ထားသည့် အက်ပ်များက Health Connect ထံမှ ဤဒေတာကို ဖတ်နိုင်တော့မည်မဟုတ်ပါ"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"အမှန်ခြစ်ထားသည်"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g> အား ကျန်းမာကြံ့ခိုင်ရေးဒေတာကို သုံးခွင့်ပြုမလား။"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် <xliff:g id="DATA_TYPES">%2$s</xliff:g> သုံးခွင့် တောင်းဆိုနေသည်။\n\nအားလုံးခွင့်ပြုရန် (သို့) တစ်ခုချင်းစီ ထိန်းချုပ်ရန် ရွေးပါ။"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> ကို <xliff:g id="DATA_TYPE">%2$s</xliff:g> သုံးခွင့် ပြုမလား။"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"ကျန်းမာကြံ့ခိုင်ရေး"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"အချိန်တိုင်း"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"သုံးနေစဉ်"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"အချိန်တိုင်း"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"သုံးနေစဉ်"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် သင်၏ကျန်းမာကြံ့ခိုင်ရေးဒေတာအားလုံးကို <xliff:g id="ALLOW_MODE">%2$s</xliff:g> သုံးနိုင်သည်"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"သုံးခွင့်ပြုထားသည်များ"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"ဖတ်ခွင့်ပေးထားသည်များ"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"ဤခွင့်ပြုချက်များသည် <xliff:g id="APP_NAME">%1$s</xliff:g> အား သင်၏စက်အာရုံခံကိရိယာများမှ ဒေတာကို သုံးခွင့်ပေးသည်။"</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"အက်ပ် <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> ခုအနက် <xliff:g id="NUMBER_0">%1$d</xliff:g> ခု ခွင့်ပြုထားသည်"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"အက်ပ်တောင်းဆိုခြင်း မရှိပါ"</string>
+    <string name="allowed" msgid="4158456017482263737">"ခွင့်ပြုထားသည်"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"ခွင့်ပြုမထားပါ"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"ဤခွင့်ပြုချက်ရှိသော အက်ပ်များသည် သင်၏စက်အာရုံခံကိရိယာများမှ <xliff:g id="DATA_TYPE">%s</xliff:g> ဒေတာကို သုံးနိုင်သည်။"</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"သင့်လက်ပတ်နာရီရှိ အက်ပ်အားလုံးအတွက် <xliff:g id="DATA_TYPE">%s</xliff:g> သုံးခွင့် ဖယ်ရှားမလား။"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"အမှန်ခြစ်"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"ကြက်ခြေခတ် အမှတ်အသား"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
