--- a/apk/res/values-ne/strings.xml
+++ b/apk/res/values-ne/strings.xml
@@ -39,7 +39,7 @@
     <string name="browse_data_title" msgid="5232691805953326097">"डेटा ब्राउज गर्नुहोस्"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"जानकारी र कुन कुन एपले उक्त जानकारी एक्सेस गर्न सक्छन् भन्ने कुरा हेर्नुहोस्"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"स्वतः मेटाउने सुविधा, डेटाको स्रोत, ब्याकअप र रिस्टोर गर्ने सुविधा"</string>
-    <string name="backup_title" msgid="211503191266235085">"ब्याकअप गर्नुहोस्"</string>
+    <string name="backup_title" msgid="211503191266235085">"ब्याकअप"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"जानकारीका स्रोत तथा प्राथमिकता"</string>
     <string name="set_units_title" msgid="2657822539603758029">"एकाइ सेट गर्नुहोस्"</string>
     <string name="manage_data_preferences_category_title" msgid="1183110821140344472">"प्राथमिकताहरू"</string>
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"हिजो"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"रिड एक्सेस: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"राइट एक्सेस: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"अनुमतिहरू व्यवस्थापन गर्नुहोस्"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"समय: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"क्रियाकलाप"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"छालाको तापक्रम"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"छालाको तापक्रमसम्बन्धी जानकारी रिड गर्ने"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"छालाको तापक्रमसम्बन्धी जानकारी राइट गर्ने"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"सबै स्वास्थ्य अभिलेखहरू"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"सबै स्वास्थ्य अभिलेखहरू"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"सबै स्वास्थ्य अभिलेखहरू राइट गर्नुहोस्"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"रोगहरू"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"रोगहरू"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"रोगसम्बन्धी जानकारी रिड गर्ने"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"खोपहरू"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"खोपहरू"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"खोपसम्बन्धी जानकारी रिड गर्नुहोस्"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"ल्याब परीक्षणका नतिजाहरू"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"ल्याब परीक्षणका नतिजाहरू"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"ल्याब परीक्षणका नतिजाहरू रिड गर्नुहोस्"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"तपाईंले यो एपलाई एक्सेस दिनुभयो भने यसले एलर्जी, ल्याब परीक्षणका नतिजा र खोपलगायतका जानकारी रिड र राइट गर्न सक्छ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"तपाईंले यो एपलाई एक्सेस दिनुभयो भने यसले एलर्जी, ल्याब परीक्षणका नतिजा र खोपलगायतका जानकारी रिड गर्न सक्छ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"स्वास्थ्य अभिलेखका बारेमा जानकारी"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"तपाईंले सेयर गर्न चाहेका जानकारी"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"तपाईंले <xliff:g id="APP_NAME">%1$s</xliff:g> लाई यो अनुमति दिनुभयो भने यसले Health Connect सँग तपाईंका स्वास्थ्य अभिलेखहरू सेयर गर्न सक्छ।"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"आफ्ना सबै स्वास्थ्य अभिलेखहरू एउटै ठाउँमा राख्न विभिन्न एप र स्रोतका स्वास्थ्य अभिलेखहरू सिंक गर्नुहोस्"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"एपलाई दिइएका सबै अनुमति हटाउने हो?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"यी एपहरूले अबदेखि Health Connect प्रयोग गर्न पाउँदैनन् तर Health Connect मा भने अझै पनि यी एपहरूसम्बन्धी डेटा भण्डारण गरिएको छ"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> ले <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> पछि हालिएका जानकारी रिड गर्न सक्छ"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"तपाईं यो एपले प्रयोग गर्न सक्ने Android का अन्य अनुमति व्यवस्थापन गर्न चाहनुहुन्छ भने \"सेटिङ &gt; एपहरू\" मा जानुहोस्"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"तपाईंले <xliff:g id="APP_NAME">%1$s</xliff:g> सँग सेयर गर्नुभएको डेटा उक्त एपको गोपनीयता नीतिबमोजिम प्रयोग गरिन्छ"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"तपाईं विकासकर्ताको गोपनीयता नीतिमा गई <xliff:g id="APP_NAME">%1$s</xliff:g> ले तपाईंको जानकारी कसरी व्यवस्थापन गर्छ भन्ने बारेमा जान्न सक्नुहुन्छ"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"तपाईं यो एपले प्रयोग गर्न सक्ने Android का अन्य अनुमति व्यवस्थापन गर्न चाहनुहुन्छ भने सेटिङमा गई \"एपहरू\" मा ट्याप गर्नुहोस्"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"गोपनीयता नीति पढ्नुहोस्"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"पछिल्लो २४ घण्टामा प्रयोग गरिएको"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect इन्ट्रिग्रेट गर्ने प्रक्रिया सुचारु गर्नुहोस्"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"आफ्नो जानकारी सुरक्षित राख्नका निम्ति यो प्रक्रिया <xliff:g id="TIME_NEEDED">%1$s</xliff:g> भित्र पूरा गर्नुहोस्"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"एप अपडेट गर्नु आवश्यक छ"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Health Connect सँग सिंक गरिरहन <xliff:g id="APP_NAME">%1$s</xliff:g> अपडेट गर्नु पर्ने हुन्छ"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connect सँग सिंक गरिरहन केही एपहरू अपडेट गर्नु पर्ने हुन्छ"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect सँग सिंक गरिरहन <xliff:g id="APP_NAME">%1$s</xliff:g> अपडेट गर्नु पर्ने हुन्छ। सबै एपहरूका हकमा अपडेट उपलब्ध नहुन सक्छ।"</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect सँग सिंक गरिरहन केही एपहरू अपडेट गर्नु पर्ने हुन्छ। सबै एपहरूका हकमा अपडेट उपलब्ध नहुन सक्छ।"</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"अपडेटहरू उपलब्ध छन् कि छैनन् भन्ने कुरा जाँच्नुहोस्"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"थप जान्नुहोस्"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect इन्टिग्रेट गर्ने प्रक्रिया"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"कम्प्याटिबल एपहरू हेर्नुहोस्"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect मार्फत <xliff:g id="APP_NAME">%s</xliff:g> सँग सिंक गर्नका निम्ति थप एपहरू भेट्टाउनुहोस्"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"एप स्टोरमा हेर्नुहोस्"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"स्क्रिन लक सेट गर्नुहोस्"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"आफ्नो स्वास्थ्यसम्बन्धी जानकारी अझ सुरक्षित राख्न यो डिभाइसमा PIN, प्याटर्न वा पासवर्ड सेट गर्नुहोस्"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"स्क्रिन लक सेट गर्नुहोस्"</string>
     <string name="select_all" msgid="837499881590001166">"सबै चयन गर्नुहोस्"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"कनेक्ट गरिएका एपहरूले अबदेखि Health Connect मा भएको यो जानकारी रिड गर्न सक्ने छैनन्"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"चिन्ह लगाइएको"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g> लाई व्यायाम तथा तन्दुरुस्तीसम्बन्धी डेटा एक्सेस गर्न दिने हो?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ले <xliff:g id="DATA_TYPES">%2$s</xliff:g> एक्सेस गर्ने अनुमति मागिरहेको छ।\n\nसबै डेटा एक्सेस गर्ने अनुमति दिनुहोस् वा तिनीहरूलाई एक एक गरी नियन्त्रण गर्नुहोस्।"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> लाई <xliff:g id="DATA_TYPE">%2$s</xliff:g> प्रयोग गर्ने अनुमति दिने हो?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"तन्दुरुस्ती तथा आरोग्य"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"सधैँ"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"प्रयोग गर्दै गर्दा"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"सधैँ"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"प्रयोग गर्दै गर्दा"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> तन्दुरुस्ती तथा आरोग्यसम्बन्धी तपाईंका सबै जानकारी <xliff:g id="ALLOW_MODE">%2$s</xliff:g> एक्सेस गर्न सक्छ"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"एक्सेस गर्ने अनुमति दिइएको छ"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"रिड गर्ने अनुमति दिइएको छ"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"तपाईंले यी अनुमति दिनुभयो भने <xliff:g id="APP_NAME">%1$s</xliff:g> तपाईंको डिभाइसका सेन्सरहरूबाट लिइएको जानकारी एक्सेस गर्न सक्छ।"</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="OTHER_NUMBER">%2$d</xliff:g> वटामध्ये <xliff:g id="NUMBER_0">%1$d</xliff:g> वटा एपलाई अनुमति दिइएको छ"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"कुनै पनि एपले अनुमति मागिरहेको छैन"</string>
+    <string name="allowed" msgid="4158456017482263737">"अनुमति दिइएको छ"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"अनुमति दिइएको छैन"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"यो अनुमति पाएका एपहरू तपाईंको डिभाइसका सेन्सरहरूबाट लिइएको <xliff:g id="DATA_TYPE">%s</xliff:g> सँग सम्बन्धित जानकारी एक्सेस गर्न सक्छन्।"</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"आफ्नो स्मार्ट वाचमा भएका सबै एपहरूका हकमा <xliff:g id="DATA_TYPE">%s</xliff:g> को एक्सेस हटाउने हो?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"जाँच चिन्ह"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"क्रस चिन्ह"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
