--- a/apk/res/values-or/strings.xml
+++ b/apk/res/values-or/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"ଗତକାଲି"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"ପଢ଼ନ୍ତୁ: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"ଲେଖନ୍ତୁ: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"ଅନୁମତିଗୁଡ଼ିକୁ ପରିଚାଳନା କରନ୍ତୁ"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"ସମୟ: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"କାର୍ଯ୍ୟକଳାପ"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"ସ୍କିନ ତାପମାତ୍ରା"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"ସ୍କିନ ତାପମାତ୍ରା ପଢ଼ନ୍ତୁ"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"ସ୍କିନ ତାପମାତ୍ରା ଲେଖନ୍ତୁ"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"ସମସ୍ତ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"ସମସ୍ତ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"ସମସ୍ତ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ ଲେଖନ୍ତୁ"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"ଅବସ୍ଥା"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"ଅବସ୍ଥା"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"ଅବସ୍ଥା ପଢ଼ନ୍ତୁ"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"ଟୀକା"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"ଟୀକା"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"ଟୀକା ସମ୍ବନ୍ଧିତ ଡାଟା ପଢ଼ନ୍ତୁ"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"ଲେବ ଫଳାଫଳ"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"ଲେବ ଫଳାଫଳ"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"ଲେବ ଫଳାଫଳ ଡାଟା ପଢ଼ନ୍ତୁ"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"ଯଦି ଆପଣ ଆକ୍ସେସ ଦିଅନ୍ତି, ତେବେ ଆଲର୍ଜି, ଲେବ ଫଳାଫଳ, ଟୀକା ଏବଂ ଆହୁରି ଅନେକ କିଛି ପରି ଡାଟାକୁ ଆପ ପଢ଼ି ଲେଖିପାରିବ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"ଯଦି ଆପଣ ଆକ୍ସେସ ଦିଅନ୍ତି, ତେବେ ଆଲର୍ଜି, ଲେବ ଫଳାଫଳ, ଟୀକା ଏବଂ ଆହୁରି ଅନେକ କିଛି ପରି ଡାଟାକୁ ଆପ ପଢ଼ିପାରିବ \n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ ବିଷୟରେ"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"ସେୟାର କରିବା ପାଇଁ ଡାଟା"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"ଯଦି ଆପଣ ଅନୁମତି ଦିଅନ୍ତି, ତେବେ <xliff:g id="APP_NAME">%1$s</xliff:g> ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡକୁ Health Connect ସହ ସେୟାର କରିପାରେ।"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"ଆପଣଙ୍କର ବିଭିନ୍ନ ଆପ୍ସ ଏବଂ ସୋର୍ସରୁ ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡଗୁଡ଼ିକୁ ଗୋଟିଏ ସ୍ଥାନରେ ରଖିବା ପାଇଁ ସିଙ୍କ କରନ୍ତୁ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ସବୁ ଅନୁମତିକୁ କାଢ଼ି ଦେବେ?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"ଏହି ଆପ୍ସର ଆଉ ଆକ୍ସେସ ନାହିଁ, କିନ୍ତୁ ଏବେ ବି ଷ୍ଟୋର କରାଯାଇଥିବା ଡାଟା Health Connectରେ ଅଛି"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> ପରେ ଯୋଗ କରାଯାଇଥିବା ଡାଟାକୁ ପଢ଼ିପାରିବ"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"ଏହି ଆପ ଆକ୍ସେସ କରିପାରୁଥିବା ଅନ୍ୟ Android ଅନୁମତିଗୁଡ଼ିକୁ ପରିଚାଳନା କରିବା ପାଇଁ, ସେଟିଂସ &gt; ଆପ୍ସକୁ ଯାଆନ୍ତୁ"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"ଆପଣ <xliff:g id="APP_NAME">%1$s</xliff:g> ସହ ସେୟାର କରୁଥିବା ଡାଟା ଏହାର ଗୋପନୀୟତା ନୀତି ଅଧିନସ୍ଥ ଅଟେ"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"<xliff:g id="APP_NAME">%1$s</xliff:g> ଆପଣଙ୍କ ଡାଟାକୁ କିପରି ପରିଚାଳନା କରେ ତାହା ଆପଣ ଡେଭେଲପରଙ୍କ ଗୋପନୀୟତା ନୀତିରେ ଜାଣିପାରିବେ"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"ଏହି ଆପ ଆକ୍ସେସ କରିପାରୁଥିବା ଅନ୍ୟ Android ଅନୁମତିଗୁଡ଼ିକୁ ପରିଚାଳନା କରିବା ପାଇଁ, ସେଟିଂସକୁ ଯାଆନ୍ତୁ, ତା\'ପରେ ଆପ୍ସରେ ଟାପ କରନ୍ତୁ"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"ଗୋପନୀୟତା ନୀତି ପଢ଼ନ୍ତୁ"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"ଗତ 24 ଘଣ୍ଟାରେ ଆକ୍ସେସ କରାଯାଇଛି"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connectର ଇଣ୍ଟିଗ୍ରେସନ ପୁଣି ଆରମ୍ଭ କରନ୍ତୁ"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"ଆପଣଙ୍କ ଡାଟା ରଖିବା ପାଇଁ, ଏହାକୁ <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ମଧ୍ୟରେ ସମ୍ପୂର୍ଣ୍ଣ କରନ୍ତୁ"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"ଆପ ଅପଡେଟ ଆବଶ୍ୟକ"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Health Connect ସହ ସିଙ୍କ କରିବା ଜାରି ରଖିବା ପାଇଁ <xliff:g id="APP_NAME">%1$s</xliff:g>କୁ ଅପଡେଟ କରାଯିବା ଆବଶ୍ୟକ"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connect ସହ ସିଙ୍କ କରିବା ଜାରି ରଖିବାକୁ କିଛି ଆପ୍ସକୁ ଅପଡେଟ କରାଯିବା ଆବଶ୍ୟକ"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect ସହ ସିଙ୍କ କରିବା ଜାରି ରଖିବା ପାଇଁ <xliff:g id="APP_NAME">%1$s</xliff:g>କୁ ଅପଡେଟ କରାଯିବା ଆବଶ୍ୟକ। ସମସ୍ତ ଆପ ପାଇଁ ଅପଡେଟଗୁଡ଼ିକ ଉପଲବ୍ଧ ହୋଇନପାରେ।"</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect ସହ ସିଙ୍କ କରିବା ଜାରି ରଖିବା ପାଇଁ କିଛି ଆପକୁ ଅପଡେଟ କରାଯିବା ଆବଶ୍ୟକ। ସମସ୍ତ ଆପ ପାଇଁ ଅପଡେଟଗୁଡ଼ିକ ଉପଲବ୍ଧ ହୋଇନପାରେ।"</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"ଅପଡେଟଗୁଡ଼ିକ ପାଇଁ ଯାଞ୍ଚ କରନ୍ତୁ"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"ଅଧିକ ଜାଣନ୍ତୁ"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connectର ଇଣ୍ଟିଗ୍ରେସନ"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"କମ୍ବାଟିବଲ ଆପ୍ସ ଦେଖନ୍ତୁ"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect ଜରିଆରେ <xliff:g id="APP_NAME">%s</xliff:g> ସହ ସିଙ୍କ କରିବାକୁ ଅଧିକ ଆପ୍ସ ପାଆନ୍ତୁ"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"ଆପ ଷ୍ଟୋରରେ ଦେଖନ୍ତୁ"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"ଏକ ସ୍କ୍ରିନ ଲକ ସେଟ କରନ୍ତୁ"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ଡାଟାର ଅତିରିକ୍ତ ସୁରକ୍ଷା ନିମନ୍ତେ ଏହି ଡିଭାଇସ ପାଇଁ ଏକ PIN, ପାର୍ଟନ କିମ୍ୱା ପାସୱାର୍ଡ ସେଟ କରନ୍ତୁ"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"ସ୍କ୍ରିନ ଲକ ସେଟ କରନ୍ତୁ"</string>
     <string name="select_all" msgid="837499881590001166">"ସବୁ ଚୟନ କରନ୍ତୁ"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"କନେକ୍ଟ ହୋଇଥିବା ଆପ୍ସ Health Connectରୁ ଏହି ଡାଟାକୁ ପଢ଼ିବା ପାଇଁ ଆଉ ସକ୍ଷମ ହେବ ନାହିଁ"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"ଚେକ କରାଯାଇଛି"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"ଫିଟନେସ ଓ ସୁସ୍ଥତା ଡାଟାକୁ ଆକ୍ସେସ କରିବା ପାଇଁ <xliff:g id="APP_NAME">%1$s</xliff:g>କୁ ଅନୁମତି ଦେବେ?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g>କୁ ଆକ୍ସେସ କରିବା ପାଇଁ ଅନୁରୋଧ କରୁଛି।\n\nସବୁ ଅନୁମତି ଦେବା ପାଇଁ ବାଛନ୍ତୁ କିମ୍ବା ସେଗୁଡ଼ିକୁ ପୃଥକ ଭାବେ ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ।"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="DATA_TYPE">%2$s</xliff:g>କୁ ଆକ୍ସେସ କରିବା ପାଇଁ <xliff:g id="APP_NAME">%1$s</xliff:g>କୁ ଅନୁମତି ଦେବେ?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"ଫିଟନେସ ଏବଂ ସୁସ୍ଥତା"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"ସର୍ବଦା"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ବ୍ୟବହାର ସମୟରେ"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"ସର୍ବଦା"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ବ୍ୟବହାର ସମୟରେ"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="ALLOW_MODE">%2$s</xliff:g> ଆପଣଙ୍କର ସମସ୍ତ ଫିଟନେସ ଏବଂ ସୁସ୍ଥତା ଡାଟାକୁ ଆକ୍ସେସ କରିପାରେ"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"ଆକ୍ସେସ କରିବାକୁ ଅନୁମତି ଦିଆଯାଇଛି"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"ପଢ଼ିବାକୁ ଅନୁମତି ଦିଆଯାଇଛି"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"ଏହି ଅନୁମତିଗୁଡ଼ିକ <xliff:g id="APP_NAME">%1$s</xliff:g>କୁ ଆପଣଙ୍କ ଡିଭାଇସ ସେନ୍ସରଗୁଡ଼ିକରୁ ଡାଟାକୁ ଆକ୍ସେସ କରିବାକୁ ଦେଇଥାଏ।"</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="OTHER_NUMBER">%2$d</xliff:g> ଆପ୍ସରୁ <xliff:g id="NUMBER_0">%1$d</xliff:g>କୁ ଅନୁମତି ଦିଆଯାଇଛି"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"କୌଣସି ଆପ୍ସ ଅନୁରୋଧ କରୁନାହିଁ"</string>
+    <string name="allowed" msgid="4158456017482263737">"ଅନୁମତି ଦିଆଯାଇଛି"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"ଅନୁମତି ଦିଆଯାଇନାହିଁ"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"ଏହି ଅନୁମତି ଥିବା ଆପ୍ସ ଆପଣଙ୍କ ଡିଭାଇସ ସେନ୍ସରରୁ <xliff:g id="DATA_TYPE">%s</xliff:g> ଡାଟାକୁ ଆକ୍ସେସ କରିପାରେ।"</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ଆପଣଙ୍କ ୱାଚରେ ଥିବା ସମସ୍ତ ଆପ ପାଇଁ <xliff:g id="DATA_TYPE">%s</xliff:g>ର ଆକ୍ସେସକୁ କାଢ଼ି ଦେବେ?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"ଚେକ ମାର୍କ"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"କ୍ରସ ମାର୍କ"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
