--- a/apk/res/values-pl/strings.xml
+++ b/apk/res/values-pl/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Wczoraj"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Odczyt: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Zapis: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Zarządzaj uprawnieniami"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Czas: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Aktywność"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura skóry"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Odczytuj temperaturę skóry"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Zapisuj temperaturę ciała"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Wszystkie dane o stanie zdrowia"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"wszystkie dane o stanie zdrowia"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Zapisuj wszystkie dane o stanie zdrowia"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Schorzenia"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"schorzenia"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Odczytuj informacje o schorzeniach"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Szczepienia"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"szczepienia"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Odczytywanie informacji o szczepieniach"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Wyniki badań laboratoryjnych"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"wyniki badań laboratoryjnych"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Odczytywanie wyników badań laboratoryjnych"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Jeśli przyznasz dostęp, aplikacja będzie mogła odczytywać i zapisywać dane, takie jak informacje o alergiach i szczepieniach oraz wyniki badań laboratoryjnych i nie tylko\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Jeśli przyznasz dostęp, aplikacja będzie mogła odczytywać dane, takie jak informacje o alergiach i szczepieniach oraz wyniki badań laboratoryjnych i nie tylko\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Informacje o danych o stanie zdrowia"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Dane do udostępnienia"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Jeśli na to zezwolisz, aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> będzie mogła udostępniać Twoje dane o stanie zdrowia w Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Zsynchronizuj dane o stanie zdrowia z różnych aplikacji i źródeł, aby przechowywać je w jednym miejscu"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Usunąć wszystkie uprawnienia?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Te aplikacje nie mają już dostępu, ale ich dane wciąż są przechowywane w Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"Aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> może odczytywać dane dodane po <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>."</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Aby zarządzać innymi uprawnieniami urządzeń z Androidem, do których ta aplikacja ma dostęp, otwórz Ustawienia &gt; Aplikacje."</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Dane, które udostępniasz aplikacji <xliff:g id="APP_NAME">%1$s</xliff:g>, podlegają jej polityce prywatności."</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Informacje o tym, jak aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> zarządza Twoimi danymi, znajdziesz w polityce prywatności określonej przez dewelopera"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Aby zarządzać innymi uprawnieniami systemu Android, do których ta aplikacja ma dostęp, otwórz Ustawienia, a potem Aplikacje"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Przeczytaj politykę prywatności"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Dostęp w ciągu ostatnich 24 godzin"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Wznów integrację Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Aby dane zostały zachowane, cały proces nie może trwać dłużej niż <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Wymagana jest aktualizacja aplikacji"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> musi zostać zaktualizowana, aby kontynuować synchronizację z Health Connect"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Niektóre aplikacje muszą zostać zaktualizowane, aby kontynuować synchronizację z Health Connect"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> musi zostać zaktualizowana, aby kontynuować synchronizację z Health Connect. Aktualizacje mogą być niedostępne w przypadku niektórych aplikacji."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Niektóre aplikacje muszą zostać zaktualizowane, aby kontynuować synchronizację z Health Connect. Aktualizacje mogą być niedostępne w przypadku niektórych aplikacji."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Sprawdź dostępność aktualizacji"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Więcej informacji"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Integracja Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Zobacz zgodne aplikacje"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Znajdź więcej aplikacji do synchronizacji z aplikacją <xliff:g id="APP_NAME">%s</xliff:g> przez Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Zobacz w sklepie z aplikacjami"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Ustaw blokadę ekranu"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Aby zwiększyć bezpieczeństwo swoich danych dotyczących zdrowia, ustaw na urządzeniu kod PIN, wzór lub hasło"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Ustaw blokadę ekranu"</string>
     <string name="select_all" msgid="837499881590001166">"Zaznacz wszystko"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Połączone aplikacje nie będą już mogły odczytywać tych danych z Health Connect"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Zaznaczono"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Zezwolić aplikacji <xliff:g id="APP_NAME">%1$s</xliff:g> na dostęp do danych dotyczących aktywności fizycznej i samopoczucia?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"Aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> prosi o dostęp do: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nMożesz zezwolić na wszystkie te działania lub kontrolować je pojedynczo."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Zezwolić aplikacji <xliff:g id="APP_NAME">%1$s</xliff:g> na dostęp do tych danych: <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitness i dbanie o zdrowie"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"przez cały czas"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"podczas używania"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Przez cały czas"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Podczas używania"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"Aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> może mieć dostęp do wszystkich Twoich danych dotyczących aktywności fizycznej i samopoczucia <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Dozwolony dostęp"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Dozwolony odczyt"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Dzięki tym uprawnieniom <xliff:g id="APP_NAME">%1$s</xliff:g> ma dostęp do danych z czujników Twojego urządzenia."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"Przyznano dostęp <xliff:g id="NUMBER_0">%1$d</xliff:g> z <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> aplikacji"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Brak aplikacji proszących o dostęp"</string>
+    <string name="allowed" msgid="4158456017482263737">"Dozwolone"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Niedozwolone"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Aplikacje z tymi uprawnieniami mają dostęp do danych (<xliff:g id="DATA_TYPE">%s</xliff:g>) z czujników na urządzeniu."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Usunąć dostęp do danych (<xliff:g id="DATA_TYPE">%s</xliff:g>) dla wszystkich aplikacji na zegarku?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Znacznik wyboru"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Krzyżyk"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
