--- a/apk/res/values-pt-rPT/strings.xml
+++ b/apk/res/values-pt-rPT/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Ontem"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Leitura: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Escrita: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Gerir autorizações"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Hora: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Atividade"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura da pele"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Ler temperatura da pele"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Escrever temperatura da pele"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Todos os registos de saúde"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"todos os registos de saúde"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Escrever todos os registos de saúde"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Condições"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"condições"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Leia as condições"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Vacinas"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"vacinas"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Ler vacinas"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Resultados laboratoriais"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"resultados laboratoriais"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Ler resultados laboratoriais"</string>
@@ -377,7 +375,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Se der acesso, a app pode ler e escrever dados, como alergias, resultados de laboratório, vacinas e muito mais\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Se der acesso, a app pode ler dados, como alergias, resultados de laboratório, vacinas e muito mais\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Acerca dos registos de saúde"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Dados a partilhar"</string>
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Os dados a partilhar incluem"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Se permitir, a app <xliff:g id="APP_NAME">%1$s</xliff:g> pode partilhar os seus registos de saúde com a Saúde Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sincronize os seus registos de saúde de diferentes apps e origens para os manter num único lugar"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Remover todas as autorizações?"</string>
@@ -436,7 +434,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Estas apps já não têm acesso, mas ainda têm dados armazenados na Saúde Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"A app <xliff:g id="APP_NAME">%1$s</xliff:g> pode ler os dados adicionados após <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Para gerir outras autorizações do Android às quais esta app pode aceder, aceda a Definições &gt; Apps"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Os dados que partilha com a app <xliff:g id="APP_NAME">%1$s</xliff:g> são abrangidos pela respetiva política de privacidade"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Pode saber como a app <xliff:g id="APP_NAME">%1$s</xliff:g> trata os seus dados na política de privacidade do programador"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Para gerir outras autorizações do Android às quais esta app pode aceder, aceda a Definições e, em seguida, toque em Apps"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Leia a política de privacidade"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Acesso nas últimas 24 horas"</string>
@@ -496,7 +494,7 @@
     <string name="frequency_daily" msgid="3596412357416125727">"Diariamente"</string>
     <string name="frequency_weekly" msgid="7302587625019573393">"Semanalmente"</string>
     <string name="frequency_monthly" msgid="729674398053825938">"Mensalmente"</string>
-    <string name="export_destination_title" msgid="8352929396306002479">"Escolha onde guardar a export. agendada"</string>
+    <string name="export_destination_title" msgid="8352929396306002479">"Escolha onde guardar a exportação"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"Escolha uma app de armazenamento na nuvem para exportar os seus dados"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"Saúde Connect"</string>
     <string name="export_default_file_name_with_sequence" msgid="2380551038319211752">"Saúde Connect (<xliff:g id="EXPORT_SEQUENTIAL_NUMBER">%1$s</xliff:g>)"</string>
@@ -531,7 +529,7 @@
     <string name="export_cancel_button" msgid="1952360582645412410">"Cancelar"</string>
     <string name="import_cancel_button" msgid="2191598074422096715">"Cancelar"</string>
     <string name="import_next_button" msgid="5706322508691854289">"Seguinte"</string>
-    <string name="import_source_location_title" msgid="4444467438013749461">"Importe de"</string>
+    <string name="import_source_location_title" msgid="4444467438013749461">"Origem da importação"</string>
     <string name="import_invalid_storage" msgid="341798262315495399">"Escolha uma app de armazenamento na nuvem para importar os seus dados"</string>
     <string name="export_import_tap_to_choose_account" msgid="5016799636886709580">"Tocar para selecionar uma conta"</string>
     <string name="export_import_choose_account_title" msgid="1047021319012735232">"Escolha uma conta"</string>
@@ -1075,8 +1073,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Retome a integração da Saúde Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Para manter os seus dados, conclua esta ação em <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Atualização da app necessária"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"É necessário atualizar a app <xliff:g id="APP_NAME">%1$s</xliff:g> para continuar a sincronização com a Saúde Connect"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"É necessário atualizar algumas apps para continuar a sincronização com a Saúde Connect"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"É necessário atualizar a app <xliff:g id="APP_NAME">%1$s</xliff:g> para continuar a sincronização com a Saúde Connect. As atualizações podem não estar disponíveis para todas as apps."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"É necessário atualizar algumas apps para continuar a sincronização com a Saúde Connect. As atualizações podem não estar disponíveis para todas as apps."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Procurar atualizações"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Saber mais"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Integração da Saúde Connect"</string>
@@ -1135,12 +1133,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Veja apps compatíveis"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Encontre mais apps para sincronizar com a app <xliff:g id="APP_NAME">%s</xliff:g> através da Saúde Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Ver na loja de apps"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Defina um bloqueio de ecrã"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Para uma segurança adicional para os seus dados de saúde, defina um PIN, um padrão ou uma palavra-passe para este dispositivo"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Definir bloqueio de ecrã"</string>
     <string name="select_all" msgid="837499881590001166">"Selecionar tudo"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"As apps associadas deixam de poder ler estes dados da Saúde Connect"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Selecionada"</string>
@@ -1183,38 +1178,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Permitir que a app <xliff:g id="APP_NAME">%1$s</xliff:g> aceda a dados de fitness e bem-estar?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"A app <xliff:g id="APP_NAME">%1$s</xliff:g> está a pedir acesso a <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nEscolha permitir tudo ou controlar cada autorização individualmente."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Permitir que a app <xliff:g id="APP_NAME">%1$s</xliff:g> aceda a <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitness e bem-estar"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"sempre"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"durante a utilização"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Sempre"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Durante a utilização"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"A app <xliff:g id="APP_NAME">%1$s</xliff:g> pode aceder a todos os seus dados de fitness e bem-estar <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Com autorização para aceder"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Com autorização para ler"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Estas autorizações dão à app <xliff:g id="APP_NAME">%1$s</xliff:g> acesso aos dados dos sensores do seu dispositivo."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="NUMBER_0">%1$d</xliff:g> de <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> apps autorizadas"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Nenhuma app a pedir"</string>
+    <string name="allowed" msgid="4158456017482263737">"Autorizada"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Não autorizada"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"As apps com esta autorização podem aceder aos dados de <xliff:g id="DATA_TYPE">%s</xliff:g> dos sensores do seu dispositivo."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Remover o acesso aos dados de <xliff:g id="DATA_TYPE">%s</xliff:g> para todas as apps no relógio?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Marca de verificação"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Marca de cruz"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
