--- a/apk/res/values-si/strings.xml
+++ b/apk/res/values-si/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"ඊයේ"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"කියවන්න: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"ලියන්න: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"අවසර කළමනාකරණය කරන්න"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"වේලාව: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"ක්‍රියාකාරකම"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"සමේ උෂ්ණත්වය"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"සමේ උෂ්ණත්වය කියවන්න"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"සමේ උෂ්ණත්වය ලියන්න"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"සියලු ම සෞඛ්‍ය වාර්තා"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"සියලු ම සෞඛ්‍ය වාර්තා"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"සියලු ම සෞඛ්‍ය වාර්තා ලියන්න"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"කොන්දේසි"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"කොන්දේසි"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"කොන්දේසි කියවන්න"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"එන්නත්"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"එන්නත්"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"එන්නත් කියවන්න"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"රසායනාගාර ප්‍රතිඵල"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"රසායනාගාර ප්‍රතිඵල"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"රසායනාගාර ප්‍රතිඵල කියවන්න"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"ඔබ ප්‍රවේශය ලබා දෙන්නේ නම්, යෙදුමට අසාත්මිකතා, පරීක්ෂණාගාර ප්‍රතිඵල, එන්නත් සහ තවත් බොහෝ දත්ත කියවීමට සහ ලිවීමට හැක\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"ඔබ ප්‍රවේශය ලබා දෙන්නේ නම්, යෙදුමට අසාත්මිකතා, පරීක්ෂණාගාර ප්‍රතිඵල, එන්නත් සහ තවත් බොහෝ දත්ත කියවීමට හැක\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"සෞඛ්‍ය වාර්තා ගැන"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"බෙදා ගැනීමට දත්ත"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"ඔබ ඉඩ දෙන්නේ නම්, <xliff:g id="APP_NAME">%1$s</xliff:g> හට ඔබේ සෞඛ්‍ය වාර්තා Health Connect සමග බෙදා ගත හැක."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"ඔබේ සෞඛ්‍ය වාර්තා එක තැනක තබා ගැනීමට ඔබේ විවිධ යෙදුම් සහ මූලාශ්‍රවලින් සමමුහුර්ත කරන්න"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"සියලු අවසර ඉවත් කරන්න ද?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"මෙම යෙදුම්වලට තවදුරටත් ප්‍රවේශය නැති නමුත්, තවමත් Health Connect තුළ දත්ත ගබඩා කර ඇත"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g>ට <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>ට පසුව එක් කළ දත්ත කියවිය හැක"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"මෙම යෙදුමට ප්‍රවේශ විය හැකි වෙනත් Android අවසර කළමනාකරණය කිරීමට, සැකසීම් &gt; යෙදුම් වෙත යන්න"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"ඔබ <xliff:g id="APP_NAME">%1$s</xliff:g> සමග බෙදා ගන්නා දත්ත ඒවායේ පෞද්ගලිකත්ව ප්‍රතිපත්තියෙන් ආවරණය වේ"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"ඔබට <xliff:g id="APP_NAME">%1$s</xliff:g> ඔබගේ දත්ත හසුරුවන ආකාරය ගැන සංවර්ධකගේ පෞද්ගලිකත්ව ප්‍රතිපත්තිය තුළ දැන ගත හැකිය"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"මෙම යෙදුමට ප්‍රවේශ විය හැකි වෙනත් Android අවසර කළමනාකරණය කිරීමට, සැකසීම්, පසුව යෙදුම් වෙත යන්න"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"පෞද්ගලිකත්ව ප්‍රතිපත්තිය කියවන්න"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"පසුගිය පැය 24 තුළ ප්‍රවේශ විය"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect ඒකාබද්ධ කිරීම නැවත ආරම්භ කරන්න"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"ඔබේ දත්ත තබා ගැනීම සඳහා, මෙය <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ඇතුළත සම්පූර්ණ කරන්න"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"යෙදුම් යාවත්කාලීනය අවශ්‍යයි"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"<xliff:g id="APP_NAME">%1$s</xliff:g> Health Connect සමඟ සමමුහුර්ත කිරීම දිගටම කරගෙන යාමට යාවත්කාලීන කිරීමට අවශ්‍ය වේ"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connect සමග සමමුහුර්ත කිරීම දිගටම කරගෙන යාමට සමහර යෙදුම් යාවත්කාලීන කිරීමට අවශ්‍ය වේ"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> Health Connect සමඟ සමමුහුර්ත කිරීම දිගටම කරගෙන යාමට යාවත්කාලීන කිරීමට අවශ්‍ය වේ. සියලු ම යෙදුම් සඳහා යාවත්කාලීන නොතිබිය හැක."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect සමග සමමුහුර්ත කිරීම දිගටම කරගෙන යාමට සමහර යෙදුම් යාවත්කාලීන කිරීමට අවශ්‍ය වේ. සියලු ම යෙදුම් සඳහා යාවත්කාලීන නොතිබිය හැක."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"යාවත්කාලීන තිබේද පරීක්‍ෂා කරන්න"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"තව දැන ගන්න"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect ඒකාබද්ධ කිරීම"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"ගැළපෙන යෙදුම් බලන්න"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect හරහා <xliff:g id="APP_NAME">%s</xliff:g> සමමුහුර්ත කිරීමට තවත් යෙදුම් සොයා ගන්න"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"App Store හි බලන්න"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"තිර අගුලක් සකසන්න"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"ඔබේ සෞඛ්‍ය දත්ත සඳහා අමතර ආරක්ෂාවක් ලබා ගැනීමට, මෙම උපාංගය සඳහා PIN, රටාව හෝ මුරපදය සකසන්න"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"තිර අගුල සකසන්න"</string>
     <string name="select_all" msgid="837499881590001166">"සියල්ල තෝරන්න"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"සම්බන්ධිත යෙදුම්වලට තවදුරටත් Health Connect වෙතින් මෙම දත්ත කියවීමට නොහැකි වනු ඇත"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"සලකුණු කරන ලදි"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට යෝග්‍යතා සහ සුවතා දත්ත වෙත ප්‍රවේශ වීමට ඉඩ දෙන්න ද?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g> වෙත ප්‍රවේශය.\n\nසියල්ලට ඉඩ දීමට හෝ ඒවා තනි තනිව පාලනය කිරීමට තෝරා ගන්න."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට <xliff:g id="DATA_TYPE">%2$s</xliff:g> වෙත ප්‍රවේශයට ඉඩ දෙන්න ද?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"යෝග්‍යතාවය සහ සුවතාවය"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"සෑම විට ම"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"භාවිත කරන අතරේ"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"සෑම විට ම"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"භාවිත කරන අතරේ"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට ඔබේ සියලුම යෝග්‍යතා සහ සුවතා දත්ත වෙත <xliff:g id="ALLOW_MODE">%2$s</xliff:g> ප්‍රවේශ විය හැක"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"ප්‍රවේශ වීමට අවසර ඇත"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"කියවීමට ඉඩ දී ඇත"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"මෙම අවසර ඔබේ උපාංග සංවේදක වලින් දත්ත වෙත <xliff:g id="APP_NAME">%1$s</xliff:g> ප්‍රවේශය ලබා දෙයි."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"යෙදුම් <xliff:g id="NUMBER_0">%1$d</xliff:g>කින් <xliff:g id="OTHER_NUMBER">%2$d</xliff:g>කට ඉඩ දෙන ලදි"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"යෙදුම් කිසිවක් ඉල්ලා නැත"</string>
+    <string name="allowed" msgid="4158456017482263737">"ඉඩ දී ඇත"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"ඉඩ නොදෙයි"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"මෙම අවසරය ඇති යෙදුම් වලට ඔබේ උපාංග සංවේදකවලින් <xliff:g id="DATA_TYPE">%s</xliff:g> දත්ත වෙත ප්‍රවේශ විය හැක."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ඔබේ ඔරලෝසුවේ ඇති සියලුම යෙදුම් සඳහා <xliff:g id="DATA_TYPE">%s</xliff:g> ප්‍රවේශය ඉවත් කරන්න ද?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"හරි ලකුණ"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"හරස් ලකුණ"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
