--- a/apk/res/values-sr/strings.xml
+++ b/apk/res/values-sr/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Јуче"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Прочитано је: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Уписано је: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Управљај дозволама"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Време: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Активности"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"температура коже"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Читај податке о температури коже"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Уписуј податке о температури коже"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Сва здравствена евиденција"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"сва здравствена евиденција"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Уписивање све здравствене евиденције"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Здравствено стање"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"здравствено стање"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Читање података о здравственом стању"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Вакцине"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"вакцине"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Читање података о вакцинама"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Лабораторијски резултати"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"лабораторијски резултати"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Читање података о лабораторијским резултатима"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Ако дате приступ, апликација може да чита и уписује податке, на пример, алергије, лабораторијске резултате, вакцине и друго\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Ако дате приступ, апликација може да чита податке, на пример, алергије, лабораторијске резултате, вакцине и друго\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"О здравственој евиденцији"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Подаци за дељење"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Ако дозволите, <xliff:g id="APP_NAME">%1$s</xliff:g> може да дели вашу здравствену евиденцију са Повезивањем здравља."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Синхронизујте здравствену евиденцију из различитих апликација и извора да бисте је држали на једном месту"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Желите да уклоните све дозволе?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Ове апликације више немају приступ, али и даље имају сачуване податке у Повезивању здравља"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> може да чита податке додате после <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Да бисте управљали другим дозволама за Android којима ова апликација може да приступа, идите у Подешавања &gt; Апликације"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Податке које делите са апликацијом <xliff:g id="APP_NAME">%1$s</xliff:g> регулише њена политика приватности"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"У политици приватности програмера можете да сазнате како <xliff:g id="APP_NAME">%1$s</xliff:g> управља вашим подацима"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Да бисте управљали другим дозволама за Android којима ова апликација може да приступа, идите у Подешавања, па додирните Апликације"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Прочитајте политику приватности"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Приступљено у последња 24 сата"</string>
@@ -496,7 +495,7 @@
     <string name="frequency_daily" msgid="3596412357416125727">"Једном дневно"</string>
     <string name="frequency_weekly" msgid="7302587625019573393">"Једном недељно"</string>
     <string name="frequency_monthly" msgid="729674398053825938">"Једном месечно"</string>
-    <string name="export_destination_title" msgid="8352929396306002479">"Одаберите место чувања заказаног извоза"</string>
+    <string name="export_destination_title" msgid="8352929396306002479">"Одаберите где ће се сачувати заказани извоз"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"Изаберите апликацију за простор у клауду да бисте извозили податке"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"Повезивање здравља"</string>
     <string name="export_default_file_name_with_sequence" msgid="2380551038319211752">"Повезивање здравља (<xliff:g id="EXPORT_SEQUENTIAL_NUMBER">%1$s</xliff:g>)"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Наставите интеграцију Повезивања здравља"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Да бисте задржали податке, довршите ово у року од <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Треба да ажурирате апликацију"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"<xliff:g id="APP_NAME">%1$s</xliff:g> треба да се ажурира како бисте наставили синхронизацију са Повезивањем здравља"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Треба да ажурирате неке апликације како бисте наставили синхронизацију са Повезивањем здравља"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> треба да се ажурира како бисте наставили синхронизацију са Повезивањем здравља. Ажурирања можда нису доступна за све апликације."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Треба да ажурирате неке апликације како бисте наставили синхронизацију са Повезивањем здравља. Ажурирања можда нису доступна за све апликације."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Проверите да ли има ажурирања"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Сазнајте више"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Интеграција Повезивања здравља"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Погледајте компатибилне апликације"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Пронађите још апликација које ћете синхронизовати са апликацијом <xliff:g id="APP_NAME">%s</xliff:g> преко Повезивања здравља"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Прикажи у продавници апликација"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Подесите откључавање екрана"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Подесите PIN, шаблон или лозинку за овај уређај да бисте побољшали безбедност података о здрављу"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Подеси откључавање екрана"</string>
     <string name="select_all" msgid="837499881590001166">"Изабери све"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Повезане апликације више неће моћи да читају ове податке из Повезивања здравља"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Означено"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Желите да дозволите да <xliff:g id="APP_NAME">%1$s</xliff:g> приступа подацима о фитнесу и велнесу?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> тражи приступ за: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nИзаберите да ли желите да дозволите све или да их контролишете појединачно."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Дозвољавате да <xliff:g id="APP_NAME">%1$s</xliff:g> приступа уређају <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Фитнес и велнес"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"све време"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"док се користи"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Све време"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Док се користи"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> може да приступа свим подацима о фитнесу и велнесу у режиму <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Дозвољен приступ"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Дозвољено читање"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Ове дозволе дају апликацији <xliff:g id="APP_NAME">%1$s</xliff:g> приступ подацима са сензора уређаја."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"Апликације са дозволом: <xliff:g id="NUMBER_0">%1$d</xliff:g> од <xliff:g id="OTHER_NUMBER">%2$d</xliff:g>"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Ниједна апликација не захтева дозволу"</string>
+    <string name="allowed" msgid="4158456017482263737">"Дозвољено"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Није дозвољено"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Апликације са овом дозволом могу да приступају подацима (<xliff:g id="DATA_TYPE">%s</xliff:g>) са сензора уређаја."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Желите да уклоните приступ подацима (<xliff:g id="DATA_TYPE">%s</xliff:g>) свим апликацијама на сату?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Знак потврде"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Знак x"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
