--- a/apk/res/values-th/strings.xml
+++ b/apk/res/values-th/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"เมื่อวาน"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"อ่าน: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"เขียน: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"จัดการสิทธิ์"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"เวลา: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"กิจกรรม"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"อุณหภูมิผิวหนัง"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"อ่านข้อมูลอุณหภูมิผิวหนัง"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"เขียนข้อมูลอุณหภูมิผิวหนัง"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"บันทึกข้อมูลสุขภาพทั้งหมด"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"บันทึกข้อมูลสุขภาพทั้งหมด"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"เขียนบันทึกข้อมูลสุขภาพทั้งหมด"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"ภาวะทางการแพทย์"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"ภาวะทางการแพทย์"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"อ่านข้อมูลเกี่ยวกับภาวะทางการแพทย์"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"วัคซีน"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"วัคซีน"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"อ่านข้อมูลวัคซีน"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"ผลตรวจ"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"ผลตรวจ"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"อ่านผลตรวจ"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"หากคุณให้สิทธิ์เข้าถึง แอปนี้จะสามารถอ่านและเขียนข้อมูล เช่น อาการแพ้ ผลตรวจ วัคซีน และอื่นๆ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"หากคุณให้สิทธิ์เข้าถึง แอปนี้จะสามารถอ่านข้อมูล เช่น อาการแพ้ ผลตรวจ วัคซีน และอื่นๆ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"เกี่ยวกับบันทึกข้อมูลสุขภาพ"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"ข้อมูลที่จะแชร์"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"หากอนุญาต <xliff:g id="APP_NAME">%1$s</xliff:g> จะแชร์บันทึกข้อมูลสุขภาพของคุณกับ Health Connect ได้"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"ซิงค์บันทึกข้อมูลสุขภาพจากแอปและแหล่งที่มาต่างๆ เพื่อเก็บไว้ในที่เดียว"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"นำสิทธิ์ทั้งหมดออกใช่ไหม"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"แอปเหล่านี้ไม่มีสิทธิ์เข้าถึงอีกต่อไป แต่จะยังคงมีข้อมูลจัดเก็บอยู่ใน Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> สามารถอ่านข้อมูลที่เพิ่มหลังวันที่ <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"หากต้องการจัดการสิทธิ์อื่นๆ ใน Android ที่แอปนี้เข้าถึงได้ ให้ไปที่การตั้งค่า &gt; แอป"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"ข้อมูลที่แชร์กับ <xliff:g id="APP_NAME">%1$s</xliff:g> จะอยู่ภายใต้นโยบายความเป็นส่วนตัวของแอปดังกล่าว"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"ดูวิธีที่ <xliff:g id="APP_NAME">%1$s</xliff:g> จัดการข้อมูลของคุณได้ในนโยบายความเป็นส่วนตัวของนักพัฒนาแอปดังกล่าว"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"หากต้องการจัดการสิทธิ์ของ Android อื่นๆ ที่แอปนี้เข้าถึงได้ ให้ไปที่การตั้งค่าแล้วแตะที่แอป"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"อ่านนโยบายความเป็นส่วนตัว"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"เข้าถึงในช่วง 24 ชั่วโมงที่ผ่านมา"</string>
@@ -465,14 +464,14 @@
     <string name="export_file_access_error_banner_summary" msgid="1226999878868505503">"เกิดปัญหาเกี่ยวกับการส่งออกของวันที่ <xliff:g id="DATE">%1$s</xliff:g> โปรดตั้งค่าการส่งออกที่กำหนดเวลาใหม่แล้วลองอีกครั้ง"</string>
     <string name="next_export_time" msgid="3138247220014510213">"การส่งออกครั้งถัดไป: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="next_export_text" msgid="6726252793571403846">"การส่งออกครั้งถัดไปจะเริ่มในอีกไม่ช้า"</string>
-    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"การสำรองและคืนค่า"</string>
+    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"การสำรองและกู้คืนข้อมูล"</string>
     <string name="last_export_time" msgid="9205875050823594041">"การส่งออกครั้งล่าสุด: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="last_export_time_now" msgid="31498024135933750">"การส่งออกครั้งล่าสุด: ตอนนี้"</string>
     <string name="last_export_time_minutes_ago" msgid="5279296486877765961">"{count,plural, =1{การส่งออกครั้งล่าสุด: 1 นาทีที่ผ่านมา}other{การส่งออกครั้งล่าสุด: # นาทีที่ผ่านมา}}"</string>
     <string name="last_export_time_hours_ago" msgid="3174986640795245343">"{count,plural, =1{การส่งออกครั้งล่าสุด: 1 ชั่วโมงที่ผ่านมา}other{การส่งออกครั้งล่าสุด: # ชั่วโมงที่ผ่านมา}}"</string>
     <string name="no_last_export_message" msgid="8138900854579872667">"การส่งออกครั้งล่าสุด: ไม่มี"</string>
     <string name="last_export_file_location" msgid="4069435932524304633">"<xliff:g id="EXPORT_APP_NAME">%1$s</xliff:g> • <xliff:g id="EXPORT_FILE_NAME">%2$s</xliff:g>"</string>
-    <string name="scheduled_export" msgid="8737660963687364370">"การส่งออกที่กำหนดเวลาไว้"</string>
+    <string name="scheduled_export" msgid="8737660963687364370">"กำหนดเวลาการส่งออก"</string>
     <string name="import_data" msgid="404502315533233094">"นำเข้าข้อมูล"</string>
     <string name="import_data_description" msgid="4040178599441724296">"กู้คืนข้อมูลจากไฟล์ที่ส่งออกก่อนหน้านี้"</string>
     <string name="import_error_banner_title" msgid="1480977889067027790">"กู้คืนข้อมูลไม่ได้"</string>
@@ -491,7 +490,7 @@
     <string name="next_export_file_location" msgid="2117071837862240540">"<xliff:g id="EXPORT_APP_NAME">%1$s</xliff:g> • <xliff:g id="EXPORT_FILE_NAME">%2$s</xliff:g>"</string>
     <string name="choose_frequency_category" msgid="9094154407387676553">"เปลี่ยนความถี่"</string>
     <string name="scheduled_export_settings_footer_text" msgid="8488483803782086291">"การปิดการส่งออกที่กำหนดเวลาไว้จะไม่ลบข้อมูลที่ส่งออกก่อนหน้านี้จากตำแหน่งที่บันทึกไว้"</string>
-    <string name="choose_frequency" msgid="8119085390857180221">"ตั้งค่าการส่งออกที่กำหนดเวลาไว้"</string>
+    <string name="choose_frequency" msgid="8119085390857180221">"ตั้งค่ากำหนดเวลาการส่งออก"</string>
     <string name="choose_frequency_description" msgid="7698155810053504157">"เลือกความถี่ในการส่งออกข้อมูล"</string>
     <string name="frequency_daily" msgid="3596412357416125727">"ทุกวัน"</string>
     <string name="frequency_weekly" msgid="7302587625019573393">"ทุกสัปดาห์"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"ผสานรวม Health Connect ต่อ"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"โปรดดำเนินการให้เสร็จสมบูรณ์ภายใน <xliff:g id="TIME_NEEDED">%1$s</xliff:g> เพื่อเก็บข้อมูลของคุณไว้"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"ต้องอัปเดตแอป"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"ต้องอัปเดต <xliff:g id="APP_NAME">%1$s</xliff:g> ก่อนจึงจะซิงค์กับ Health Connect ต่อได้"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"บางแอปต้องอัปเดตก่อนจึงจะซิงค์กับ Health Connect ต่อได้"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"ต้องอัปเดต <xliff:g id="APP_NAME">%1$s</xliff:g> ก่อนจึงจะซิงค์กับ Health Connect ต่อได้ การอัปเดตอาจไม่พร้อมใช้งานสำหรับบางแอป"</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"บางแอปต้องอัปเดตก่อนจึงจะซิงค์กับ Health Connect ต่อได้ การอัปเดตอาจไม่พร้อมใช้งานสำหรับบางแอป"</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"ตรวจหาการอัปเดต"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"ดูข้อมูลเพิ่มเติม"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"การผสานรวม Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"ดูแอปที่เข้ากันได้"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"ค้นหาแอปเพิ่มเติมเพื่อซิงค์กับ <xliff:g id="APP_NAME">%s</xliff:g> ผ่าน Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"ดูใน App Store"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"ตั้งค่าการล็อกหน้าจอ"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"ตั้งค่า PIN, รูปแบบ หรือรหัสผ่านสำหรับอุปกรณ์นี้เพื่อเพิ่มความปลอดภัยให้กับข้อมูลสุขภาพ"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"ตั้งค่าการล็อกหน้าจอ"</string>
     <string name="select_all" msgid="837499881590001166">"เลือกทั้งหมด"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"แอปที่เชื่อมต่อจะอ่านข้อมูลนี้จาก Health Connect ไม่ได้อีก"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"เลือกไว้"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"อนุญาตให้ <xliff:g id="APP_NAME">%1$s</xliff:g> เข้าถึงข้อมูลการออกกำลังกายและสุขภาวะไหม"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ขอสิทธิ์เข้าถึง <xliff:g id="DATA_TYPES">%2$s</xliff:g>\n\nเลือกว่าจะอนุญาตทั้งหมดหรือควบคุมทีละรายการ"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"อนุญาตให้ <xliff:g id="APP_NAME">%1$s</xliff:g> เข้าถึง<xliff:g id="DATA_TYPE">%2$s</xliff:g>ไหม"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"การออกกำลังกายและสุขภาวะ"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"ตลอดเวลา"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ขณะใช้งานอยู่"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"ตลอดเวลา"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ขณะใช้งานอยู่"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> สามารถเข้าถึงข้อมูลการออกกำลังกายและสุขภาวะทั้งหมดของคุณได้<xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"อนุญาตให้เข้าถึง"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"อนุญาตให้อ่าน"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"สิทธิ์เหล่านี้จะให้ <xliff:g id="APP_NAME">%1$s</xliff:g> เข้าถึงข้อมูลจากเซ็นเซอร์ของอุปกรณ์ได้"</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"อนุญาตแล้ว <xliff:g id="NUMBER_0">%1$d</xliff:g> จาก <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> แอป"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"ไม่มีแอปที่ขอ"</string>
+    <string name="allowed" msgid="4158456017482263737">"อนุญาต"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"ไม่อนุญาต"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"แอปที่มีสิทธิ์นี้จะเข้าถึงข้อมูล<xliff:g id="DATA_TYPE">%s</xliff:g>จากเซ็นเซอร์ของอุปกรณ์ได้"</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"นําสิทธิ์เข้าถึง<xliff:g id="DATA_TYPE">%s</xliff:g>ออกจากแอปทั้งหมดในนาฬิกาไหม"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"เครื่องหมายถูก"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"เครื่องหมายกากบาท"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
