--- a/apk/res/values-tr/strings.xml
+++ b/apk/res/values-tr/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Dün"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Okuma: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Yazma: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"İzinleri yönetin"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Zaman: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Etkinlik"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"deri sıcaklığı"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Deri sıcaklığını oku"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Deri sıcaklığını yaz"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Tüm sağlık kayıtları"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"tüm sağlık kayıtları"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Tüm sağlık kayıtlarını yaz"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Koşullar"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"koşullar"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Koşulları okuyun"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Aşılar"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"aşılar"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Aşıları oku"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Tahlil sonuçları"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"tahlil sonuçları"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Tahlil sonuçlarını oku"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Erişim izni verirseniz uygulama; alerjiler, tahlil sonuçları, aşılar gibi verileri ve daha fazlasını okuyup yazabilir\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Erişim izni verirseniz uygulama; alerjiler, tahlil sonuçları, aşılar gibi verileri ve daha fazlasını okuyabilir\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Sağlık kayıtları hakkında"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Paylaşılacak veriler"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"İzin verirseniz <xliff:g id="APP_NAME">%1$s</xliff:g>, sağlık kayıtlarınızı Health Connect ile paylaşabilir."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Farklı uygulamalarınızdan ve kaynaklarınızdan sağlık kayıtlarınızı senkronize ederek hepsini tek bir yerde tutun"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Tüm izinler kaldırılsın mı?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Artık erişimi olmayan ancak verileri Health Connect\'te saklanmaya devam eden uygulamalar"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g>, <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> tarihinden sonra eklenen verileri okuyabilir"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Bu uygulamanın erişebileceği diğer Android izinlerini yönetmek için Ayarlar &gt; Uygulamalar bölümüne gidin"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"<xliff:g id="APP_NAME">%1$s</xliff:g> ile paylaştığınız veriler bu uygulamanın gizlilik politikası kapsamındadır"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasının verilerinizi nasıl işlediğini geliştiricinin gizlilik politikasından öğrenebilirsiniz"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Bu uygulamanın erişebileceği diğer Android izinlerini yönetmek için Ayarlar bölümüne gidip Uygulamalar seçeneğine dokunun"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Gizlilik politikasına göz atın"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Son 24 saat içinde erişildi"</string>
@@ -482,7 +481,7 @@
     <string name="import_version_mismatch_error_banner_summary" msgid="6165550114170534795">"Health Connect\'in verilerinizi geri yükleyebilmesi için sisteminizi güncelleyin ve tekrar deneyin."</string>
     <string name="import_other_error_banner_button" msgid="8006947649520909176">"Tekrar dene"</string>
     <string name="import_other_error_banner_summary" msgid="4378957063605649197">"Dışa aktarma işleminizdeki verileri geri yüklerken bir sorun oluştu."</string>
-    <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"Dışa aktarma özelliğiyle verilerinizi kaydederek yeni bir telefona aktarabilirsiniz"</string>
+    <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"Dışa aktarma özelliğiyle verilerinizi kaydederek yeni bir telefona aktarabilirsiniz."</string>
     <string name="backup_and_restore_footer_link_text" msgid="9075133737244288876">"Yedekleme ve geri yükleme hakkında"</string>
     <string name="automatic_export_status" msgid="4407131306281440230">"<xliff:g id="EXPORT_ON_OR_OFF">%1$s</xliff:g> • <xliff:g id="EXPORT_FREQUENCY">%2$s</xliff:g>"</string>
     <string name="automatic_export_on" msgid="6972389773963624315">"Açık"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect entegrasyonunu devam ettirin"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Verilerinizi kaybetmemek için bu işlemi <xliff:g id="TIME_NEEDED">%1$s</xliff:g> içinde tamamlayın"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Uygulamanın güncellenmesi gerekiyor"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasının, Health Connect ile senkronizasyona devam edebilmesi için güncellenmesi gerekiyor"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Bazı uygulamaların, Health Connect ile senkronizasyona devam edebilmesi için güncellenmesi gerekiyor"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasının, Health Connect ile senkronizasyona devam edebilmesi için güncellenmesi gerekiyor. Güncellemeler tüm uygulamalarda kullanılamayabilir."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Bazı uygulamaların, Health Connect ile senkronizasyona devam edebilmesi için güncellenmesi gerekiyor. Güncellemeler tüm uygulamalarda kullanılamayabilir."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Güncellemeleri denetle"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Daha fazla bilgi"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect entegrasyonu"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Uyumlu uygulamaları görüntüleyin"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect aracılığıyla <xliff:g id="APP_NAME">%s</xliff:g> ile senkronize edilebilecek diğer uygulamaları bulun"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Uygulama mağazasında göster"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Ekran kilidi ayarlayın"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Sağlık verilerinizin güvenliğini artırmak için bu cihazda PIN, desen veya şifre belirleyin"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Ekran kilidi ayarla"</string>
     <string name="select_all" msgid="837499881590001166">"Tümünü seç"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Bağlı uygulamalar Health Connect\'teki bu verileri artık okuyamayacak"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"İşaretli"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasının fitness ve sağlıklı yaşam verilerine erişmesine izin verilsin mi?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g>, <xliff:g id="DATA_TYPES">%2$s</xliff:g> verilerine erişmek istiyor.\n\nTümüne izin vermeyi veya ayrı ayrı kontrol etmeyi seçebilirsiniz."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasının <xliff:g id="DATA_TYPE">%2$s</xliff:g> cihazına erişmesine izin verilsin mi?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitness ve sağlıklı yaşam"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"her zaman"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"kullanılırken"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Her zaman"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Kullanılırken"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g>, fitness ve sağlıklı yaşam verilerinizin tümüne erişebilir <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Erişim izni verildi"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Okumasına izin verilir"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Bu izinler <xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasına cihaz sensörlerinizden gelen verilere erişim izni verir."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"<xliff:g id="NUMBER_0">%1$d</xliff:g> / <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> uygulamaya izin veriliyor"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"İstekte bulunan uygulama yok"</string>
+    <string name="allowed" msgid="4158456017482263737">"İzin Verilir"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"İzin verilmiyor"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Bu izne sahip uygulamalar cihaz sensörlerinizden gelen <xliff:g id="DATA_TYPE">%s</xliff:g> verilerine erişebilir."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Kol saatinizdeki tüm uygulamalar için <xliff:g id="DATA_TYPE">%s</xliff:g> erişimi kaldırılsın mı?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Onay işareti"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Çarpı işareti düğmesi"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
