--- a/apk/res/values-uk/strings.xml
+++ b/apk/res/values-uk/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Учора"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Переглянуто такі дані: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Записано такі дані: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Керувати дозволами"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Час: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Активність"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"температура шкіри"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Переглядати температуру шкіри"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Записувати температуру шкіри"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Усі медичні дані"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"усі медичні дані"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Записувати всі медичні дані"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Стан здоров’я"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"стан здоров’я"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Переглядати дані про стан здоров’я"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Вакцини"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"вакцини"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Переглядати дані про вакцини"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Результати аналізів"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"результати аналізів"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Переглядати результати аналізів"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Якщо ви надасте доступ, додаток зможе переглядати й записувати такі дані, як відомості про алергії, результати аналізів, щеплення тощо\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Якщо ви надасте доступ, додаток зможе переглядати такі дані, як відомості про алергії, результати аналізів, щеплення тощо\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Про медичні дані"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Дані, які будуть передаватися"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Якщо ви надасте дозвіл, додаток <xliff:g id="APP_NAME">%1$s</xliff:g> зможе надсилати медичні дані в Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Синхронізуйте медичні дані з різних додатків і джерел, щоб централізовано зберігати їх"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Вилучити всі дозволи?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Ці додатки більше не мають доступу, однак їх дані досі зберігаються в Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> може переглядати дані, додані після <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Щоб керувати іншими дозволами Android для цього додатка, виберіть \"Налаштування\" &gt; \"Додатки\""</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"На дані, які ви надсилаєте в додаток <xliff:g id="APP_NAME">%1$s</xliff:g>, поширюється його політика конфіденційності"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Інформацію про те, як додаток <xliff:g id="APP_NAME">%1$s</xliff:g> обробляє ваші дані, можна знайти в політиці конфіденційності розробника"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Щоб керувати іншими дозволами Android для цього додатка, виберіть \"Налаштування &gt; Додатки\""</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Переглянути політику конфіденційності"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Доступ отримано протягом останніх 24 годин"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Відновіть інтеграцію Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Щоб зберегти свої дані, завершіть перенесення протягом періоду в <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Оновіть додаток"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> потрібно оновити, щоб він і надалі синхронізувався з Health Connect"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Деякі додатки потрібно оновити, щоб вони й надалі синхронізувалися з Health Connect"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> потрібно оновити, щоб він і надалі синхронізувався з Health Connect. Оновлення можуть бути доступні не для всіх додатків."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Деякі додатки потрібно оновити, щоб вони й надалі синхронізувалися з Health Connect. Оновлення можуть бути доступні не для всіх додатків."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Перевірити наявність оновлень"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Докладніше"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Інтеграція Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Перегляньте сумісні додатки"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Знайдіть більше додатків для синхронізації з додатком <xliff:g id="APP_NAME">%s</xliff:g> через Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Переглянути в магазині додатків"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Налаштуйте блокування екрана"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Для додаткового захисту даних про здоров’я установіть PIN-код, ключ або пароль на цьому пристрої"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Налаштувати блокування екрана"</string>
     <string name="select_all" msgid="837499881590001166">"Вибрати всі"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Підключені додатки більше не зможуть переглядати ці дані з Health Connect"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Вибрано"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Дозволити додатку <xliff:g id="APP_NAME">%1$s</xliff:g> доступ до даних про фізичну активність і здоров’я?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> запитує доступ до таких даних: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nНадайте доступ до всіх типів даних або керуйте кожним із них окремо."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Дозволити додатку <xliff:g id="APP_NAME">%1$s</xliff:g> доступ до даних (<xliff:g id="DATA_TYPE">%2$s</xliff:g>)?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Фізична активність і здоров’я"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"завжди"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"під час використання"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Завжди"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Під час використання"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> може <xliff:g id="ALLOW_MODE">%2$s</xliff:g> отримувати доступ до всіх ваших даних про фізичну активність і здоров’я"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Доступ дозволено"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Дозволено доступ із правом читання"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Ці дозволи надають додатку <xliff:g id="APP_NAME">%1$s</xliff:g> доступ до даних від датчиків пристрою."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"Додатки з дозволом: <xliff:g id="NUMBER_0">%1$d</xliff:g> з <xliff:g id="OTHER_NUMBER">%2$d</xliff:g>"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Жоден додаток не запитує дозвіл"</string>
+    <string name="allowed" msgid="4158456017482263737">"Дозволено"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Немає дозволу"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Додатки із цим дозволом можуть отримувати доступ до даних \"<xliff:g id="DATA_TYPE">%s</xliff:g>\" від датчиків пристрою."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Скасувати доступ до даних \"<xliff:g id="DATA_TYPE">%s</xliff:g>\" для всіх додатків на годиннику?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Прапорець"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Хрестик"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
