--- a/apk/res/values-uz/strings.xml
+++ b/apk/res/values-uz/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Kecha"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Oʻqildi: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Yozildi: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Ruxsatlarni boshqarish"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Vaqt: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Faollik"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"tana harorati"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Tana haroratini oʻqish uchun ruxsat"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Tana harorati haqida maʼlumotlarni yozish"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Barcha tibbiy qaydlar"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"barcha tibbiy qaydlar"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Barcha tibbiy qaydlarni yozish"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Shartlar"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"shartlar"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Shartlarni oʻqish"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Vaksinalar"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"vaksinalar"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Vaksinalarni oʻqish"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Laboratoriya natijalari"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"laboratoriya natijalari"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Laboratoriya natijalarini oʻqish"</string>
@@ -377,7 +375,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Agar ruxsat bersangiz, ilova allergiya, laboratoriya natijalari, vaksina va boshqa maʼlumotlarni oʻqishi va yozishi mumkin.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Agar ruxsat bersangiz, ilova allergiya, laboratoriya natijalari, vaksina va boshqa maʼlumotlarni oʻqishi mumkin.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Tibbiy qaydlar haqida"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Ulashiladigan maʼlumot"</string>
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Data to share includes"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Agar ruxsat bersangiz, <xliff:g id="APP_NAME">%1$s</xliff:g> tibbiy qaydlarni Health Connect xizmatiga ulasha oladi."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Bir joyda saqlash uchun turli ilova va manbalardan tibbiy qaydlaringizni sinxronlang"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Barcha ruxsatlar taqiqlansinmi?"</string>
@@ -436,7 +434,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Bu ilovalarda endi ruxsat yoʻq, lekin ularning maʼlumotlari Health Connect ichida saqlanib turadi"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g> sanasidan keyin kiritilgan maʼlumotlarni oʻqishi mumkin"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Bu ilova olishi mumkin boʻlgan boshqa Android ruxsatlarini boshqarish uchun Sozlamalar &gt; Ilovalar rukniga kiring"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Axborotlar <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasiga ularning maxfiylik siyosati asosida ulashiladi"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"<xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi maʼlumotlaringizni qanday qayta ishlashi haqida dastur ishlab chiquvchining maxfiylik siyosati orqali tanishishingz mumkin"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Bu ilova olishi mumkin boʻlgan boshqa Android ruxsatlarini boshqarish uchun Sozlamalar &gt; Ilovalar rukniga kiring"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Maxfiylik siyosatini oʻqish"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Oxirgi 24 soat ichida kirilgan"</string>
@@ -1075,8 +1073,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect integratsiyasini davom ettiring"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Maʼlumotlaringizni saqlab qolish uchun buni <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ichida tamomlashingiz kerak"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Ilovani yangilash zarur"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Health Connect bilan sinxronlashda davom etish uchun <xliff:g id="APP_NAME">%1$s</xliff:g> yangilanishi kerak"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Health Connect bilan sinxronlashda davom etish uchun ayrim ilovalar yangilanishi kerak"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect bilan sinxronlashda davom etish uchun <xliff:g id="APP_NAME">%1$s</xliff:g> yangilanishi kerak. Yangilanishlar barcha ilovalar uchun chiqmasligi mumkin."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect bilan sinxronlashda davom etish uchun ayrim ilovalar yangilanishi kerak. Yangilanishlar barcha ilovalar uchun chiqmasligi mumkin."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Yangilanish mavjudligini tekshiring"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Batafsil"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect integratsiyasi"</string>
@@ -1135,12 +1133,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Mos ilovalar"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect orqali <xliff:g id="APP_NAME">%s</xliff:g> bilan sinxronlash uchun boshqa ilovalar toping"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"App Store orqali koʻrish"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Ekran qulfini sozlash"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Salomatlik maʼlumotlarini yanada yaxshi himoyalash uchun bu qurilmada PIN kod, grafik kalit yoki parolni sozlang."</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Ekran qulfini sozlash"</string>
     <string name="select_all" msgid="837499881590001166">"Hammasini tanlash"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Ulangan ilovalar keyin Health Connect xizmatidan ushbu axborotni ololmaydi"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Belgilandi"</string>
@@ -1183,38 +1178,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g> ilovasiga saqlangan salomatlik va fitnes maʼlumotlaridan foydalanishga ruxsat berilsinmi?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi <xliff:g id="DATA_TYPES">%2$s</xliff:g> uchun ruxsat olmoqchi.\n\nHammasiga ruxsat bering yoki ularni alohida boshqaring."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> ilovasiga <xliff:g id="DATA_TYPE">%2$s</xliff:g> qurilmasidan foydalanishga ruxsat berilsinmi?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitnes va salomatlik"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"doimiy"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ilova ishlatilganda"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Doimiy"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Ilova ishlatilganda"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi salomatlik va fitnes maʼlumotlaridan <xliff:g id="ALLOW_MODE">%2$s</xliff:g> foydalanishi mumkin"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Ruxsat berilgan"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Oʻqishga ruxsat berilgan"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Bunday ruxsatlar <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasiga qurilma sensorlaridagi axborotlardan foydalanish imkonini beradi."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"Ruxsat berilgan ilovalar: <xliff:g id="NUMBER_0">%1$d</xliff:g> / <xliff:g id="OTHER_NUMBER">%2$d</xliff:g>"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Ilovalar ruxsat soʻramagan"</string>
+    <string name="allowed" msgid="4158456017482263737">"Ruxsat berilgan"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Ruxsat berilmagan"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Bunday ruxsatga ega ilovalar qurilma sensorlaridagi quyidagi axborotlardan foydalana oladi: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Soatdagi barcha ilovalarga quyidagi axborotlardan foydalanish ruxsati yopilsinmi: <xliff:g id="DATA_TYPE">%s</xliff:g>?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Tanlov belgisi"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Xoch belgisi"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
