--- a/apk/res/values-vi/strings.xml
+++ b/apk/res/values-vi/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"Hôm qua"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Đọc: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"Ghi: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"Quản lý quyền"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Thời gian: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Hoạt động"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"nhiệt độ trên da"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Đọc dữ liệu về nhiệt độ trên da"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Ghi dữ liệu về nhiệt độ trên da"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Tất cả hồ sơ sức khoẻ"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"tất cả hồ sơ sức khoẻ"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Ghi tất cả hồ sơ sức khoẻ"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Tình trạng bệnh"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"tình trạng bệnh"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Đọc dữ liệu về tình trạng bệnh"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Vắc-xin"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"vắc-xin"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"Đọc dữ liệu về vắc-xin"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Kết quả xét nghiệm"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"kết quả xét nghiệm"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"Đọc kết quả xét nghiệm"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Nếu bạn cấp quyền truy cập, ứng dụng này có thể đọc và ghi dữ liệu như tình trạng dị ứng, kết quả xét nghiệm, vắc-xin và nhiều dữ liệu khác\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Nếu bạn cấp quyền truy cập, ứng dụng này có thể đọc dữ liệu như tình trạng dị ứng, kết quả xét nghiệm, vắc-xin và nhiều dữ liệu khác\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Giới thiệu về hồ sơ sức khoẻ"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Dữ liệu cần chia sẻ"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"Nếu bạn cho phép, <xliff:g id="APP_NAME">%1$s</xliff:g> có thể chia sẻ hồ sơ sức khoẻ của bạn với Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Đồng bộ hoá hồ sơ sức khoẻ từ nhiều nguồn và ứng dụng để lưu trữ hồ sơ ở cùng một nơi"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Xoá tất cả các quyền?"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Các ứng dụng này không còn quyền truy cập nhưng vẫn có dữ liệu được lưu trữ trong Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> có thể đọc dữ liệu được thêm sau ngày <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Để quản lý các quyền khác trên Android mà ứng dụng này có thể truy cập, hãy chuyển đến phần Cài đặt &gt; Ứng dụng"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"Dữ liệu bạn chia sẻ với <xliff:g id="APP_NAME">%1$s</xliff:g> sẽ tuân theo chính sách quyền riêng tư của ứng dụng đó"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"Bạn có thể tìm hiểu cách <xliff:g id="APP_NAME">%1$s</xliff:g> xử lý dữ liệu của bạn trong chính sách bảo mật của nhà phát triển"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Để quản lý các quyền khác trên Android mà ứng dụng này có thể truy cập, hãy chuyển đến phần Cài đặt, sau đó nhấn vào Ứng dụng"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Đọc chính sách quyền riêng tư"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Đã truy cập trong 24 giờ qua"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"Tiếp tục tích hợp Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"Để duy trì dữ liệu của bạn, hãy hoàn tất trong vòng <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Cần cập nhật ứng dụng"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"Bạn cần cập nhật <xliff:g id="APP_NAME">%1$s</xliff:g> để tiếp tục quá trinhf đồng bộ hoá với Health Connect"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"Bạn cần cập nhật một số ứng dụng để tiếp tục quá trình đồng bộ hoá với Health Connect"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Bạn cần cập nhật <xliff:g id="APP_NAME">%1$s</xliff:g> để tiếp tục quá trình đồng bộ hoá với Health Connect. Chỉ một số ứng dụng có bản cập nhật."</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Bạn cần cập nhật một số ứng dụng để tiếp tục quá trình đồng bộ hoá với Health Connect. Chỉ một số ứng dụng có bản cập nhật."</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"Kiểm tra để tìm bản cập nhật"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"Tìm hiểu thêm"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Tích hợp Health Connect"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Xem các ứng dụng tương thích"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Tìm các ứng dụng khác để đồng bộ hoá với <xliff:g id="APP_NAME">%s</xliff:g> qua Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Xem trên cửa hàng ứng dụng"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Đặt một phương thức khoá màn hình"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"Để tăng cường bảo mật cho dữ liệu sức khoẻ của bạn, hãy đặt mã PIN, hình mở khoá hoặc mật khẩu cho thiết bị này"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Đặt phương thức khoá màn hình"</string>
     <string name="select_all" msgid="837499881590001166">"Chọn tất cả"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Các ứng dụng đã kết nối sẽ không thể đọc dữ liệu này từ Health Connect nữa"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Đã đánh dấu"</string>
@@ -1180,41 +1176,32 @@
     <string name="request_permissions_allow_selected" msgid="218527615680495438">"Cho phép quyền đã chọn"</string>
     <string name="request_permissions_while_using_the_app" msgid="5155929974398889727">"Trong khi dùng ứng dụng"</string>
     <string name="request_permissions_deny_all" msgid="4123735770293545320">"Từ chối tất cả"</string>
-    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Cho phép <xliff:g id="APP_NAME">%1$s</xliff:g> truy cập vào dữ liệu về sức khoẻ thể chất và tinh thần?"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Cho phép <xliff:g id="APP_NAME">%1$s</xliff:g> truy cập vào dữ liệu về sức khoẻ và hoạt động thể dục?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> đang yêu cầu quyền truy cập vào <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nChọn cho phép tất cả hoặc kiểm soát từng quyền."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Cho phép <xliff:g id="APP_NAME">%1$s</xliff:g> truy cập vào <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"Sức khoẻ và hoạt động thể dục"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"mọi lúc"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"khi đang sử dụng"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Mọi lúc"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Khi đang sử dụng"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> có thể truy cập vào tất cả dữ liệu về sức khoẻ và hoạt động thể dục của bạn <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"Được phép truy cập"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"Được phép đọc"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"Những quyền này cho phép <xliff:g id="APP_NAME">%1$s</xliff:g> truy cập vào dữ liệu từ các cảm biến trên thiết bị của bạn."</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"Đã cho phép <xliff:g id="NUMBER_0">%1$d</xliff:g>/<xliff:g id="OTHER_NUMBER">%2$d</xliff:g> ứng dụng"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"Không có ứng dụng nào đang yêu cầu"</string>
+    <string name="allowed" msgid="4158456017482263737">"Được phép"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"Không được phép"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Các ứng dụng được cấp quyền này có thể truy cập vào dữ liệu <xliff:g id="DATA_TYPE">%s</xliff:g> từ các cảm biến trên thiết bị của bạn."</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Xoá quyền truy cập vào <xliff:g id="DATA_TYPE">%s</xliff:g> cho mọi ứng dụng trên đồng hồ của bạn?"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"Dấu kiểm"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"Dấu gạch chéo"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
