--- a/apk/res/values-zh-rHK/strings.xml
+++ b/apk/res/values-zh-rHK/strings.xml
@@ -53,8 +53,7 @@
     <string name="yesterday_header" msgid="6652176268273681505">"昨天"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"讀取：<xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"寫入：<xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <!-- no translation found for separator (5521285473288943819) -->
-    <skip />
+    <string name="separator" msgid="5521285473288943819">"、 "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"管理權限"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"時間：<xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"活動"</string>
@@ -313,6 +312,8 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"皮膚溫度"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"讀取皮膚溫度"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"寫入皮膚溫度"</string>
+    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
+    <skip />
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"所有健康記錄"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"所有健康記錄"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"寫入所有健康記錄"</string>
@@ -322,12 +323,9 @@
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"醫療狀況"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"醫療狀況"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"讀取醫療狀況"</string>
-    <!-- no translation found for vaccines_uppercase_label (1101176371071123187) -->
-    <skip />
-    <!-- no translation found for vaccines_lowercase_label (4991324441768127447) -->
-    <skip />
-    <!-- no translation found for vaccines_content_description (7152741514791951684) -->
-    <skip />
+    <string name="vaccines_uppercase_label" msgid="1101176371071123187">"疫苗"</string>
+    <string name="vaccines_lowercase_label" msgid="4991324441768127447">"疫苗"</string>
+    <string name="vaccines_content_description" msgid="7152741514791951684">"讀取疫苗資料"</string>
     <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"檢測結果"</string>
     <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"檢測結果"</string>
     <string name="laboratory_results_content_description" msgid="7888886103734085841">"讀取檢測結果"</string>
@@ -377,7 +375,8 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"如授予權限，應用程式便可讀取和寫入過敏、檢測結果、疫苗接種等資料\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"如授予權限，應用程式便可讀取過敏、檢測結果、疫苗接種等資料\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"關於健康記錄"</string>
-    <string name="medical_request_data_to_share" msgid="2208383833492573960">"要分享的資料"</string>
+    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
+    <skip />
     <string name="medical_request_summary" msgid="7281321524805015510">"如授予權限，「<xliff:g id="APP_NAME">%1$s</xliff:g>」便可與「健康資料同步」分享你的健康記錄。"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"同步其他應用程式和來源的健康記錄，將健康記錄集中一處"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"要移除所有權限嗎？"</string>
@@ -436,7 +435,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"這些應用程式不再擁有存取權，但仍有資料儲存在 Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」可以讀取 <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>後新增的資料"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"如要管理此應用程式可以存取的其他 Android 權限，請前往「設定」&gt; [應用程式]"</string>
-    <string name="manage_permissions_rationale" msgid="9183689798847740274">"你與「<xliff:g id="APP_NAME">%1$s</xliff:g>」分享的資料將受應用程式的私隱權政策約束"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"如要瞭解「<xliff:g id="APP_NAME">%1$s</xliff:g>」如何處理你的資料，請參閱開發人員的私隱權政策"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"如要管理此應用程式可以存取的其他 Android 權限，請前往「設定」，然後輕按 [應用程式]"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"閱讀私隱權政策"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"上次存取時間：過去 24 小時內"</string>
@@ -472,9 +471,9 @@
     <string name="last_export_time_hours_ago" msgid="3174986640795245343">"{count,plural, =1{上一次匯出：1 小時前}other{上一次匯出：# 小時前}}"</string>
     <string name="no_last_export_message" msgid="8138900854579872667">"上次匯出：沒有"</string>
     <string name="last_export_file_location" msgid="4069435932524304633">"<xliff:g id="EXPORT_APP_NAME">%1$s</xliff:g> • <xliff:g id="EXPORT_FILE_NAME">%2$s</xliff:g>"</string>
-    <string name="scheduled_export" msgid="8737660963687364370">"已預定匯出"</string>
+    <string name="scheduled_export" msgid="8737660963687364370">"定期匯出"</string>
     <string name="import_data" msgid="404502315533233094">"匯入資料"</string>
-    <string name="import_data_description" msgid="4040178599441724296">"從先前已匯出的檔案還原資料"</string>
+    <string name="import_data_description" msgid="4040178599441724296">"從先前匯出的檔案還原資料"</string>
     <string name="import_error_banner_title" msgid="1480977889067027790">"無法還原資料"</string>
     <string name="import_wrong_file_error_banner_button" msgid="1518043363477255045">"選擇檔案"</string>
     <string name="import_wrong_file_error_banner_summary" msgid="4857514343099050126">"你選取的檔案不兼容還原功能。請務必選取正確的匯出檔案。"</string>
@@ -491,12 +490,12 @@
     <string name="next_export_file_location" msgid="2117071837862240540">"<xliff:g id="EXPORT_APP_NAME">%1$s</xliff:g> • <xliff:g id="EXPORT_FILE_NAME">%2$s</xliff:g>"</string>
     <string name="choose_frequency_category" msgid="9094154407387676553">"變更頻率"</string>
     <string name="scheduled_export_settings_footer_text" msgid="8488483803782086291">"關閉排定匯出時間的設定後，系統不會從儲存位置刪除先前匯出的資料"</string>
-    <string name="choose_frequency" msgid="8119085390857180221">"排定匯出資料的時間"</string>
+    <string name="choose_frequency" msgid="8119085390857180221">"安排定期匯出資料的時間"</string>
     <string name="choose_frequency_description" msgid="7698155810053504157">"選擇匯出資料的頻率"</string>
     <string name="frequency_daily" msgid="3596412357416125727">"每日"</string>
     <string name="frequency_weekly" msgid="7302587625019573393">"每週"</string>
     <string name="frequency_monthly" msgid="729674398053825938">"每月"</string>
-    <string name="export_destination_title" msgid="8352929396306002479">"選擇排定匯出資料的儲存位置"</string>
+    <string name="export_destination_title" msgid="8352929396306002479">"選擇定期匯出資料的儲存位置"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"請選擇用於匯出資料的雲端儲存空間應用程式"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"健康資料同步"</string>
     <string name="export_default_file_name_with_sequence" msgid="2380551038319211752">"健康資料同步 (<xliff:g id="EXPORT_SEQUENTIAL_NUMBER">%1$s</xliff:g>)"</string>
@@ -538,7 +537,7 @@
     <string name="export_import_choose_account_cancel_button" msgid="7975616126298263479">"取消"</string>
     <string name="export_import_choose_account_done_button" msgid="8450305343787469429">"完成"</string>
     <string name="export_import_no_apps_text" msgid="6403119325024893690">"沒有可用的應用程式。安裝雲端儲存空間應用程式，即可在此查看"</string>
-    <string name="export_import_install_apps_text" msgid="5026922993254770904">"如需更多選項，安裝雲端儲存空間應用程式即可在此查看資料"</string>
+    <string name="export_import_install_apps_text" msgid="5026922993254770904">"如需使用更多選項，請安裝雲端儲存空間應用程式"</string>
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"前往「Play 商店」"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"開始使用 Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"「健康資料同步」能儲存健康和健身資料，方便你同步處理裝置上各個應用程式的資料"</string>
@@ -1075,8 +1074,8 @@
     <string name="resume_migration_notification_title" msgid="8859575633668908327">"恢復整合 Health Connect"</string>
     <string name="resume_migration_notification_content" msgid="46172108837648715">"請在 <xliff:g id="TIME_NEEDED">%1$s</xliff:g>內完成此程序，你的資料才得以保留"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"需要更新應用程式"</string>
-    <string name="app_update_needed_banner_description_single" msgid="1114809360264027362">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」需要更新，才能繼續與「健康資料同步」同步"</string>
-    <string name="app_update_needed_banner_description_multiple" msgid="4660700626698013764">"部分應用程式需要更新後，才能繼續與「健康資料同步」同步"</string>
+    <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」需要更新，才能繼續與「健康資料同步」同步。部分應用程式可能無法更新。"</string>
+    <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"部分應用程式需要更新，才能繼續與「健康資料同步」同步。部分應用程式可能無法更新。"</string>
     <string name="app_update_needed_banner_button" msgid="8223115764065649627">"檢查更新"</string>
     <string name="app_update_needed_banner_learn_more_button" msgid="7269232067819258160">"瞭解詳情"</string>
     <string name="migration_pending_permissions_dialog_title" msgid="6019552841791757048">"Health Connect 整合"</string>
@@ -1135,12 +1134,9 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"查看兼容的應用程式"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"尋找更多可透過「健康資料同步」與「<xliff:g id="APP_NAME">%s</xliff:g>」同步的應用程式"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"在應用程式商店上查看"</string>
-    <!-- no translation found for lock_screen_banner_title (5384381892985739755) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_content (3392527073622152481) -->
-    <skip />
-    <!-- no translation found for lock_screen_banner_button (2537090011380728122) -->
-    <skip />
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"設定螢幕鎖定"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"為提高健康資料安全性，請為此裝置設定 PIN、圖案或密碼"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"設定螢幕鎖定"</string>
     <string name="select_all" msgid="837499881590001166">"全部選取"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"已連結的應用程式將無法在「健康資料同步」中讀取這些資料"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"已勾選"</string>
@@ -1183,38 +1179,29 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取健身與健康資料嗎？"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」要求存取<xliff:g id="DATA_TYPES">%2$s</xliff:g>。\n\n請選擇要一律允許還是個別控制權限。"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取<xliff:g id="DATA_TYPE">%2$s</xliff:g>嗎？"</string>
-    <!-- no translation found for fitness_and_wellness (2002316898861559748) -->
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"健身和身心健康"</string>
+    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"一律允許"</string>
+    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"僅在使用時允許"</string>
+    <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"一律允許"</string>
+    <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"僅在使用時允許"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="ALLOW_MODE">%2$s</xliff:g>「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取你的所有健身和身心健康資料"</string>
+    <string name="allowed_to_access" msgid="4179317387300812335">"允許存取"</string>
+    <string name="allowed_to_read" msgid="2775365229411407406">"允許讀取"</string>
+    <string name="give_permission_prompt" msgid="5788144216023065504">"這些權限允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取裝置感應器的資料。"</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"已允許 <xliff:g id="NUMBER_0">%1$d</xliff:g> 個應用程式 (共 <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> 個)"</string>
+    <string name="no_apps_requesting" msgid="8088684445910698363">"沒有任何應用程式提出要求"</string>
+    <string name="allowed" msgid="4158456017482263737">"允許"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"不允許"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"擁有此權限的應用程式可存取裝置感應器的<xliff:g id="DATA_TYPE">%s</xliff:g>資料。"</string>
+    <string name="remove_one_permission_for_all" msgid="6732728480265044938">"要移除手錶上所有應用程式的<xliff:g id="DATA_TYPE">%s</xliff:g>存取權嗎？"</string>
+    <string name="icon_content_check_mark" msgid="358150681017987426">"剔號"</string>
+    <string name="icon_content_cross_mark" msgid="3007762424358780248">"叉號"</string>
+    <!-- no translation found for current_allow_mode (6716206063077569218) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time (6899702815770193290) -->
+    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
     <skip />
-    <!-- no translation found for view_permissions_while_in_use (2031627107397429473) -->
+    <!-- no translation found for current_access (1457167070428176139) -->
     <skip />
-    <!-- no translation found for view_permissions_all_the_time_cap (7703114160274796464) -->
-    <skip />
-    <!-- no translation found for view_permissions_while_in_use_cap (2567477283044619917) -->
-    <skip />
-    <!-- no translation found for view_permissions_mode (5954826327563393399) -->
-    <skip />
-    <!-- no translation found for allowed_to_access (4179317387300812335) -->
-    <skip />
-    <!-- no translation found for allowed_to_read (2775365229411407406) -->
-    <skip />
-    <!-- no translation found for give_permission_prompt (5788144216023065504) -->
-    <skip />
-    <!-- no translation found for allowed_apps_count (2289260267605628310) -->
-    <skip />
-    <!-- no translation found for no_apps_requesting (8088684445910698363) -->
-    <skip />
-    <!-- no translation found for allowed (4158456017482263737) -->
-    <skip />
-    <!-- no translation found for not_allowed (6092523505093372147) -->
-    <skip />
-    <!-- no translation found for access_sensor_note (7949933977197789634) -->
-    <skip />
-    <!-- no translation found for remove_one_permission_for_all (6732728480265044938) -->
-    <skip />
-    <!-- no translation found for icon_content_check_mark (358150681017987426) -->
-    <skip />
-    <!-- no translation found for icon_content_cross_mark (3007762424358780248) -->
+    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
     <skip />
 </resources>
